--- a/1-1.md
+++ b/1-1.md
@@ -1,12 +1,12 @@
-# Part I 第一部分：财源
+# Part I 第一部分：財源
 
 How to get rich without getting lucky.
-如何在不需走运的情况下致富。
+如何在不需走運的情況下致富。
 
 ## Building Wealth
 
-建造财富
+建造財富
 
-Making money is not a thing you do—it’s a skill you learn.
+Making money is not a thing you do—it』s a skill you learn.
 
-赚钱不是你做的事情，而是你学习的技能。
+賺錢不是你做的事情，而是你學習的技能。
