--- a/1-16.md
+++ b/1-16.md
@@ -1,55 +1,55 @@
 # Shed Your Identity to See Reality
 
-抛开你的身份去看现实
+拋開你的身份去看現實
 
-Our egos are constructed in our formative years—our first two decades. They get constructed by our environment, our parents, society. Then, we spend the rest of our life trying to make our ego happy. We interpret anything new through our ego: “How do I change the external world to make it more how I would like it to be?” [8]
+Our egos are constructed in our formative years—our first two decades. They get constructed by our environment, our parents, society. Then, we spend the rest of our life trying to make our ego happy. We interpret anything new through our ego: 「How do I change the external world to make it more how I would like it to be?」 [8]
 
-我们的自尊是在我们的形成期--我们的头20年里建立起来的。它们是由我们的环境、我们的父母、我们的社会构成的。然后，我们的余生都在努力让我们的自我快乐。我们通过自我诠释任何新事物：“我怎样才能改变外部世界，让它变得更像我想要的样子呢？”[8]
+我們的自尊是在我們的形成期--我們的頭20年裡建立起來的。它們是由我們的環境、我們的父母、我們的社會構成的。然後，我們的餘生都在努力讓我們的自我快樂。我們通過自我詮釋任何新事物：「我怎樣才能改變外部世界，讓它變得更像我想要的樣子呢？」[8]
 
-“Tension is who you think you should be.Relaxation is who you are.”
-“紧张是你认为你应该成为的人，放松是你是谁。”
+「Tension is who you think you should be.Relaxation is who you are.」
+「緊張是你認為你應該成為的人，放鬆是你是誰。」
 
 —Buddhist saying
 -佛教名言
 
-You absolutely need habits to function. You cannot solve every problem in life as if it is the first time it’s thrown at you. We accumulate all these habits. We put them in the bundle of identity, ego, ourselves, and then we get attached to them. “I’m Naval. This is the way I am.”
+You absolutely need habits to function. You cannot solve every problem in life as if it is the first time it』s thrown at you. We accumulate all these habits. We put them in the bundle of identity, ego, ourselves, and then we get attached to them. 「I』m Naval. This is the way I am.」
 
-你绝对需要习惯才能发挥作用。你不可能解决生活中的每一个问题，就好像它是第一次扔给你一样。我们积累了所有这些习惯。我们把他们放在身份、自我和我们自己的捆绑中，然后我们依附于他们。“我是纳瓦尔。我就是这样的人。“
-It’s really important to be able to uncondition yourself, to be able to take your habits apart and say, “Okay, this is a habit I probably picked up when I was a toddler trying to get my parent’s attention. Now I’ve reinforced it and reinforced it, and I call it a part of my identity. Does it still serve me? Does it make me happier? Does it make me healthier? Does it make me accomplish whatever I set out to accomplish?”
-能够改变自己的状态，能够拆散你的习惯并说，“好吧，这可能是我在蹒跚学步时养成的一个习惯，试图引起我父母的注意，这一点真的很重要。现在我把它强化了一遍又一遍，我把它称为我身份的一部分。它还在为我服务吗？这会让我更开心吗？它能让我更健康吗？它能让我实现我想要实现的目标吗？“
-I’m less habitual than most people. I don’t like to structure my day. To the extent I have habits, I try to make them more deliberate rather than accidents of history. [4]
-我比大多数人都不习惯。我不喜欢安排我的一天。就我的习惯而言，我试图让它们更有意识，而不是历史的偶然性。
+你絕對需要習慣才能發揮作用。你不可能解決生活中的每一個問題，就好像它是第一次扔給你一樣。我們積累了所有這些習慣。我們把他們放在身份、自我和我們自己的捆綁中，然後我們依附於他們。「我是納瓦爾。我就是這樣的人。「
+It』s really important to be able to uncondition yourself, to be able to take your habits apart and say, 「Okay, this is a habit I probably picked up when I was a toddler trying to get my parent』s attention. Now I』ve reinforced it and reinforced it, and I call it a part of my identity. Does it still serve me? Does it make me happier? Does it make me healthier? Does it make me accomplish whatever I set out to accomplish?」
+能夠改變自己的狀態，能夠拆散你的習慣並說，「好吧，這可能是我在蹣跚學步時養成的一個習慣，試圖引起我父母的注意，這一點真的很重要。現在我把它強化了一遍又一遍，我把它稱為我身份的一部分。它還在為我服務嗎？這會讓我更開心嗎？它能讓我更健康嗎？它能讓我實現我想要實現的目標嗎？「
+I』m less habitual than most people. I don』t like to structure my day. To the extent I have habits, I try to make them more deliberate rather than accidents of history. [4]
+我比大多數人都不習慣。我不喜歡安排我的一天。就我的習慣而言，我試圖讓它們更有意識，而不是歷史的偶然性。
 
 Any belief you took in a package (ex. Democrat, Catholic, American) is suspect and should be re -evaluated from base principles.
 
-您在包裹中接受的任何信念(例如民主党人、天主教徒、美国人)是可疑的，应该从基本原则出发重新评估。
+您在包裹中接受的任何信念(例如民主黨人、天主教徒、美國人)是可疑的，應該從基本原則出發重新評估。
 
-I try not to have too much I’ve pre -decided . I think creating identities and labels locks you in and keeps you from seeing the truth.
+I try not to have too much I』ve pre -decided . I think creating identities and labels locks you in and keeps you from seeing the truth.
 
-我试着不吃太多我已经预先决定好的。我认为创造身份和标签会把你锁在里面，让你看不到真相。
+我試著不吃太多我已經預先決定好的。我認為創造身份和標籤會把你鎖在裡面，讓你看不到真相。
 
 To be honest, speak without identity.
 
-老实说，说话不带身份。
+老實說，說話不帶身份。
 
-I used to identify as libertarian, but then I would find myself defending positions I hadn’t really thought through because they’re a part of the libertarian canon. If all your beliefs line up into neat little bundles, you should be highly suspicious.
+I used to identify as libertarian, but then I would find myself defending positions I hadn』t really thought through because they』re a part of the libertarian canon. If all your beliefs line up into neat little bundles, you should be highly suspicious.
 
-我过去常常认为自己是自由意志主义者，但后来我发现自己在捍卫我没有真正考虑过的立场，因为它们是自由意志主义正典的一部分。如果你所有的信仰都排列成整齐的小捆，你应该高度怀疑。
+我過去常常認為自己是自由意志主義者，但後來我發現自己在捍衛我沒有真正考慮過的立場，因為它們是自由意志主義正典的一部分。如果你所有的信仰都排列成整齊的小捆，你應該高度懷疑。
 
-I don’t like to self -identify on almost any level anymore, which keeps me from having too many of these so -called stable beliefs. [4]
-我不再喜欢在几乎任何层面上自我认同，这让我不再有太多这种所谓的稳定信念。
+I don』t like to self -identify on almost any level anymore, which keeps me from having too many of these so -called stable beliefs. [4]
+我不再喜歡在幾乎任何層面上自我認同，這讓我不再有太多這種所謂的穩定信念。
 
 We each have a contrarian belief society rejects. But the more our own identity and local tribe reject it, the more real it likely is.
 
-我们每个人都有一种社会所排斥的逆向信仰。但我们自己的身份和当地部落越是拒绝它，它可能就越真实。
+我們每個人都有一種社會所排斥的逆向信仰。但我們自己的身份和當地部落越是拒絕它，它可能就越真實。
 
 There are two attractive lessons about suffering in the long term. It can make you accept the world the way it is. The other lesson is it can make your ego change in an extremely hard way.
 
-关于长期的苦难，有两个很有吸引力的教训。它能让你接受这个世界的本来面目。另一个教训是，它可以让你的自我以一种极其艰难的方式改变。
+關於長期的苦難，有兩個很有吸引力的教訓。它能讓你接受這個世界的本來面目。另一個教訓是，它可以讓你的自我以一種極其艱難的方式改變。
 
-Maybe you’re a competitive athlete, and you get injured badly, like Bruce Lee. You have to accept being an athlete is not your entire identity, and maybe you can forge a new identity as a philosopher. [8]
-也许你是一名竞技运动员，你受了重伤，就像李小龙一样。你必须接受，作为一名运动员并不是你的全部身份，也许你可以打造一个新的哲学家身份。
+Maybe you』re a competitive athlete, and you get injured badly, like Bruce Lee. You have to accept being an athlete is not your entire identity, and maybe you can forge a new identity as a philosopher. [8]
+也許你是一名競技運動員，你受了重傷，就像李小龍一樣。你必須接受，作為一名運動員並不是你的全部身份，也許你可以打造一個新的哲學家身份。
 
 Facebook redesigns. Twitter redesigns. Personalities, careers, and teams also need redesigns. There are no permanent solutions in a dynamic system.
 
-Facebook重新设计。推特重新设计。个性、职业和团队也需要重新设计。在动态系统中没有永久的解决方案。
+Facebook重新設計。推特重新設計。個性、職業和團隊也需要重新設計。在動態系統中沒有永久的解決方案。
