--- a/1-17.md
+++ b/1-17.md
@@ -1,62 +1,62 @@
 # Learn the Skills of Decision-Making
 
-学习决策的技巧
+學習決策的技巧
 
 The classical virtues are all decision -making heuristics to make one optimize for the long term rather than for the short term. [11]
 
-经典的美德都是决策启发式的，目的是使人长期而不是短期地优化。
+經典的美德都是決策啓發式的，目的是使人長期而不是短期地優化。
 
 Self -serving conclusions should have a higher bar.
 
-自私自利的结论应该有更高的门槛。
+自私自利的結論應該有更高的門檻。
 
 I do view a lot of my goals over the next few years of unconditioning previous learned responses or habituated responses, so I can make decisions more cleanly in the moment without relying on memory or prepackaged heuristics and judgments. [4]
 
-我确实看到了我在接下来的几年里的很多目标，不受之前习得的反应或习惯性反应的制约，所以我可以在不依赖记忆或预先打包的启发式和判断的情况下，在当下更清晰地做出决定。
+我確實看到了我在接下來的幾年里的很多目標，不受之前習得的反應或習慣性反應的制約，所以我可以在不依賴記憶或預先打包的啓發式和判斷的情況下，在當下更清晰地做出決定。
 
 Almost all biases are time -saving heuristics. For important decisions, discard memory and identity, and focus on the problem.
 
-几乎所有的偏差都是省时的试探法。对于重要的决策，丢弃记忆和身份，专注于问题。
+幾乎所有的偏差都是省時的試探法。對於重要的決策，丟棄記憶和身份，專注于問題。
 
-Radical honesty just means I want to be free. Part of being free means I can say what I think and think what I say. They’re highly congruent and integrated. Theoretical physicist Richard Feynman famously said, “You should never, ever fool anybody, and you are the easiest person to fool.” The moment you tell somebody something dishonest, you’ve lied to yourself. Then you’ll start believing your own lie, which will disconnect you from reality and take you down the wrong road.
+Radical honesty just means I want to be free. Part of being free means I can say what I think and think what I say. They』re highly congruent and integrated. Theoretical physicist Richard Feynman famously said, 「You should never, ever fool anybody, and you are the easiest person to fool.」 The moment you tell somebody something dishonest, you』ve lied to yourself. Then you』ll start believing your own lie, which will disconnect you from reality and take you down the wrong road.
 
-彻底的诚实只是意味着我想要自由。自由的一部分意味着我可以说出我的想法，思考我说的话。它们高度一致且融合在一起。理论物理学家理查德·费曼(Richard Feynman)曾说过一句名言，“你永远不应该愚弄任何人，你是最容易愚弄的人。”当你告诉别人一些不诚实的事情时，你就是在欺骗自己。然后你就会开始相信自己的谎言，这会让你脱离现实，走上错误的道路。
+徹底的誠實只是意味著我想要自由。自由的一部分意味著我可以說出我的想法，思考我說的話。它們高度一致且融合在一起。理論物理學家理查德·費曼(Richard Feynman)曾說過一句名言，「你永遠不應該愚弄任何人，你是最容易愚弄的人。」當你告訴別人一些不誠實的事情時，你就是在欺騙自己。然後你就會開始相信自己的謊言，這會讓你脫離現實，走上錯誤的道路。
 
-I never ask if “I like it” or “I don’t like it.” I think “this is what it is” or “this is what it isn’t.”
-我从不问“我喜欢”还是“我不喜欢”。我认为“这就是它”或者“这就是它不是的”。
+I never ask if 「I like it」 or 「I don』t like it.」 I think 「this is what it is」 or 「this is what it isn』t.」
+我從不問「我喜歡」還是「我不喜歡」。我認為「這就是它」或者「這就是它不是的」。
 
 —Richard Feynman
 
---理查德·费曼(Richard Feynman)
+--理查德·費曼(Richard Feynman)
 
-It’s really important for me to be honest. I don’t go out of my way volunteering negative or nasty things. I would combine radical honesty with an old rule Warren Buffett has, which is praise specifically, criticize generally. I try to follow this. I don’t always follow it, but I think I follow it enough to have made a difference in my life.
+It』s really important for me to be honest. I don』t go out of my way volunteering negative or nasty things. I would combine radical honesty with an old rule Warren Buffett has, which is praise specifically, criticize generally. I try to follow this. I don』t always follow it, but I think I follow it enough to have made a difference in my life.
 
-诚实对我来说真的很重要。我不会不厌其烦地做一些负面或令人不快的事情。我会将彻底的诚实与沃伦·巴菲特(Warren Buffett)的一条旧规则结合起来，这条规则具体来说就是赞扬，一般批评。我试着遵循这一点。我并不总是遵循它，但我认为我遵循的足够多，足以改变我的生活。
+誠實對我來說真的很重要。我不會不厭其煩地做一些負面或令人不快的事情。我會將徹底的誠實與沃倫·巴菲特(Warren Buffett)的一條舊規則結合起來，這條規則具體來說就是讚揚，一般批評。我試著遵循這一點。我並不總是遵循它，但我認為我遵循的足夠多，足以改變我的生活。
 
-If you have a criticism of someone, then don’t criticize the person—criticize the general approach or criticize the class of activities. If you have to praise somebody, then always try and find the person who is the best example of what you’re praising and praise the person, specifically. Then people’s egos and identities, which we all have, don’t work against you. They work for you. [4]
-如果你对某人有批评，那就不要批评这个人--批评一般的方法，或者批评活动的类别。如果你必须表扬某人，那么总是试着找出你所表扬的最好的例子，特别是表扬这个人。那么，我们都拥有的人们的自我和身份就不会对你不利了。他们为你工作。
+If you have a criticism of someone, then don』t criticize the person—criticize the general approach or criticize the class of activities. If you have to praise somebody, then always try and find the person who is the best example of what you』re praising and praise the person, specifically. Then people』s egos and identities, which we all have, don』t work against you. They work for you. [4]
+如果你對某人有批評，那就不要批評這個人--批評一般的方法，或者批評活動的類別。如果你必須表揚某人，那麼總是試著找出你所表揚的最好的例子，特別是表揚這個人。那麼，我們都擁有的人們的自我和身份就不會對你不利了。他們為你工作。
 
 
-对于培养本能直率的诚实能力有什么建议吗？
+對於培養本能直率的誠實能力有什麼建議嗎？
 
-Tell everyone. Start now. It doesn’t have to be blunt. Charisma is the ability to project confidence and love at the same time. It’s almost always possible to be honest and positive. [71]
-告诉所有人。现在就开始。不一定要直截了当。魅力是同时投射自信和爱的能力。诚实和积极几乎总是可能的。“[71]
+Tell everyone. Start now. It doesn』t have to be blunt. Charisma is the ability to project confidence and love at the same time. It』s almost always possible to be honest and positive. [71]
+告訴所有人。現在就開始。不一定要直截了當。魅力是同時投射自信和愛的能力。誠實和積極幾乎總是可能的。「[71]
 
-As an investor and CEO of AngelList, you’re paid to be right when other people are wrong. Do you have a process around how you make decisions?
+As an investor and CEO of AngelList, you』re paid to be right when other people are wrong. Do you have a process around how you make decisions?
 
-作为AngelList的投资者和首席执行官，别人错的时候你是对的。你有关于如何做出决策的流程吗？
+作為AngelList的投資者和執行長，別人錯的時候你是對的。你有關於如何做出決策的流程嗎？
 
 Yes. Decision -making is everything. In fact, someone who makes decisions right 80 percent of the time instead of 70 percent of the time will be valued and compensated in the market hundreds of times more.
 
-是。决策就是一切。事实上，一个决策正确的人在80%的时间而不是70%的时间里会在市场上得到数百倍的价值和补偿。
+是。決策就是一切。事實上，一個決策正確的人在80%的時間而不是70%的時間裡會在市場上得到數百倍的價值和補償。
 
-I think people have a hard time understanding a fundamental fact of leverage. If I manage $1 billion and I’m right 10 percent more often than somebody else, my decision -making creates $100 million worth of value on a judgment call. With modern technology and large workforces and capital, our decisions are leveraged more and more.
+I think people have a hard time understanding a fundamental fact of leverage. If I manage $1 billion and I』m right 10 percent more often than somebody else, my decision -making creates $100 million worth of value on a judgment call. With modern technology and large workforces and capital, our decisions are leveraged more and more.
 
-我认为人们很难理解杠杆的一个基本事实。如果我管理着10亿美元，而且我比其他人多出10%的时间是正确的，那么我的决策就会在一个判断电话上创造出价值1亿美元的价值。有了现代技术、大量的劳动力和资金，我们的决策被越来越多地利用起来。
+我認為人們很難理解槓桿的一個基本事實。如果我管理著10億美元，而且我比其他人多出10%的時間是正確的，那麼我的決策就會在一個判斷電話上創造出價值1億美元的價值。有了現代技術、大量的勞動力和資金，我們的決策被越來越多地利用起來。
 
-If you can be more right and more rational, you’re going to get nonlinear returns in your life. I love the blog Farnam Street because it really focuses on helping you be more accurate, an overall better decision -maker . Decision -making is everything. [4]
-如果你能更正确、更理性，你会在你的生活中获得非线性回报。我喜欢博客Farnam Street，因为它真的专注于帮助你变得更准确，成为一个整体上更好的决策者。决策就是一切。
+If you can be more right and more rational, you』re going to get nonlinear returns in your life. I love the blog Farnam Street because it really focuses on helping you be more accurate, an overall better decision -maker . Decision -making is everything. [4]
+如果你能更正確、更理性，你會在你的生活中獲得非線性回報。我喜歡部落格Farnam Street，因為它真的專注于幫助你變得更準確，成為一個整體上更好的決策者。決策就是一切。
 
 The more you know, the less you diversify.
 
-你知道的越多，你的多样化就越少。
+你知道的越多，你的多樣化就越少。
