--- a/1-2.md
+++ b/1-2.md
@@ -1,211 +1,211 @@
 # Understand How Wealth Is Created
 
-了解财富是如何创造的
+瞭解財富是如何創造的
 
-I like to think that if I lost all my money and you dropped me on a random street in any English -speaking country, within five or ten years I’d be wealthy again because it’s just a skillset I’ve developed that anyone can develop. [78]
+I like to think that if I lost all my money and you dropped me on a random street in any English -speaking country, within five or ten years I』d be wealthy again because it』s just a skillset I』ve developed that anyone can develop. [78]
 
-我愿意想，如果我输光了所有的钱，你把我扔在任何一个说英语的国家的一条随机的街道上，五年或十年内我会再次富裕起来，因为这只是我开发的一项技能，任何人都可以发展。
+我願意想，如果我輸光了所有的錢，你把我扔在任何一個說英語的國家的一條隨機的街道上，五年或十年內我會再次富裕起來，因為這只是我開發的一項技能，任何人都可以發展。
 
-It’s not really about hard work. You can work in a restaurant eighty hours a week, and you’re not going to get rich. Getting rich is about knowing what to do, who to do it with, and when to do it. It is much more about understanding than purely hard work. Yes, hard work matters, and you can’t skimp on it. But it has to be directed in the right way.
+It』s not really about hard work. You can work in a restaurant eighty hours a week, and you』re not going to get rich. Getting rich is about knowing what to do, who to do it with, and when to do it. It is much more about understanding than purely hard work. Yes, hard work matters, and you can』t skimp on it. But it has to be directed in the right way.
 
-这其实不是关于努力工作的问题。你可以一周在餐厅工作80个小时，但你不会发财的。致富就是知道做什么，和谁一起做，什么时候做。这更多的是关于理解，而不是纯粹的艰苦工作。是的，努力工作很重要，你不能吝啬。但它必须以正确的方式进行指导。
+這其實不是關於努力工作的問題。你可以一週在餐廳工作80個小時，但你不會發財的。致富就是知道做什麼，和誰一起做，什麼時候做。這更多的是關於理解，而不是純粹的艱苦工作。是的，努力工作很重要，你不能吝嗇。但它必須以正確的方式進行指導。
 
-If you don’t know yet what you should work on, the most important thing is to figure it out. You should not grind at a lot of hard work until you figure out what you should be working on.
+If you don』t know yet what you should work on, the most important thing is to figure it out. You should not grind at a lot of hard work until you figure out what you should be working on.
 
-如果你还不知道应该做什么，最重要的是弄清楚。在你弄清楚你应该做什么之前，你不应该埋头苦干许多艰苦的工作。
+如果你還不知道應該做什麼，最重要的是弄清楚。在你弄清楚你應該做什麼之前，你不應該埋頭苦幹許多艱苦的工作。
 
-I came up with the principles in my tweetstorm (below) for myself when I was really young, around thirteen or fourteen. I’ve been carrying them in my head for thirty years, and I’ve been living them. Over time (sadly or fortunately), the thing I got really good at was looking at businesses and figuring out the point of maximum leverage to actually create wealth and capture some of that created wealth.
+I came up with the principles in my tweetstorm (below) for myself when I was really young, around thirteen or fourteen. I』ve been carrying them in my head for thirty years, and I』ve been living them. Over time (sadly or fortunately), the thing I got really good at was looking at businesses and figuring out the point of maximum leverage to actually create wealth and capture some of that created wealth.
 
-我在我的推特风暴(下面)中为自己想出了这些原则，当时我真的很年轻，大约十三四岁。三十年来，我一直把它们记在脑海里，我也一直生活在它们之中。随着时间的推移(无论是可悲的还是幸运的)，我真正擅长的事情是研究企业，找出最大限度地利用杠杆来真正创造财富的点，并捕捉其中一些创造的财富。
+我在我的推特風暴(下面)中為自己想出了這些原則，當時我真的很年輕，大約十三四歲。三十年來，我一直把它們記在腦海裡，我也一直生活在它們之中。隨著時間的推移(無論是可悲的還是幸運的)，我真正擅長的事情是研究企業，找出最大限度地利用槓桿來真正創造財富的點，並捕捉其中一些創造的財富。
 
-This is exactly what I did my famous tweetstorm about. Of course, every one of these tweets can be extrapolated into an hour’s worth of conversation. The tweetstorm below is a good starting point. The tweetstorm tries to be information -dense , very concise, high -impact , and timeless. It has all the information and principles, so if you absorb these and you work hard over ten years, you’ll get what you want. [77]
+This is exactly what I did my famous tweetstorm about. Of course, every one of these tweets can be extrapolated into an hour』s worth of conversation. The tweetstorm below is a good starting point. The tweetstorm tries to be information -dense , very concise, high -impact , and timeless. It has all the information and principles, so if you absorb these and you work hard over ten years, you』ll get what you want. [77]
 
-这正是我在著名的推特风暴中做的事情。当然，这些推文中的每一条都可以推断为一小时的谈话。下面的推特风暴是一个很好的起点。推特风暴试图做到信息密集、非常简洁、冲击力强，而且是永恒的。它有所有的信息和原则，所以如果你吸收这些，并努力工作十年，你会得到你想要的。“[77]
+這正是我在著名的推特風暴中做的事情。當然，這些推文中的每一條都可以推斷為一小時的談話。下面的推特風暴是一個很好的起點。推特風暴試圖做到資訊密集、非常簡潔、衝擊力強，而且是永恒的。它有所有的資訊和原則，所以如果你吸收這些，並努力工作十年，你會得到你想要的。「[77]
 
-## How to Get Rich (Without Getting Lucky): 如何致富(不需走运)：
+## How to Get Rich (Without Getting Lucky): 如何致富(不需走運)：
 
 
 Seek wealth, not money or status. Wealth is having assets that earn while you sleep. Money is how we transfer time and wealth. Status is your place in the social hierarchy.
 
-追求财富，而不是金钱或地位。财富就是拥有在你睡觉时赚到的资产。金钱是我们转移时间和财富的方式。地位是你在社会等级中的位置。
+追求財富，而不是金錢或地位。財富就是擁有在你睡覺時賺到的資產。金錢是我們轉移時間和財富的方式。地位是你在社會等級中的位置。
 
 Understand ethical wealth creation is possible. If you secretly despise wealth, it will elude you.
-理解道德财富创造是可能的。如果你暗地里鄙视财富，它就会躲避你。
+理解道德財富創造是可能的。如果你暗地裡鄙視財富，它就會躲避你。
 
 Ignore people playing status games. They gain status by attacking people playing wealth creation games.
 
-忽略玩状态游戏的人。他们通过攻击玩财富创造游戏的人来获得地位。
+忽略玩狀態遊戲的人。他們通過攻擊玩財富創造遊戲的人來獲得地位。
 
-You’re not going to get rich renting out your time. You must own equity—a piece of a business—to gain your financial freedom.
+You』re not going to get rich renting out your time. You must own equity—a piece of a business—to gain your financial freedom.
 
-把你的时间租出去是不会发财的。你必须拥有股权--企业的一部分--才能获得财务自由。
+把你的時間租出去是不會發財的。你必須擁有股權--企業的一部分--才能獲得財務自由。
 
 You will get rich by giving society what it wants but does not yet know how to get. At scale.
-你会通过给社会它想要但还不知道如何得到的东西而变得富有。在规模上。
+你會通過給社會它想要但還不知道如何得到的東西而變得富有。在規模上。
 
 Pick an industry where you can play long -term games with long -term people.
-选择一个你可以与长期人士进行长期博弈的行业。
+選擇一個你可以與長期人士進行長期博弈的行業。
 
-The internet has massively broadened the possible space of careers. Most people haven’t figured this out yet.
-互联网极大地拓宽了可能的职业空间。大多数人还没有弄清楚这一点。
+The internet has massively broadened the possible space of careers. Most people haven』t figured this out yet.
+網際網路極大地拓寬了可能的職業空間。大多數人還沒有弄清楚這一點。
 
 Play iterated games. All the returns in life, whether in wealth, relationships, or knowledge, come from compound interest.
 
-玩迭代游戏。生活中的所有回报，无论是财富、关系还是知识，都来自复利。
+玩迭代遊戲。生活中的所有回報，無論是財富、關係還是知識，都來自複利。
 
 Pick business partners with high intelligence, energy, and, above all, integrity.
-选择高智商、精力充沛、最重要的是正直的商业伙伴。
+選擇高智商、精力充沛、最重要的是正直的商業夥伴。
 
-Don’t partner with cynics and pessimists. Their beliefs are self -fulfilling .
-不要与愤世嫉俗者和悲观主义者合作。他们的信念是自我实现的。
+Don』t partner with cynics and pessimists. Their beliefs are self -fulfilling .
+不要與憤世嫉俗者和悲觀主義者合作。他們的信念是自我實現的。
 
 Learn to sell. Learn to build. If you can do both, you will be unstoppable.
-学习如何销售。学会建造。如果你两个都能做到，你就势不可挡了。
+學習如何銷售。學會建造。如果你兩個都能做到，你就勢不可擋了。
 
 Arm yourself with specific knowledge, accountability, and leverage.
-用具体的知识、责任和杠杆武装自己。
+用具體的知識、責任和槓桿武裝自己。
 
 Specific knowledge is knowledge you cannot be trained for. If society can train you, it can train someone else and replace you.
-具体的知识是你不能接受培训的知识。如果社会可以训练你，它也可以训练其他人来取代你。
+具體的知識是你不能接受培訓的知識。如果社會可以訓練你，它也可以訓練其他人來取代你。
 
 Specific knowledge is found by pursuing your genuine curiosity and passion rather than whatever is hot right now.
-具体的知识是通过追求你真正的好奇心和激情来发现的，而不是现在最热门的东西。
+具體的知識是通過追求你真正的好奇心和激情來發現的，而不是現在最熱門的東西。
 
 Building specific knowledge will feel like play to you but will look like work to others.
-建立特定的知识对你来说就像是玩耍，但对其他人来说就像是工作。
+建立特定的知識對你來說就像是玩耍，但對其他人來說就像是工作。
 
-When specific knowledge is taught, it’s through apprenticeships, not schools.
-当特定的知识被教授时，它是通过学徒的方式，而不是通过学校。
+When specific knowledge is taught, it』s through apprenticeships, not schools.
+當特定的知識被教授時，它是通過學徒的方式，而不是通過學校。
 
 Specific knowledge is often highly technical or creative. It cannot be outsourced or automated.
-具体的知识往往是高度技术性或创造性的。它不能外包或自动化。
+具體的知識往往是高度技術性或創造性的。它不能外包或自動化。
 
 Embrace accountability, and take business risks under your own name. Society will reward you with responsibility, equity, and leverage.
-接受责任，以自己的名义承担业务风险。社会会用责任、公平和杠杆来奖励你。
+接受責任，以自己的名義承擔業務風險。社會會用責任、公平和槓桿來獎勵你。
 
-“Give me a lever long enough and a place to stand, and I will move the earth.”
-“给我一个足够长的杠杆和一个站立的地方，我就会移动地球。”
+「Give me a lever long enough and a place to stand, and I will move the earth.」
+「給我一個足夠長的槓桿和一個站立的地方，我就會移動地球。」
 
 — Archimedes阿基米德
 
 Fortunes require leverage. Business leverage comes from capital, people, and products with no marginal cost of replication (code and media).
 
-财富需要杠杆。业务优势来自资本、人员和产品，没有复制的边际成本(代码和介质)。
+財富需要槓桿。業務優勢來自資本、人員和產品，沒有複製的邊際成本(程式碼和介質)。
 
 Capital means money. To raise money, apply your specific knowledge with accountability and show resulting good judgment.
-资本就是钱。为了筹集资金，要运用你的专业知识，负起责任，并表现出良好的判断力。
+資本就是錢。爲了籌集資金，要運用你的專業知識，負起責任，並表現出良好的判斷力。
 
-Labor means people working for you. It’s the oldest and most fought -over form of leverage. Labor leverage will impress your parents, but don’t waste your life chasing it.
+Labor means people working for you. It』s the oldest and most fought -over form of leverage. Labor leverage will impress your parents, but don』t waste your life chasing it.
 
-劳工是指为你工作的人。这是历史最悠久、争论最激烈的杠杆形式。劳动力杠杆会给你的父母留下深刻印象，但不要浪费你的生命去追逐它。
+勞工是指為你工作的人。這是歷史最悠久、爭論最激烈的槓桿形式。勞動力槓桿會給你的父母留下深刻印象，但不要浪費你的生命去追逐它。
 
 Capital and labor are permissioned leverage. Everyone is chasing capital, but someone has to give it to you. Everyone is trying to lead, but someone has to follow you.
-资本和劳动力是允许的杠杆。每个人都在追逐资金，但总得有人给你。每个人都想带头，但总得有人跟着你。
+資本和勞動力是允許的槓桿。每個人都在追逐資金，但總得有人給你。每個人都想帶頭，但總得有人跟著你。
 
-Code and media are permissionless leverage. They’re the leverage behind the newly rich. You can create software and media that works for you while you sleep.
-代码和媒体是未经许可的杠杆。他们是新富人群背后的筹码。您可以创建适合您在睡眠时使用的软件和媒体。
+Code and media are permissionless leverage. They』re the leverage behind the newly rich. You can create software and media that works for you while you sleep.
+程式碼和媒體是未經許可的槓桿。他們是新富人群背後的籌碼。您可以建立適合您在睡眠時使用的軟體和媒體。
 
-An army of robots is freely available—it’s just packed in data centers for heat and space efficiency. Use it.
+An army of robots is freely available—it』s just packed in data centers for heat and space efficiency. Use it.
 
-机器人大军是免费提供的-它们只是为了提高热量和空间效率而挤在数据中心。好好利用它。
+機器人大軍是免費提供的-它們只是爲了提高熱量和空間效率而擠在數據中心。好好利用它。
 
-If you can’t code, write books and blogs, record videos and podcasts.
+If you can』t code, write books and blogs, record videos and podcasts.
 
-如果你不会编程，那就写书、写博客、录制视频和播客。
+如果你不會程式設計，那就寫書、寫部落格、錄製視訊和播客。
 
 Leverage is a force multiplier for your judgment.
 
-杠杆是你判断的力量倍增器。
+槓桿是你判斷的力量倍增器。
 
 Judgment requires experience but can be built faster by learning foundational skills.
 
-判断需要经验，但通过学习基本技能可以更快地建立起判断能力。
+判斷需要經驗，但通過學習基本技能可以更快地建立起判斷能力。
 
-There is no skill called “business.” Avoid business magazines and business classes.
-没有什么技能叫做“生意”。避免阅读商业杂志和商务课。
+There is no skill called 「business.」 Avoid business magazines and business classes.
+沒有什麼技能叫做「生意」。避免閱讀商業雜誌和商務課。
 
 Study microeconomics, game theory, psychology, persuasion, ethics, mathematics, and computers.
-学习微观经济学、博弈论、心理学、说服学、伦理学、数学和计算机。
+學習微觀經濟學、博弈論、心理學、說服學、倫理學、數學和計算機。
 
 Reading is faster than listening. Doing is faster than watching.
-读比听快。做比看快。
+讀比聽快。做比看快。
 
-You should be too busy to “do coffee” while still keeping an uncluttered calendar.
-你应该太忙了，没有时间“喝咖啡”，同时还要保持一个整洁的日历。
+You should be too busy to 「do coffee」 while still keeping an uncluttered calendar.
+你應該太忙了，沒有時間「喝咖啡」，同時還要保持一個整潔的日曆。
 
 Set and enforce an aspirational personal hourly rate. If fixing a problem will save less than your hourly rate, ignore it. If outsourcing a task will cost less than your hourly rate, outsource it.
-设定并执行理想的个人时薪。如果解决问题所节省的费用低于您的小时费率，请忽略它。如果外包一项任务的成本比你的时薪要低，那就外包吧。
+設定並執行理想的個人時薪。如果解決問題所節省的費用低於您的小時費率，請忽略它。如果外包一項任務的成本比你的時薪要低，那就外包吧。
 
 Work as hard as you can. Even though who you work with and what you work on are more important than how hard you work.
-尽你所能努力工作。即使你和谁一起工作，你在做什么，这比你工作有多努力更重要。
+盡你所能努力工作。即使你和誰一起工作，你在做什麼，這比你工作有多努力更重要。
 
 Become the best in the world at what you do. Keep redefining what you do until this is true.
-在你所做的事情上成为世界上最好的。不断重新定义你所做的事情，直到这是真的。
+在你所做的事情上成為世界上最好的。不斷重新定義你所做的事情，直到這是真的。
 
 There are no get -rich -quick schemes. Those are just someone else getting rich off you.
-没有快速致富的计划。那些只不过是别人靠你发财而已。
+沒有快速致富的計劃。那些只不過是別人靠你發財而已。
 
 Apply specific knowledge, with leverage, and eventually you will get what you deserve.
-运用特定的知识，有杠杆作用，最终你会得到你应得的。
+運用特定的知識，有槓桿作用，最終你會得到你應得的。
 
-When you’re finally wealthy, you’ll realize it wasn’t what you were seeking in the first place. But that is for another day. [11]
+When you』re finally wealthy, you』ll realize it wasn』t what you were seeking in the first place. But that is for another day. [11]
 
-当你最终变得富有时，你会意识到这并不是你最初想要的。但那是另一天的事了。
+當你最終變得富有時，你會意識到這並不是你最初想要的。但那是另一天的事了。
 
 Summary: Productize Yourself
 
-摘要：提高自己的生产力
+摘要：提高自己的生產力
 
-Your summary says “Productize yourself”—what does that mean?
-你的总结说“让你自己产品化”--这是什么意思？
+Your summary says 「Productize yourself」—what does that mean?
+你的總結說「讓你自己產品化」--這是什麼意思？
 
-“Productize” and “yourself.” “Yourself” has uniqueness. “Productize” has leverage. “Yourself” has accountability. “Productize” has specific knowledge. “Yourself” also has specific knowledge in there. So all of these pieces, you can combine them into these two words.
+「Productize」 and 「yourself.」 「Yourself」 has uniqueness. 「Productize」 has leverage. 「Yourself」 has accountability. 「Productize」 has specific knowledge. 「Yourself」 also has specific knowledge in there. So all of these pieces, you can combine them into these two words.
 
-“产品化”和“你自己”。“你自己”具有独特性。“产品化”有杠杆作用。“你自己”是有责任的。“产品化”有特定的知识。“你自己”在那里也有特定的知识。所以所有这些片段，你可以把它们组合成这两个词。
+「產品化」和「你自己」。「你自己」具有獨特性。「產品化」有槓桿作用。「你自己」是有責任的。「產品化」有特定的知識。「你自己」在那裡也有特定的知識。所以所有這些片段，你可以把它們組合成這兩個詞。
 
-If you’re looking toward the long -term goal of getting wealthy, you should ask yourself, “Is this authentic to me? Is it myself that I am projecting?” And then, “Am I productizing it? Am I scaling it? Am I scaling with labor or with capital or with code or with media?” So it’s a very handy, simple mnemonic. [78]
+If you』re looking toward the long -term goal of getting wealthy, you should ask yourself, 「Is this authentic to me? Is it myself that I am projecting?」 And then, 「Am I productizing it? Am I scaling it? Am I scaling with labor or with capital or with code or with media?」 So it』s a very handy, simple mnemonic. [78]
 
-如果你着眼于致富的长期目标，你应该问问自己，“这对我来说是真实的吗？难道是我自己在投射吗？“然后，“我在制作它吗？我要攀爬它吗？我是通过劳动力、资本、代码还是媒体进行扩展？“所以这是一种非常方便、简单的助记符。
+如果你著眼於致富的長期目標，你應該問問自己，「這對我來說是真實的嗎？難道是我自己在投射嗎？「然後，「我在製作它嗎？我要攀爬它嗎？我是通過勞動力、資本、程式碼還是媒體進行擴充套件？「所以這是一種非常方便、簡單的助記符。
 
-This is hard. This is why I say it takes decades—I’m not saying it takes decades to execute, but the better part of a decade may be figuring out what you can uniquely provide. [10]
+This is hard. This is why I say it takes decades—I』m not saying it takes decades to execute, but the better part of a decade may be figuring out what you can uniquely provide. [10]
 
-这太难了。这就是为什么我说这需要几十年的时间--我并不是说这需要几十年的时间来执行，但十年中最好的部分可能是找出你能提供什么独一无二的东西。
+這太難了。這就是為什麼我說這需要幾十年的時間--我並不是說這需要幾十年的時間來執行，但十年中最好的部分可能是找出你能提供什麼獨一無二的東西。
 
-What’s the difference between wealth and money?
-财富和金钱有什么不同？
+What』s the difference between wealth and money?
+財富和金錢有什麼不同？
 
-Money is how we transfer wealth. Money is social credits. It is the ability to have credits and debits of other people’s time.
-钱是我们转移财富的方式。钱是社会信用。它是一种从别人的时间中借记和贷记的能力。
+Money is how we transfer wealth. Money is social credits. It is the ability to have credits and debits of other people』s time.
+錢是我們轉移財富的方式。錢是社會信用。它是一種從別人的時間中借記和貸記的能力。
 
-If I do my job right, if I create value for society, society says, “Oh, thank you. We owe you something in the future for the work you did in the past. Here’s a little IOU. Let’s call that money.” [78]
+If I do my job right, if I create value for society, society says, 「Oh, thank you. We owe you something in the future for the work you did in the past. Here』s a little IOU. Let』s call that money.」 [78]
 
-如果我做对了我的工作，如果我为社会创造了价值，社会会说，“哦，谢谢。由于你过去所做的工作，我们将来还欠你一些东西。这是一张小借条。我们把那叫做钱吧。“[78]
+如果我做對了我的工作，如果我為社會創造了價值，社會會說，「哦，謝謝。由於你過去所做的工作，我們將來還欠你一些東西。這是一張小借條。我們把那叫做錢吧。「[78]
 
-Wealth is the thing you want. Wealth is assets that earn while you sleep. Wealth is the factory, the robots, cranking out things. Wealth is the computer program that’s running at night, serving other customers. Wealth is even money in the bank that is being reinvested into other assets, and into other businesses.
+Wealth is the thing you want. Wealth is assets that earn while you sleep. Wealth is the factory, the robots, cranking out things. Wealth is the computer program that』s running at night, serving other customers. Wealth is even money in the bank that is being reinvested into other assets, and into other businesses.
 
-财富是你想要的东西。财富是你睡觉时赚到的资产。财富是工厂，是机器人，是制造东西的机器。财富是在夜间运行的计算机程序，为其他客户服务。财富甚至是银行里的钱，这些钱被再投资到其他资产和其他业务上。
+財富是你想要的東西。財富是你睡覺時賺到的資產。財富是工廠，是機器人，是製造東西的機器。財富是在夜間執行的計算機程式，為其他客戶服務。財富甚至是銀行里的錢，這些錢被再投資到其他資產和其他業務上。
 
-Even a house can be a form of wealth, because you can rent it out, although that’s probably a lower productivity use of land than some commercial enterprise.
-即使是房子也可以成为财富的一种形式，因为你可以把它租出去，尽管这可能比一些商业企业对土地的使用效率更低。
+Even a house can be a form of wealth, because you can rent it out, although that』s probably a lower productivity use of land than some commercial enterprise.
+即使是房子也可以成為財富的一種形式，因為你可以把它租出去，儘管這可能比一些商業企業對土地的使用效率更低。
 
 So, my definition of wealth is much more businesses and assets that can earn while you sleep. [78]
-因此，我对财富的定义是，更多的企业和资产可以在你睡觉的时候赚到。
+因此，我對財富的定義是，更多的企業和資產可以在你睡覺的時候賺到。
 
 Technology democratizes consumption but consolidates production. The best person in the world at anything gets to do it for everyone.
-技术使消费民主化，但也巩固了生产。世界上最擅长任何事情的人都能为每个人做这件事。
+技術使消費民主化，但也鞏固了生產。世界上最擅長任何事情的人都能為每個人做這件事。
 
-Society will pay you for creating things it wants. But society doesn’t yet know how to create those things, because if it did, they wouldn’t need you. They would already be stamped out.
+Society will pay you for creating things it wants. But society doesn』t yet know how to create those things, because if it did, they wouldn』t need you. They would already be stamped out.
 
-社会会付钱给你，因为你创造了它想要的东西。但是社会还不知道如何创造这些东西，因为如果知道了，他们就不需要你了。他们早就被赶出家门了。
+社會會付錢給你，因為你創造了它想要的東西。但是社會還不知道如何創造這些東西，因為如果知道了，他們就不需要你了。他們早就被趕出家門了。
 
 Almost everything in your house, in your workplace, and on the street used to be technology at one point in time. There was a time when oil was a technology that made J.D. Rockefeller rich. There was a time when cars were technology that made Henry Ford rich.
 
-你家里、工作场所和街道上的几乎所有东西都曾经一度是科技。曾经有一段时间，石油是一种使J.D.洛克菲勒·里奇。曾经有一段时间，汽车是让亨利·福特(Henry Ford)致富的技术。
+你家裡、工作場所和街道上的幾乎所有東西都曾經一度是科技。曾經有一段時間，石油是一種使J.D.洛克菲勒·里奇。曾經有一段時間，汽車是讓亨利·福特(Henry Ford)致富的技術。
 
-So, technology is the set of things, as Alan Kay said, that don’t quite work yet [correction: Danny Hillis]. Once something works, it’s no longer technology. Society always wants new things. And if you want to be wealthy, you want to figure out which one of those things you can provide for society that it does not yet know how to get but it will want and providing it is natural to you, within your skill set, and within your capabilities.
+So, technology is the set of things, as Alan Kay said, that don』t quite work yet [correction: Danny Hillis]. Once something works, it』s no longer technology. Society always wants new things. And if you want to be wealthy, you want to figure out which one of those things you can provide for society that it does not yet know how to get but it will want and providing it is natural to you, within your skill set, and within your capabilities.
 
-因此，正如艾伦·凯(Alan Kay)所说，技术是一套还不太起作用的东西。[更正：访问数/每百万人：Reach for[一旦某样东西起作用了，它就不再是技术了。社会总是想要新的东西。如果你想变得富有，你想要弄清楚你可以为社会提供哪些东西，它还不知道如何获得，但它会想要，并且提供它对你来说是自然的，在你的技能范围内，在你的能力范围内。
+因此，正如艾倫·凱(Alan Kay)所說，技術是一套還不太起作用的東西。[更正：訪問數/每百萬人：Reach for[一旦某樣東西起作用了，它就不再是技術了。社會總是想要新的東西。如果你想變得富有，你想要弄清楚你可以為社會提供哪些東西，它還不知道如何獲得，但它會想要，並且提供它對你來說是自然的，在你的技能範圍內，在你的能力範圍內。
 
-Then, you have to figure out how to scale it because if you only build one, that’s not enough. You’ve got to build thousands, or hundreds of thousands, or millions, or billions of them so everybody can have one. Steve Jobs (and his team, of course) figured out society would want smartphones. A computer in their pocket that had all the phone capability times one hundred and was easy to use. So, they figured out how to build it, and then they figured out how to scale it. [78]
+Then, you have to figure out how to scale it because if you only build one, that』s not enough. You』ve got to build thousands, or hundreds of thousands, or millions, or billions of them so everybody can have one. Steve Jobs (and his team, of course) figured out society would want smartphones. A computer in their pocket that had all the phone capability times one hundred and was easy to use. So, they figured out how to build it, and then they figured out how to scale it. [78]
 
-然后，您必须找出如何扩展它，因为如果您只构建一个，这是不够的。你必须建造数千个、数十万个、数百万个或数十亿个这样每个人都可以拥有一个。史蒂夫·乔布斯(当然还有他的团队)认为社会会需要智能手机。他们口袋里的一台电脑，所有的电话功能都是原来的一百倍，而且使用起来很方便。因此，他们想出了如何建造它，然后他们想出了如何扩大它的规模。
+然後，您必須找出如何擴充套件它，因為如果您只構建一個，這是不夠的。你必須建造數千個、數十萬個、數百萬個或數十億個這樣每個人都可以擁有一個。史蒂夫·喬布斯(當然還有他的團隊)認為社會會需要智慧手機。他們口袋裡的一臺電腦，所有的電話功能都是原來的一百倍，而且使用起來很方便。因此，他們想出瞭如何建造它，然後他們想出瞭如何擴大它的規模。
