--- a/1-5.md
+++ b/1-5.md
@@ -1,47 +1,47 @@
 # Take on Accountability
 
-承担责任
+承擔責任
 
 Embrace accountability and take business risks under your own name. Society will reward you with responsibility, equity, and leverage.
 
-接受责任，以自己的名义承担业务风险。社会会用责任、公平和杠杆来奖励你。
+接受責任，以自己的名義承擔業務風險。社會會用責任、公平和槓桿來獎勵你。
 
 To get rich, you need leverage. Leverage comes in labor, comes in capital, or it can come through code or media. But most of these, like labor and capital, people have to give to you. For labor, somebody has to follow you. For capital, somebody has to give you money, assets to manage, or machines.
 
-要想致富，你需要筹码。杠杆可以来自劳动力，也可以来自资本，也可以通过代码或媒体来实现。但是大多数这些东西，比如劳动力和资本，人们都必须给你。至于分娩，总得有人跟着你。对于资本，必须有人给你钱、要管理的资产或机器。
+要想致富，你需要籌碼。槓桿可以來自勞動力，也可以來自資本，也可以通過程式碼或媒體來實現。但是大多數這些東西，比如勞動力和資本，人們都必須給你。至於分娩，總得有人跟著你。對於資本，必須有人給你錢、要管理的資產或機器。
 
 So to get these things, you have to build credibility, and you have to do it under your own name as much as possible, which is risky. So, accountability is a double -edged thing. It allows you to take credit when things go well and to bear the brunt of the failure when things go badly. [78]
 
-因此，要得到这些东西，你必须建立信誉，而且你必须尽可能以自己的名义去做，这是有风险的。因此，问责是一件双刃剑。它让你在事情进展顺利的时候获得荣誉，在事情变得糟糕的时候首当其冲地承受失败的冲击。“[78]
+因此，要得到這些東西，你必須建立信譽，而且你必須儘可能以自己的名義去做，這是有風險的。因此，問責是一件雙刃劍。它讓你在事情進展順利的時候獲得榮譽，在事情變得糟糕的時候首當其衝地承受失敗的衝擊。「[78]
 
-Clear accountability is important. Without accountability, you don’t have incentives. Without accountability, you can’t build credibility. But you take risks. You risk failure. You risk humiliation. You risk failure under your own name.
+Clear accountability is important. Without accountability, you don』t have incentives. Without accountability, you can』t build credibility. But you take risks. You risk failure. You risk humiliation. You risk failure under your own name.
 
-明确的问责很重要。没有责任，你就没有激励。没有责任，你就不能建立信誉。但是你要承担风险。你冒着失败的风险。你冒着丢脸的风险。你以自己的名义冒着失败的风险。
+明確的問責很重要。沒有責任，你就沒有激勵。沒有責任，你就不能建立信譽。但是你要承擔風險。你冒著失敗的風險。你冒著丟臉的風險。你以自己的名義冒著失敗的風險。
 
-Luckily, in modern society, there’s no more debtors’ prison and people aren’t imprisoned or executed for losing other people’s money, but we’re still socially hardwired to not fail in public under our own names. The people who have the ability to fail in public under their own names actually gain a lot of power.
+Luckily, in modern society, there』s no more debtors』 prison and people aren』t imprisoned or executed for losing other people』s money, but we』re still socially hardwired to not fail in public under our own names. The people who have the ability to fail in public under their own names actually gain a lot of power.
 
-幸运的是，在现代社会，不再有债务人的监狱，人们不会因为损失别人的钱而被监禁或处决，但我们仍然在社会上根深蒂固，不会以自己的名义在公共场合失败。那些有能力以自己的名义在公共场合失败的人实际上获得了很大的权力。
+幸運的是，在現代社會，不再有債務人的監獄，人們不會因為損失別人的錢而被監禁或處決，但我們仍然在社會上根深蒂固，不會以自己的名義在公共場合失敗。那些有能力以自己的名義在公共場合失敗的人實際上獲得了很大的權力。
 
-I’ll give a personal anecdote. Up until about 2013, 2014, my public persona was entirely around startups and investing. Only around 2014, 2015 did I start talking about philosophy and psychological things and broader things. It made me a little nervous because I was doing it under my own name. There were definitely people in the industry who sent me messages through the backchannel like, “What are you doing? You’re ending your career. This is stupid.”
+I』ll give a personal anecdote. Up until about 2013, 2014, my public persona was entirely around startups and investing. Only around 2014, 2015 did I start talking about philosophy and psychological things and broader things. It made me a little nervous because I was doing it under my own name. There were definitely people in the industry who sent me messages through the backchannel like, 「What are you doing? You』re ending your career. This is stupid.」
 
-我要讲一件个人趣闻轶事。在大约2013,2014年前，我的公众形象完全围绕着初创企业和投资。直到2014年，2015年左右，我才开始谈论哲学和心理学的东西，以及更广泛的东西。这让我有点紧张，因为我是以我自己的名义做的。肯定有业内人士通过秘密渠道给我发信息，比如“你在做什么？你在结束你的职业生涯。这太愚蠢了。“
+我要講一件個人趣聞軼事。在大約2013,2014年前，我的公眾形象完全圍繞著初創企業和投資。直到2014年，2015年左右，我才開始談論哲學和心理學的東西，以及更廣泛的東西。這讓我有點緊張，因為我是以我自己的名義做的。肯定有業內人士通過秘密渠道給我發信息，比如「你在做什麼？你在結束你的職業生涯。這太愚蠢了。「
 
 I kind of just went with it. I took a risk. Same with crypto. Early on, I took a risk. But when you put your name out there, you take a risk with certain things. You also get to reap the rewards. You get the benefits. [78]
 
-我就是顺其自然了。我冒了个险。加密也是如此。早些时候，我冒了一个险。但是当你把你的名字放在那里的时候，你就在某些事情上冒了风险。你也能收获回报。你会得到好处。“[78]
+我就是順其自然了。我冒了個險。加密也是如此。早些時候，我冒了一個險。但是當你把你的名字放在那裡的時候，你就在某些事情上冒了風險。你也能收穫回報。你會得到好處。「[78]
 
-In the old days, the captain was expected to go down with the ship. If the ship was sinking, then literally the last person to get off was the captain. Accountability does come with real risks, but we’re talking about a business context.
+In the old days, the captain was expected to go down with the ship. If the ship was sinking, then literally the last person to get off was the captain. Accountability does come with real risks, but we』re talking about a business context.
 
-在过去，人们认为船长会随船沉没。如果船正在下沉，那么从字面上讲，最后一个下船的人就是船长。责任确实伴随着真正的风险，但我们谈论的是商业背景。
+在過去，人們認為船長會隨船沉沒。如果船正在下沉，那麼從字面上講，最後一個下船的人就是船長。責任確實伴隨著真正的風險，但我們談論的是商業背景。
 
-The risk here would be you would probably be the last one to get your capital back out. You’d be the last one to get paid for your time. The time that you put in, the capital you put into the company, these are at risk. [78]
+The risk here would be you would probably be the last one to get your capital back out. You』d be the last one to get paid for your time. The time that you put in, the capital you put into the company, these are at risk. [78]
 
-这里的风险是，你可能是最后一个把你的资本拿回来的人。你会是最后一个拿到时间报酬的人。你投入的时间，你投入公司的资本，这些都有风险。“[78]
+這裡的風險是，你可能是最後一個把你的資本拿回來的人。你會是最後一個拿到時間報酬的人。你投入的時間，你投入公司的資本，這些都有風險。「[78]
 
-Realize that in modern society, the downside risk is not that large. Even personal bankruptcy can wipe the debts clean in good ecosystems. I’m most familiar with Silicon Valley, but generally, people will forgive failures as long as you were honest and made a high -integrity effort.
+Realize that in modern society, the downside risk is not that large. Even personal bankruptcy can wipe the debts clean in good ecosystems. I』m most familiar with Silicon Valley, but generally, people will forgive failures as long as you were honest and made a high -integrity effort.
 
-要认识到，在现代社会，下行风险并不是那么大。在良好的生态系统中，即使是个人破产也可以清偿债务。我对硅谷最熟悉，但一般来说，只要你诚实，做出高度正直的努力，人们就会原谅失败。
+要認識到，在現代社會，下行風險並不是那麼大。在良好的生態系統中，即使是個人破產也可以清償債務。我對硅谷最熟悉，但一般來說，只要你誠實，做出高度正直的努力，人們就會原諒失敗。
 
-There’s not really that much to fear in terms of failure, and so people should take on a lot more accountability than they do. [78]
+There』s not really that much to fear in terms of failure, and so people should take on a lot more accountability than they do. [78]
 
-就失败而言，真的没有那么多可怕的事情，所以人们应该承担比他们更多的责任。“[78]
+就失敗而言，真的沒有那麼多可怕的事情，所以人們應該承擔比他們更多的責任。「[78]
