--- a/2-11.md
+++ b/2-11.md
@@ -2,28 +2,28 @@
 
 拯救你自己
 
-Doctors won’t make you healthy.
+Doctors won』t make you healthy.
 
-Nutritionists won’t make you slim.
+Nutritionists won』t make you slim.
 
-Teachers won’t make you smart.
+Teachers won』t make you smart.
 
-Gurus won’t make you calm.
+Gurus won』t make you calm.
 
-Mentors won’t make you rich.
+Mentors won』t make you rich.
 
-Trainers won’t make you fit.
+Trainers won』t make you fit.
 
-医生不会让你健康，
-营养师不会让你苗条，
-老师不会让你聪明，
-上师不会让你平静，
-导师不会让你致富，
-训练员不会让你健康。
+醫生不會讓你健康，
+營養師不會讓你苗條，
+老師不會讓你聰明，
+上師不會讓你平靜，
+導師不會讓你致富，
+訓練員不會讓你健康。
 
 Ultimately, you have to take responsibility.
 
-归根结底，你必须承担责任。
+歸根結底，你必須承擔責任。
 
 Save yourself.
 
