--- a/2-18.md
+++ b/2-18.md
@@ -4,4 +4,4 @@
 
 The real truths are heresies. They cannot be spoken. Only discovered, whispered, and perhaps read.
 
-真正的真相是异端邪说。他们不能说出来。只有发现，耳语，或许是阅读。
+真正的真相是異端邪說。他們不能說出來。只有發現，耳語，或許是閱讀。
