--- a/2-24.md
+++ b/2-24.md
@@ -1,341 +1,341 @@
-# Books 书籍
+# Books 書籍
 
 (Since there are so many links in this section, you may prefer a digital copy. Go to Navalmanack.com to get a digital version of this chapter for your convenience.)
-(由于本节中有如此多的链接，您可能更喜欢数字副本。为方便起见，请访问Navalmanack.com获取本章的数字版本。)
+(由於本節中有如此多的鏈接，您可能更喜歡數字副本。為方便起見，請訪問Navalmanack.com獲取本章的數字版本。)
 
 Read enough, and you become a connoisseur. Then you naturally gravitate more toward theory, concepts, nonfiction.
 
-读得足够多，你就会成为一名鉴赏家。然后，你自然会更倾向于理论、概念和非虚构类作品。
+讀得足夠多，你就會成為一名鑑賞家。然後，你自然會更傾向於理論、概念和非虛構類作品。
 
 ### Nonfiction
 
-非虚构
+非虛構
 
 The Beginning of Infinity: Explanations That Transform the World by David Deutsch
-无限的开始：戴维·多伊奇(David Deutsch)“改变世界的解释”
+無限的開始：戴維·多伊奇(David Deutsch)「改變世界的解釋」
 
 Not the easiest read, but it made me smarter. [79]
 
-这不是最简单的阅读，但它让我变得更聪明。
+這不是最簡單的閱讀，但它讓我變得更聰明。
 
 Sapiens: A Brief History of Humankind by Yuval Noah Harari
-智人：尤瓦尔·诺亚·哈拉里“人类简史”
+智人：尤瓦爾·諾亞·哈拉里「人類簡史」
 
 A history of the human species. The observations, frameworks, and mental models will have you looking at history and your fellow humans differently. [1]
 
-人类物种的历史。观察、框架和心理模型将让你以不同的方式看待历史和你的人类同胞。
+人類物種的歷史。觀察、框架和心理模型將讓你以不同的方式看待歷史和你的人類同胞。
 
-Sapiens is the best book of the last decade I have read. He had decades to write Sapiens . There are lots of great ideas in there and it’s just full of them, chock -full per page. [1]
+Sapiens is the best book of the last decade I have read. He had decades to write Sapiens . There are lots of great ideas in there and it』s just full of them, chock -full per page. [1]
 
-“智人”是我近十年来读过的最好的一本书。他花了几十年的时间写“萨皮恩斯”。里面有很多很棒的想法，而且满满的，每页都塞满了。“[1]
+「智人」是我近十年來讀過的最好的一本書。他花了幾十年的時間寫「薩皮恩斯」。裡面有很多很棒的想法，而且滿滿的，每頁都塞滿了。「[1]
 
 The Rational Optimist: How Prosperity Evolves by Matt Ridley
-理性乐观主义者：“繁荣是如何演变的”，马特·里德利著
+理性樂觀主義者：「繁榮是如何演變的」，馬特·里德利著
 
-The most brilliant and enlightening book I’ve read in years. He has written four of my top twenty books. [11]
+The most brilliant and enlightening book I』ve read in years. He has written four of my top twenty books. [11]
 
-这是我多年来读过的最精彩、最有启发性的书。他写了我最畅销的二十本书中的四本。
+這是我多年來讀過的最精彩、最有啓發性的書。他寫了我最暢銷的二十本書中的四本。
 
-Everything else written by Matt Ridley. Matt is a scientist, optimist, and forward thinker. One of my favorite authors. I’ve read everything of his, and reread everything of his. [4]
+Everything else written by Matt Ridley. Matt is a scientist, optimist, and forward thinker. One of my favorite authors. I』ve read everything of his, and reread everything of his. [4]
 
-其他的都是马特·雷德利写的。马特是一位科学家、乐观主义者和超前思想家。我最喜欢的作家之一。我读过他的每一本书，也重读过他的每一本书。
+其他的都是馬特·雷德利寫的。馬特是一位科學家、樂觀主義者和超前思想家。我最喜歡的作家之一。我讀過他的每一本書，也重讀過他的每一本書。
 
-* Genome: The Autobiography of a Species in 23 Chapters 基因组：“一个物种的自传”共23章
-* The Red Queen: Sex and the Evolution of Human Nature  红皇后：性与人性的进化
-* The Origins of Virtue: Human Instincts and the Evolution of Cooperation  美德的起源：人类本能与合作的进化
-* The Evolution of Everything: How New Ideas Emerge 万物的进化：新思想是如何涌现的
-* Skin in the Game by Nassim Taleb 纳西姆·塔勒布(Nassim Taleb)“游戏中的皮肤”
+* Genome: The Autobiography of a Species in 23 Chapters 基因組：「一個物種的自傳」共23章
+* The Red Queen: Sex and the Evolution of Human Nature  紅皇后：性與人性的進化
+* The Origins of Virtue: Human Instincts and the Evolution of Cooperation  美德的起源：人類本能與合作的進化
+* The Evolution of Everything: How New Ideas Emerge 萬物的進化：新思想是如何涌現的
+* Skin in the Game by Nassim Taleb 納西姆·塔勒布(Nassim Taleb)「遊戲中的面板」
 
 
-The best book I read in 2018, I highly recommend it. Lots of great ideas in there. Lots of good mental models and constructs. He has a bit of an attitude, but he has that because he’s brilliant, and it’s okay. So just look past the attitude and read the book, learn the concepts. It’s one of the best business books I’ve ever read. And luckily, it doesn’t masquerade as a business book. [10]
+The best book I read in 2018, I highly recommend it. Lots of great ideas in there. Lots of good mental models and constructs. He has a bit of an attitude, but he has that because he』s brilliant, and it』s okay. So just look past the attitude and read the book, learn the concepts. It』s one of the best business books I』ve ever read. And luckily, it doesn』t masquerade as a business book. [10]
 
-2018年我读的最好的一本书，我强烈推荐。里面有很多好点子。很多好的心理模型和构思。他有一点态度，但他有这种态度是因为他很聪明，这没什么。所以，只要抛开态度，读一读这本书，学习其中的概念就行了。这是我读过的最好的商业书籍之一。幸运的是，它没有伪装成一本商业书籍。
+2018年我讀的最好的一本書，我強烈推薦。裡面有很多好點子。很多好的心理模型和構思。他有一點態度，但他有這種態度是因為他很聰明，這沒什麼。所以，只要拋開態度，讀一讀這本書，學習其中的概念就行了。這是我讀過的最好的商業書籍之一。幸運的是，它沒有偽裝成一本商業書籍。
 
 The Bed of Procrustes: Philosophical and Practical Aphorisms by Nassim Taleb
-普罗克斯特斯的床：纳西姆·塔勒布的哲学格言和实践格言
+普羅克斯特斯的床：納西姆·塔勒布的哲學格言和實踐格言
 
 This is his collection of ancient wisdom. He is also famous for The Black Swan: The Impact of the Highly Improbable, Antifragile: Things That Gain from Disorder, and Fooled by Randomness: The Hidden Role of Chance in Life and in the Markets, all of which are worth reading. [7]
 
-这是他收集的古代智慧。他还因“黑天鹅”而出名：高度不可能的，反脆弱的影响：从无序中获益，被随机性愚弄的东西：“机遇在生活和市场中的隐藏作用”，所有这些书都值得一读。
+這是他收集的古代智慧。他還因「黑天鵝」而出名：高度不可能的，反脆弱的影響：從無序中獲益，被隨機性愚弄的東西：「機遇在生活和市場中的隱藏作用」，所有這些書都值得一讀。
 
 Six Easy Pieces: Essentials of Physics Explained by Its Most Brilliant Teacher by Richard Feynman
-六个简单的项目：最杰出的老师理查德·费曼讲解的“物理要领”
+六個簡單的專案：最傑出的老師理查德·費曼講解的「物理要領」
 
-I would give my kids a copy of Richard Feynman’s Six Easy Pieces and Six Not - So - Easy Pieces: Einstein’s Relativity, Symmetry, and Space - Time . Richard Feynman is a famous physicist. I love both his demeanor as well as his understanding of physics.
+I would give my kids a copy of Richard Feynman』s Six Easy Pieces and Six Not - So - Easy Pieces: Einstein』s Relativity, Symmetry, and Space - Time . Richard Feynman is a famous physicist. I love both his demeanor as well as his understanding of physics.
 
-我会给我的孩子们一本理查德·费曼的六首轻松曲目和六首不那么容易的曲目：爱因斯坦的相对论、对称性和时空。理查德·费曼是一位著名的物理学家。我既喜欢他的举止，也喜欢他对物理的理解。
+我會給我的孩子們一本理查德·費曼的六首輕鬆曲目和六首不那麼容易的曲目：愛因斯坦的相對論、對稱性和時空。理查德·費曼是一位著名的物理學家。我既喜歡他的舉止，也喜歡他對物理的理解。
 
-I’ve also been reading Perfectly Reasonable Deviations from the Beaten Track by Feynman and rereading Genius: The Life and Science of Richard Feynman , a biography about him. [8]
+I』ve also been reading Perfectly Reasonable Deviations from the Beaten Track by Feynman and rereading Genius: The Life and Science of Richard Feynman , a biography about him. [8]
 
-我还一直在阅读费曼的“完全合理的偏离常轨”，并重读“天才”(Genius)：关于理查德·费曼的传记“理查德·费曼的生平与科学”(The Life And Science Of Richard Feynman)。
+我還一直在閱讀費曼的「完全合理的偏離常軌」，並重讀「天才」(Genius)：關於理查德·費曼的傳記「理查德·費曼的生平與科學」(The Life And Science Of Richard Feynman)。
 
 Thing Explainer: Complicated Stuff in Simple Words by Randall Munroe
-事物解释器：兰德尔·门罗(Randall Munroe)的“简单词语中的复杂事物”
+事物直譯器：蘭德爾·門羅(Randall Munroe)的「簡單詞語中的複雜事物」
 
 
-A great book by Randall Munroe (creator of xkcd , a very science -oriented webcomic). In this book, he explains very complicated concepts, all the way from climate change to physical systems to submarines while only using the thousand most common words in the English language. He called the Saturn Five rocket “Up Goer Five.” You can’t define a rocket as a spaceship or a rocket. It’s self -referential . He says “up goer.” It’s this thing that goes up. Kids get it right away. [4]
+A great book by Randall Munroe (creator of xkcd , a very science -oriented webcomic). In this book, he explains very complicated concepts, all the way from climate change to physical systems to submarines while only using the thousand most common words in the English language. He called the Saturn Five rocket 「Up Goer Five.」 You can』t define a rocket as a spaceship or a rocket. It』s self -referential . He says 「up goer.」 It』s this thing that goes up. Kids get it right away. [4]
 
-兰德尔·门罗(Xkcd，一本非常科学的网络漫画的创建者)写的一本伟大的书。在这本书中，他解释了非常复杂的概念，从气候变化到物理系统再到潜艇，但只使用了英语中最常见的数千个单词。他称土星五号火箭为“向上五号”。你不能把火箭定义为宇宙飞船或火箭。它是自我参照的。他说“往上走”上升的是这个东西。孩子们马上就能拿到。[4]
+蘭德爾·門羅(Xkcd，一本非常科學的網路漫畫的建立者)寫的一本偉大的書。在這本書中，他解釋了非常複雜的概念，從氣候變化到物理系統再到潛艇，但只使用了英語中最常見的數千個單詞。他稱土星五號火箭為「向上五號」。你不能把火箭定義為宇宙飛船或火箭。它是自我參照的。他說「往上走」上升的是這個東西。孩子們馬上就能拿到。[4]
 
 Thinking Physics: Understandable Practical Reality by Lewis Carroll Epstein
-思考物理学：刘易斯·卡罗尔·爱泼斯坦“可理解的现实”
+思考物理學：劉易斯·卡羅爾·愛潑斯坦「可理解的現實」
 
 
-There’s another great book called Thinking Physics . I open this one all the time. I love on the back cover how it has this great little pitch that says, “The only book used in both grade school and graduate school.” It’s true. It’s all simple physics puzzles that can be explained to a twelve -year -old child and can be explained to a twenty -five -year -old grad student in physics. They all have fundamental insights in physics. They’re all kind of tricky, but anyone can get to the answer through purely logical reasoning. [4]
+There』s another great book called Thinking Physics . I open this one all the time. I love on the back cover how it has this great little pitch that says, 「The only book used in both grade school and graduate school.」 It』s true. It』s all simple physics puzzles that can be explained to a twelve -year -old child and can be explained to a twenty -five -year -old grad student in physics. They all have fundamental insights in physics. They』re all kind of tricky, but anyone can get to the answer through purely logical reasoning. [4]
 
-还有一本很棒的书叫“思维物理”。我一直在打开这个。我喜欢它的封底，它有一个很棒的小广告，上面写着，“这是唯一一本小学和研究生院都用到的书。”这是真的。这些都是简单的物理谜题，可以解释给12岁的孩子，也可以解释给25岁的物理学研究生。他们都对物理学有基本的见解。它们都有些棘手，但任何人都可以通过纯粹的逻辑推理得到答案。
+還有一本很棒的書叫「思維物理」。我一直在打開這個。我喜歡它的封底，它有一個很棒的小廣告，上面寫著，「這是唯一一本小學和研究生院都用到的書。」這是真的。這些都是簡單的物理謎題，可以解釋給12歲的孩子，也可以解釋給25歲的物理學研究生。他們都對物理學有基本的見解。它們都有些棘手，但任何人都可以通過純粹的邏輯推理得到答案。
 
 The Lessons of History by Will and Ariel Durant
-威尔和阿里尔·杜兰特的历史教训
-This is a great book I really like that summarizes some of the larger themes of history; it’s very incisive. And unlike most history books, it’s actually really small, and it covers a lot of ground. [7]
+威爾和阿里爾·杜蘭特的歷史教訓
+This is a great book I really like that summarizes some of the larger themes of history; it』s very incisive. And unlike most history books, it』s actually really small, and it covers a lot of ground. [7]
 
-这是一本很棒的书，我真的很喜欢，它总结了一些更大的历史主题，非常精辟。与大多数历史书不同的是，它实际上非常小，而且涵盖了很多领域。
+這是一本很棒的書，我真的很喜歡，它總結了一些更大的歷史主題，非常精闢。與大多數歷史書不同的是，它實際上非常小，而且涵蓋了很多領域。
 
 The Sovereign Individual: Mastering the Transition to the Information Age by James Dale Davidson and Lord William Rees -Mogg
-至高无上的个人：“掌握向信息时代的过渡”，詹姆斯·戴尔·戴维森和威廉·里斯·莫格勋爵著
-This is the best book I’ve read since Sapiens (far less mainstream, though).
+至高無上的個人：「掌握向資訊時代的過渡」，詹姆斯·戴爾·戴維森和威廉·里斯·莫格勛爵著
+This is the best book I』ve read since Sapiens (far less mainstream, though).
 
-这是我自“萨皮恩斯”(Sapiens)以来读过的最好的一本书(虽然远不是主流)。
+這是我自「薩皮恩斯」(Sapiens)以來讀過的最好的一本書(雖然遠不是主流)。
 
-Poor Charlie’s Almanack: The Wit and Wisdom of Charles T. Munger by Charlie Munger (edited by Peter Kaufman)
-可怜的查理年鉴：查理·芒格的“查尔斯·T·芒格的机智与智慧”(彼得·考夫曼编辑)
+Poor Charlie』s Almanack: The Wit and Wisdom of Charles T. Munger by Charlie Munger (edited by Peter Kaufman)
+可憐的查理年鑑：查理·芒格的「查爾斯·T·芒格的機智與智慧」(彼得·考夫曼編輯)
 
-This masquerades as a business book, but it’s really just Charlie Munger (of Berkshire Hathaway)’s advice on overcoming oneself to live a successful and virtuous life. [7] [80]
+This masquerades as a business book, but it』s really just Charlie Munger (of Berkshire Hathaway)』s advice on overcoming oneself to live a successful and virtuous life. [7] [80]
 
-这本书伪装成一本商业书籍，但它实际上只是(伯克希尔哈撒韦公司的)查理·芒格(Charlie Munger)关于克服自我以过上成功和善良生活的建议。
+這本書偽裝成一本商業書籍，但它實際上只是(伯克希爾哈撒韋公司的)查理·芒格(Charlie Munger)關於克服自我以過上成功和善良生活的建議。
 
 Reality Is Not What It Seems: The Journey to Quantum Gravity by Carlo Rovelli
-现实并不像它看起来的那样：“量子引力之旅”，卡洛·罗维利著
-This is the best book I’ve read in the last year. Physics, poetry, philosophy, and history packaged in a very accessible form.
+現實並不像它看起來的那樣：「量子引力之旅」，卡洛·羅維利著
+This is the best book I』ve read in the last year. Physics, poetry, philosophy, and history packaged in a very accessible form.
 
-这是我去年读过的最好的书。物理、诗歌、哲学和历史以一种非常通俗易懂的形式包装起来。
+這是我去年讀過的最好的書。物理、詩歌、哲學和歷史以一種非常通俗易懂的形式包裝起來。
 
 Seven Brief Lessons on Physics by Carlo Rovelli
-卡洛·罗维利的“物理学七课”
+卡洛·羅維利的「物理學七課」
 
-I’ve read this one at least twice.
+I』ve read this one at least twice.
 
-这本书我至少读了两遍。
+這本書我至少讀了兩遍。
 
 For game theory, in addition to playing strategy games, you may want to try The Compleat Strategyst: Being a Primer on the Theory of Games of Strategy by J.D. Williams and The Evolution of Cooperation by Robert Axelrod. [11]
 
-对于博弈论，除了玩战略游戏之外，你可能还想试试Compleat Strategy yst：作为J.D.战略博弈理论的入门读本。“威廉姆斯与合作的演变”，罗伯特·阿克塞尔罗德著。
+對於博弈論，除了玩戰略遊戲之外，你可能還想試試Compleat Strategy yst：作為J.D.戰略博弈理論的入門讀本。「威廉姆斯與合作的演變」，羅伯特·阿克塞爾羅德著。
 
 Philosophy and Spirituality
-哲学与灵性
+哲學與靈性
 
 Everything by Jed McKenna
 
-杰德·麦肯纳(Jed McKenna)著的一切
+杰德·麥肯納(Jed McKenna)著的一切
 
 Jed spits raw truth. His style may be off -putting , but the dedication to truth is unparalleled. [79]
 
-杰德吐露了赤裸裸的真相。他的风格可能令人不快，但对真理的奉献是无与伦比的。
+杰德吐露了赤裸裸的真相。他的風格可能令人不快，但對真理的奉獻是無與倫比的。
 
 Theory of Everything (The Enlightened Perspective) - Dreamstate Trilogy
 
-万物理论(启蒙视角)--梦境三部曲
+萬物理論(啓蒙視角)--夢境三部曲
 
-Jed McKenna’s Notebook
-杰德·麦肯纳的笔记本
+Jed McKenna』s Notebook
+杰德·麥肯納的筆記本
 
 Jed Talks #1 and #2
-杰德谈话#1和#2
+杰德談話#1和#2
 
 Everything by Kapil Gupta, MD
-一切由医学博士卡皮尔·古普塔(Kapil Gupta)著
+一切由醫學博士卡皮爾·古普塔(Kapil Gupta)著
 
-Kapil recently became a personal advisor and coach to me, and this comes from a person who doesn’t believe in coaches. [79]
+Kapil recently became a personal advisor and coach to me, and this comes from a person who doesn』t believe in coaches. [79]
 
-卡皮尔最近成为我的私人顾问和教练，这来自一个不相信教练的人。
+卡皮爾最近成為我的私人顧問和教練，這來自一個不相信教練的人。
 
-A Master’s Secret Whispers: For those who abhor noise and seek The Truth…about life and living
-大师的秘密耳语：对于那些憎恶噪音和寻求真理的人来说，…关于生活和生活
+A Master』s Secret Whispers: For those who abhor noise and seek The Truth…about life and living
+大師的秘密耳語：對於那些憎惡噪音和尋求真理的人來說，…關於生活和生活
 Direct Truth: Uncompromising, non - prescriptive Truths to the enduring questions of life
-直接真相：对生命永恒问题的不妥协的、非规定性的真理
+直接真相：對生命永恒問題的不妥協的、非規定性的真理
 Atmamun: The Path to achieving the bliss of the Himalayan Swamis. And the freedom of a living God.
 
-阿特马蒙：通往喜马拉雅沼泽之乐的道路。和活生生的上帝的自由。
+阿特馬蒙：通往喜馬拉雅沼澤之樂的道路。和活生生的上帝的自由。
 
 The Book of Life by Jiddu Krishnamurti
-吉度·克里希那穆提的“生命之书”
+吉度·克里希那穆提的「生命之書」
 
 
-Krishnamurti is a lesser -known guy, an Indian philosopher who lived at the turn of the last century and is extremely influential to me. He’s an uncompromising, very direct person who basically tells you to look at your own mind at all times. I have been hugely influenced by him. Probably the best book is The Book of Life , which is excerpts from his various speeches and books stitched together. [6]
+Krishnamurti is a lesser -known guy, an Indian philosopher who lived at the turn of the last century and is extremely influential to me. He』s an uncompromising, very direct person who basically tells you to look at your own mind at all times. I have been hugely influenced by him. Probably the best book is The Book of Life , which is excerpts from his various speeches and books stitched together. [6]
 
-克里希那穆提是一个鲜为人知的人，他是一位生活在上个世纪之交的印度哲学家，对我影响极大。他是一个毫不妥协、非常直率的人，基本上告诉你要时刻关注自己的思想。我深受他的影响。也许最好的书是“生命之书”，它是从他的各种演讲和书籍中摘录出来的。
+克里希那穆提是一個鮮為人知的人，他是一位生活在上個世紀之交的印度哲學家，對我影響極大。他是一個毫不妥協、非常直率的人，基本上告訴你要時刻關注自己的思想。我深受他的影響。也許最好的書是「生命之書」，它是從他的各種演講和書籍中摘錄出來的。
 
-I’ll give my kids a copy of The Book of Life . I’ll tell them to save it until they’re older because it won’t make much sense while they’re younger. [8]
+I』ll give my kids a copy of The Book of Life . I』ll tell them to save it until they』re older because it won』t make much sense while they』re younger. [8]
 
-我会给我的孩子们一本“生命之书”。我会告诉他们把它留到他们大一点的时候，因为在他们年轻的时候这样做没有多大意义。
+我會給我的孩子們一本「生命之書」。我會告訴他們把它留到他們大一點的時候，因為在他們年輕的時候這樣做沒有多大意義。
 
 Total Freedom: The Essential Krishnamurti by Jiddu Krishnamurti
-完全自由：吉度·克里希那穆提的“克里希那穆提的本质”(The Essential Krishnamurti)
-I like this for someone who’s more advanced. A rationalist’s guide to the perils of the human mind. The “spiritual” book I keep returning to. [1]
+完全自由：吉度·克里希那穆提的「克里希那穆提的本質」(The Essential Krishnamurti)
+I like this for someone who』s more advanced. A rationalist』s guide to the perils of the human mind. The 「spiritual」 book I keep returning to. [1]
 
-我喜欢给更高级的人穿这个。理性主义者关于人类思想危险的指南。我一直在读的“精神”书。
+我喜歡給更高級的人穿這個。理性主義者關於人類思想危險的指南。我一直在讀的「精神」書。
 
 Siddhartha by Herman Hesse
-赫尔曼·黑塞的悉达多
-I love this as a classic book on philosophy, a good introduction for someone starting out. I’ve given out more copies of this book than any other. [1]
+赫爾曼·黑塞的悉達多
+I love this as a classic book on philosophy, a good introduction for someone starting out. I』ve given out more copies of this book than any other. [1]
 
-我喜欢这本关于哲学的经典书籍，这是一本很好的入门入门书。我分发的这本书比其他任何一本都多。
+我喜歡這本關於哲學的經典書籍，這是一本很好的入門入門書。我分發的這本書比其他任何一本都多。
 
-I’m pretty much always rereading something by either Krishnamurti or Osho. Those are my favorite philosophers. [4]
+I』m pretty much always rereading something by either Krishnamurti or Osho. Those are my favorite philosophers. [4]
 
-我几乎总是在重读克里希那穆提或奥修的作品。这些都是我最喜欢的哲学家。
+我幾乎總是在重讀克里希那穆提或奧修的作品。這些都是我最喜歡的哲學家。
 
-[Update: I’d now add Jed McKenna, Kapil Gupta, the Vashistha Yoga, and Schopenhauer to that list.]
+[Update: I』d now add Jed McKenna, Kapil Gupta, the Vashistha Yoga, and Schopenhauer to that list.]
 
-[更新：我现在要把杰德·麦肯纳、卡皮尔·古普塔、瓦希斯塔瑜伽和叔本华加入这个名单。]
+[更新：我現在要把杰德·麥肯納、卡皮爾·古普塔、瓦希斯塔瑜伽和叔本華加入這個名單。]
 
 The Book of Secrets: 112 Meditations to Discover the Mystery Within by Osho
-“秘密之书”(The Book Of Secrets)：奥修“112次发现内在奥秘的沉思”
+「秘密之書」(The Book Of Secrets)：奧修「112次發現內在奧秘的沉思」
 
 
-Most meditation techniques are concentration methods, and there are many, many meditation techniques. If you want to run through a bunch of them, you can pick up a book called The Book of Secrets by Osho. I know he’s gotten a bad rap recently, but he was a pretty smart guy. It’s actually a translation of an old Sanskrit book with 112 different meditations. You can try each one and see which one works for you. [74]
+Most meditation techniques are concentration methods, and there are many, many meditation techniques. If you want to run through a bunch of them, you can pick up a book called The Book of Secrets by Osho. I know he』s gotten a bad rap recently, but he was a pretty smart guy. It』s actually a translation of an old Sanskrit book with 112 different meditations. You can try each one and see which one works for you. [74]
 
-大多数冥想技巧都是集中注意力的方法，而且还有很多很多冥想技巧。如果你想浏览一大堆，你可以拿起一本由奥修写的名为“秘密之书”的书(The Book Of Secrets By Osho)。我知道他最近名声不好，但他是个相当聪明的人。它实际上是一本梵文旧书的译本，有112种不同的冥想。你可以尝试每一种，看看哪一种对你有效。“[74]
+大多數冥想技巧都是集中注意力的方法，而且還有很多很多冥想技巧。如果你想瀏覽一大堆，你可以拿起一本由奧修寫的名為「秘密之書」的書(The Book Of Secrets By Osho)。我知道他最近名聲不好，但他是個相當聰明的人。它實際上是一本梵文舊書的譯本，有112種不同的冥想。你可以嘗試每一種，看看哪一種對你有效。「[74]
 
 The Great Challenge: Exploring the World Within by Osho
-巨大的挑战：奥修的内心世界探索
+巨大的挑戰：奧修的內心世界探索
 The Way to Love: The Last Meditations of Anthony de Mello by Anthony de Mello
-爱情之路：“安东尼·德·梅洛的最后沉思”，安东尼·德·梅洛著
+愛情之路：「安東尼·德·梅洛的最後沉思」，安東尼·德·梅洛著
 The Untethered Soul: The Journey Beyond Yourself by Michael Singer
-自由的灵魂：迈克尔·辛格的“超越自己的旅程”
+自由的靈魂：邁克爾·辛格的「超越自己的旅程」
 
 Meditations by Marcus Aurelius
-“冥想”，马库斯·奥雷利厄斯著
+「冥想」，馬庫斯·奧雷利厄斯著
 
-Marcus Aurelius was absolutely life -changing for me. It’s the personal diary of the emperor of Rome. Here’s a guy who was probably the most powerful human being on Earth at the time he lived. He’s writing a diary to himself, never expecting it to be published. When you open this book, you realize he had all the same issues and all the same mental struggles; he was trying to be a better person. Right there, you figure out success and power don’t improve your internal state—you still have to work on it. [6]
+Marcus Aurelius was absolutely life -changing for me. It』s the personal diary of the emperor of Rome. Here』s a guy who was probably the most powerful human being on Earth at the time he lived. He』s writing a diary to himself, never expecting it to be published. When you open this book, you realize he had all the same issues and all the same mental struggles; he was trying to be a better person. Right there, you figure out success and power don』t improve your internal state—you still have to work on it. [6]
 
-马库斯·奥雷利厄斯绝对改变了我的生活。这是罗马皇帝的私人日记。这是一个在他活着的时候可能是地球上最强大的人的人。他在给自己写日记，没想到会发表。当你翻开这本书时，你会意识到他有所有相同的问题和所有相同的精神斗争；他试图成为一个更好的人。就在那里，你会发现成功和权力并不能改善你的内心状态--你仍然需要努力。
+馬庫斯·奧雷利厄斯絕對改變了我的生活。這是羅馬皇帝的私人日記。這是一個在他活著的時候可能是地球上最強大的人的人。他在給自己寫日記，沒想到會發表。當你翻開這本書時，你會意識到他有所有相同的問題和所有相同的精神鬥爭；他試圖成為一個更好的人。就在那裡，你會發現成功和權力並不能改善你的內心狀態--你仍然需要努力。
 
 Love Yourself Like Your Life Depends on It by Kamal Ravikant
-爱你自己，就像你的生命依赖于它一样卡迈勒·拉维康德
-I’ve actually been reading my brother’s book, Love Yourself Like Your Life Depends on It . I thought it was very succinctly written. (Obviously a plug for my bro.)
-事实上，我一直在读我哥哥的书“爱你自己，就像你的生命取决于它一样。”我觉得写得很简洁。(显然是我兄弟的插头。)
-He’s the philosopher in the family—I’m just the amateur. He has a great line in his book:
-他是家里的哲学家，我只是个业余爱好者。他在书中有一句很棒的台词：
+愛你自己，就像你的生命依賴於它一樣卡邁勒·拉維康德
+I』ve actually been reading my brother』s book, Love Yourself Like Your Life Depends on It . I thought it was very succinctly written. (Obviously a plug for my bro.)
+事實上，我一直在讀我哥哥的書「愛你自己，就像你的生命取決於它一樣。」我覺得寫得很簡潔。(顯然是我兄弟的插頭。)
+He』s the philosopher in the family—I』m just the amateur. He has a great line in his book:
+他是家裡的哲學家，我只是個業餘愛好者。他在書中有一句很棒的臺詞：
 I once asked a monk how he found peace.
 
-我曾经问过一位和尚，他是如何找到安宁的。
+我曾經問過一位和尚，他是如何找到安寧的。
 
-“I say ‘yes,’” he’d said. “To all that happens, I say ‘yes.’” [7]
+「I say 『yes,』」 he』d said. 「To all that happens, I say 『yes.』」 [7]
 
-“我说‘是’，”他说。“对于所有发生的事情，我说‘是’。”他[7]
+「我說『是』，」他說。「對於所有發生的事情，我說『是』。」他[7]
 
 The Tao of Seneca: Practical Letters from a Stoic Master
-塞涅卡之道：斯多葛学派大师的实用书信
-My most listened -to audiobook. The most important audiobook I’ve ever heard.
+塞涅卡之道：斯多葛學派大師的實用書信
+My most listened -to audiobook. The most important audiobook I』ve ever heard.
 
-我最喜欢听的有声读物。这是我听过的最重要的有声读物。
+我最喜歡聽的有聲讀物。這是我聽過的最重要的有聲讀物。
 
 How to Change Your Mind by Michael Pollan
-如何改变你的想法，迈克尔·波伦著
+如何改變你的想法，邁克爾·波倫著
 
-There’s a good book Michael Pollan wrote recently called How to Change Your Mind, and I think it is a brilliant book everybody should read.
+There』s a good book Michael Pollan wrote recently called How to Change Your Mind, and I think it is a brilliant book everybody should read.
 
-迈克尔·波伦最近写了一本很好的书，叫“如何改变你的想法”，我认为这是一本每个人都应该读的精彩的书。
+邁克爾·波倫最近寫了一本很好的書，叫「如何改變你的想法」，我認為這是一本每個人都應該讀的精彩的書。
 
-The book discusses psychedelics. Psychedelics are a bit of a cheat code in self -observation . I don’t recommend drugs for anybody—you can do it all through pure meditation. If you want to accelerate ahead, you know, psychedelics are good for that. [74]
+The book discusses psychedelics. Psychedelics are a bit of a cheat code in self -observation . I don』t recommend drugs for anybody—you can do it all through pure meditation. If you want to accelerate ahead, you know, psychedelics are good for that. [74]
 
-这本书讨论了迷幻药。迷幻剂在自我观察中有点作弊。我不建议任何人服用药物--你可以通过纯粹的冥想来做到这一点。如果你想加速前进，你知道，迷幻剂对此有好处。“[74]
+這本書討論了迷幻藥。迷幻劑在自我觀察中有點作弊。我不建議任何人服用藥物--你可以通過純粹的冥想來做到這一點。如果你想加速前進，你知道，迷幻劑對此有好處。「[74]
 
-Striking Thoughts: Bruce Lee’s Wisdom for Daily Living by Bruce Lee
-惊人的想法：李小龙的“日常生活智慧”
+Striking Thoughts: Bruce Lee』s Wisdom for Daily Living by Bruce Lee
+驚人的想法：李小龍的「日常生活智慧」
 
 Oddly enough, Bruce Lee wrote some great philosophy, and Striking Thoughts is a good summary of some of his philosophy.
 
-奇怪的是，李小龙写下了一些伟大的哲学，而引人注目的思想是对他的一些哲学的很好的总结。
+奇怪的是，李小龍寫下了一些偉大的哲學，而引人注目的思想是對他的一些哲學的很好的總結。
 
 The Prophet by Kahlil Gibran
-卡里尔·纪伯伦的“先知”
+卡里爾·紀伯倫的「先知」
 
-This book reads like a modern -day poetic religious tome. It’s up there with the Bhagavad Gita, the Tao Te Ching , the Bible, and the Qur’an. It is written in the style where it has a feel of religiosity and truth, but it was very approachable, beautiful, nondenominational, and nonsectarian. I loved this book.
+This book reads like a modern -day poetic religious tome. It』s up there with the Bhagavad Gita, the Tao Te Ching , the Bible, and the Qur』an. It is written in the style where it has a feel of religiosity and truth, but it was very approachable, beautiful, nondenominational, and nonsectarian. I loved this book.
 
-这本书读起来像是一部现代诗意的宗教巨著。上面有“博伽梵歌”、“道德经”、“圣经”和“古兰经”。它的写作风格有一种宗教感和真理感，但非常平易近人，很漂亮，没有教派，也没有宗派色彩。我喜欢这本书。
+這本書讀起來像是一部現代詩意的宗教巨著。上面有「博伽梵歌」、「道德經」、「聖經」和「古蘭經」。它的寫作風格有一種宗教感和真理感，但非常平易近人，很漂亮，沒有教派，也沒有宗派色彩。我喜歡這本書。
 
-He has a gift for poetically describing what children are like, what lovers are like, what marriage should be like, how you should treat your enemies and your friends, how you should work with money, what can you think of every time you have to kill something to eat it. I felt it, like the great religious books, gave a very deep, very philosophical, but very true answer to how to approach the major problems in life. I recommend The Prophet to anybody, whether you’re religious or not. Whether you are Christian, Hindu, Jewish, or atheist. I think it’s a beautiful book, and it’s worth reading. [7]
+He has a gift for poetically describing what children are like, what lovers are like, what marriage should be like, how you should treat your enemies and your friends, how you should work with money, what can you think of every time you have to kill something to eat it. I felt it, like the great religious books, gave a very deep, very philosophical, but very true answer to how to approach the major problems in life. I recommend The Prophet to anybody, whether you』re religious or not. Whether you are Christian, Hindu, Jewish, or atheist. I think it』s a beautiful book, and it』s worth reading. [7]
 
-他有一种诗意地描述孩子是什么样子，情人是什么样子，婚姻应该是什么样子，你应该如何对待你的敌人和朋友，你应该如何与金钱打交道，每次你不得不杀了什么东西吃的时候，你能想到什么。我觉得，就像伟大的宗教书籍一样，它对如何处理生活中的主要问题给出了非常深刻、非常有哲理但非常真实的答案。我向任何人推荐先知，不管你是否信教。无论你是基督徒、印度教徒、犹太人还是无神论者。我认为这是一本漂亮的书，值得一读。
+他有一種詩意地描述孩子是什麼樣子，情人是什麼樣子，婚姻應該是什麼樣子，你應該如何對待你的敵人和朋友，你應該如何與金錢打交道，每次你不得不殺了什麼東西吃的時候，你能想到什麼。我覺得，就像偉大的宗教書籍一樣，它對如何處理生活中的主要問題給出了非常深刻、非常有哲理但非常真實的答案。我向任何人推薦先知，不管你是否信教。無論你是基督徒、印度教徒、猶太人還是無神論者。我認為這是一本漂亮的書，值得一讀。
 
 Science Fiction
-科幻小说
+科幻小說
 I started with comic books and sci -fi . Then I was into history and news. Then into psychology, popular science, technology.
 
-我从漫画和科幻开始。然后我进入了历史和新闻领域。然后进入心理学，科普，技术。
+我從漫畫和科幻開始。然後我進入了歷史和新聞領域。然後進入心理學，科普，技術。
 
 Ficciones by Jorge Luis Borges
-“菲西奥内斯”，豪尔赫·路易斯·博尔赫斯著
+「菲西奧內斯」，豪爾赫·路易斯·博爾赫斯著
 
-I love Jorge Luis Borges, an Argentine author. His short story collection Ficciones , or Labyrinths , is amazing. Borges is probably still the most powerful author I have read who wasn’t just outright writing philosophy. There was philosophy in there with the sci -fi . [1]
+I love Jorge Luis Borges, an Argentine author. His short story collection Ficciones , or Labyrinths , is amazing. Borges is probably still the most powerful author I have read who wasn』t just outright writing philosophy. There was philosophy in there with the sci -fi . [1]
 
-我喜欢阿根廷作家豪尔赫·路易斯·博尔赫斯(Jorge Luis Borges)。他的短篇小说集Ficciones，或称迷宫，令人惊叹。博尔赫斯可能仍然是我读过的最有影响力的作家，他不仅仅是直截了当的写作哲学。科幻小说中蕴含着哲理。
+我喜歡阿根廷作家豪爾赫·路易斯·博爾赫斯(Jorge Luis Borges)。他的短篇小說集Ficciones，或稱迷宮，令人驚歎。博爾赫斯可能仍然是我讀過的最有影響力的作家，他不僅僅是直截了當的寫作哲學。科幻小說中蘊含著哲理。
 
 Stories of Your Life and Others by Ted Chiang
-“你的生活和其他人的故事”，作者：泰德·蒋
+「你的生活和其他人的故事」，作者：泰德·蔣
 
-My current favorite sci -fi short story: probably “Understand” by Ted Chiang. It’s in a collection called Stories of Your Life and Others . “Story of Your Life” was made into a movie called Arrival . [1]
+My current favorite sci -fi short story: probably 「Understand」 by Ted Chiang. It』s in a collection called Stories of Your Life and Others . 「Story of Your Life」 was made into a movie called Arrival . [1]
 
-我现在最喜欢的科幻短篇小说：可能是泰德·蒋介石的“理解”。它在一本名为“你的生活和其他人的故事”的文集中。“你的生活的故事”被拍成了一部名为“降临”的电影。
+我現在最喜歡的科幻短篇小說：可能是泰德·蔣介石的「理解」。它在一本名為「你的生活和其他人的故事」的文集中。「你的生活的故事」被拍成了一部名為「降臨」的電影。
 
 Exhalation: Stories by Ted Chiang
-呼气：故事作者：泰德·蒋
+呼氣：故事作者：泰德·蔣
 This contemplates the marvel of thermodynamics from the best sci -fi short story writer of our age.
 
-这是我们这个时代最好的科幻短篇小说作家对热力学的惊叹。
+這是我們這個時代最好的科幻短篇小說作家對熱力學的驚歎。
 
 The Lifecycle of Software Objects by Ted Chiang
-“软件对象的生命周期”(泰德·蒋著)
+「軟體對象的生命週期」(泰德·蔣著)
 Another masterpiece of sci -fi by Ted Chiang.
 
-蒋介石的另一部科幻巨作。
+蔣介石的另一部科幻巨作。
 
 Snow Crash by Neal Stephenson
-尼尔·斯蒂芬森著的“雪崩”
+尼爾·斯蒂芬森著的「雪崩」
 
 
-Snow Crash is an amazing, amazing book. There’s nothing quite similar to Snow Crash . Snow Crash is in a league of its own. Stephenson also wrote The Diamond Age.
+Snow Crash is an amazing, amazing book. There』s nothing quite similar to Snow Crash . Snow Crash is in a league of its own. Stephenson also wrote The Diamond Age.
 
-“雪崩”是一本令人惊叹、令人惊叹的书。没有什么比得上“雪崩”了。“雪崩”是独一无二的。斯蒂芬森还写了“钻石时代”。
+「雪崩」是一本令人驚歎、令人驚歎的書。沒有什麼比得上「雪崩」了。「雪崩」是獨一無二的。斯蒂芬森還寫了「鑽石時代」。
 
-“The Last Question,” a short story by Isaac Asimov
-“最后一个问题”，艾萨克·阿西莫夫的短篇小说
-I quote “The Last Question” all the time. I loved it as a kid.
+「The Last Question,」 a short story by Isaac Asimov
+「最後一個問題」，艾薩克·阿西莫夫的短篇小說
+I quote 「The Last Question」 all the time. I loved it as a kid.
 
-我总是引用“最后一个问题”。我从小就喜欢它。
+我總是引用「最後一個問題」。我從小就喜歡它。
 
-What are the books you’re rereading now?
-你现在重读的是哪些书？
-That’s a good question. I’ll pull up my Kindle app as we talk. Usually, I’m always rereading some books in science.
+What are the books you』re rereading now?
+你現在重讀的是哪些書？
+That』s a good question. I』ll pull up my Kindle app as we talk. Usually, I』m always rereading some books in science.
 
-这是个好问题。我们聊天时，我会打开我的Kindle应用程序。通常，我总是重读一些理科书籍。
+這是個好問題。我們聊天時，我會打開我的Kindle應用程式。通常，我總是重讀一些理科書籍。
 
-I’m reading a book on René Girard’s mimetic theory. It’s more of an overview book, because I couldn’t make it through his actual writings. I’m reading Tools of Titans , Tim Ferriss’s book of what he learned from a lot of great performers.
+I』m reading a book on René Girard』s mimetic theory. It』s more of an overview book, because I couldn』t make it through his actual writings. I』m reading Tools of Titans , Tim Ferriss』s book of what he learned from a lot of great performers.
 
-我正在读一本关于勒内·吉拉德的模仿理论的书。这更像是一本概括性的书，因为我看不懂他的实际作品。我正在读蒂姆·费里斯的书“泰坦的工具”，这本书讲述了他从许多伟大的表演者那里学到了什么。
+我正在讀一本關於勒內·吉拉德的模仿理論的書。這更像是一本概括性的書，因為我看不懂他的實際作品。我正在讀蒂姆·費里斯的書「泰坦的工具」，這本書講述了他從許多偉大的表演者那裡學到了什麼。
 
-I’m reading a book, Thermoinfocomplexity . It’s actually by a friend of mine, Behzad Mohit. I just finished reading Pre - Suasion : A Revolutionary Way to Influence and Persuade , or I should say I just finished skimming Pre - Suasion by Robert Cialdini. I don’t think I needed to read the entire book to get the point, but it was still good to read what I did. It’s a great little history book. I’m currently reading The Story of Philosophy: The Lives and Opinions of the Great Philosophers , also by Will Durant.
+I』m reading a book, Thermoinfocomplexity . It』s actually by a friend of mine, Behzad Mohit. I just finished reading Pre - Suasion : A Revolutionary Way to Influence and Persuade , or I should say I just finished skimming Pre - Suasion by Robert Cialdini. I don』t think I needed to read the entire book to get the point, but it was still good to read what I did. It』s a great little history book. I』m currently reading The Story of Philosophy: The Lives and Opinions of the Great Philosophers , also by Will Durant.
 
-我在读一本书，“热信息复杂性”。实际上是我的一个朋友贝扎德·莫希特写的。我刚看完预告：一种影响和说服的革命性方式，或者我应该说，我刚刚读完了罗伯特·恰尔迪尼(Robert Cialdini)的“预先劝说”。我不认为我需要读完整本书才能明白这一点，但读一读我所做的事情仍然很好。这是一本很棒的小历史书。我现在正在读“哲学的故事”：“伟大哲学家的生平和观点”，也是威尔·杜兰特著。
+我在讀一本書，「熱資訊複雜性」。實際上是我的一個朋友貝扎德·莫希特寫的。我剛看完預告：一種影響和說服的革命性方式，或者我應該說，我剛剛讀完了羅伯特·恰爾迪尼(Robert Cialdini)的「預先勸說」。我不認為我需要讀完整本書才能明白這一點，但讀一讀我所做的事情仍然很好。這是一本很棒的小歷史書。我現在正在讀「哲學的故事」：「偉大哲學家的生平和觀點」，也是威爾·杜蘭特著。
 
-I have a young kid now, so I’ve got a lot of child -rearing books I use more as reference material than anything else. I recently read some Emerson and some Chesterfield. I have a Leo Tolstoy book here.
+I have a young kid now, so I』ve got a lot of child -rearing books I use more as reference material than anything else. I recently read some Emerson and some Chesterfield. I have a Leo Tolstoy book here.
 
-我现在有一个年幼的孩子，所以我有很多育儿书籍，我更多地把它作为参考资料。我最近读了一些爱默生的书和一些切斯特菲尔德的书。我这里有一本列夫·托尔斯泰的书。
+我現在有一個年幼的孩子，所以我有很多育兒書籍，我更多地把它作為參考資料。我最近讀了一些愛默生的書和一些切斯特菲爾德的書。我這裡有一本列夫·托爾斯泰的書。
 
-Alan Watts. Scott Adams. I reread God’s Debris recently. Tao Te Ching , a friend of mine is rereading it, so I picked it up again. There’s tons. I mean, I could go on and on. There’s Nietzsche’s book here. There’s The Undercover Economist  [Tim Harford]. The Richard Bach book [Illusions: The Adventures of a Reluctant Messiah ]. There are some Jed McKenna books.
+Alan Watts. Scott Adams. I reread God』s Debris recently. Tao Te Ching , a friend of mine is rereading it, so I picked it up again. There』s tons. I mean, I could go on and on. There』s Nietzsche』s book here. There』s The Undercover Economist  [Tim Harford]. The Richard Bach book [Illusions: The Adventures of a Reluctant Messiah ]. There are some Jed McKenna books.
 
-艾伦·瓦茨。斯科特·亚当斯。我最近重读了“上帝的碎片”。“道德经”，我的一个朋友正在重读，所以我又把它捡了起来。有好多呢。我是说，我可以说个不停。这里有尼采的书。还有卧底经济学家蒂姆·哈福德(Tim Harford)。理查德·巴赫的书[幻觉：不情愿的弥赛亚历险记]。有一些杰德·麦肯纳的书。
+艾倫·瓦茨。斯科特·亞當斯。我最近重讀了「上帝的碎片」。「道德經」，我的一個朋友正在重讀，所以我又把它撿了起來。有好多呢。我是說，我可以說個不停。這裡有尼采的書。還有臥底經濟學家蒂姆·哈福德(Tim Harford)。理查德·巴赫的書[幻覺：不情願的彌賽亞歷險記]。有一些杰德·麥肯納的書。
 
-A little Dale Carnegie in here. The Three - Body Problem  [Cixin Liu]. Man’s Search for Meaning  [Viktor E. Frankl]. There’s lots. Sex at Dawn  [Christopher Ryan]. There’s a lot of books out there.
+A little Dale Carnegie in here. The Three - Body Problem  [Cixin Liu]. Man』s Search for Meaning  [Viktor E. Frankl]. There』s lots. Sex at Dawn  [Christopher Ryan]. There』s a lot of books out there.
 
-有点戴尔·卡内基的味道。三体问题：[刘慈欣]。人类对意义的追寻[维克多·E·弗兰克尔]。这里有很多。黎明时分的性爱[克里斯托弗·瑞安]。外面有很多书。
+有點戴爾·卡內基的味道。三體問題：[劉慈欣]。人類對意義的追尋[維克多·E·弗蘭克爾]。這裡有很多。黎明時分的性愛[克里斯托弗·瑞安]。外面有很多書。
 
-By the way, when I tell people what I’m reading, I skip two -thirds of my books. The reason I skip two -thirds is because they’re embarrassing. They don’t sound like good books to read. They’ll sound trivial or silly. Who cares? I don’t have to tell everybody everything I read. I read all kinds of stuff other people consider junk or even reprehensible. I read all kinds of stuff I disagree with because they’re mind -bending . [4]
+By the way, when I tell people what I』m reading, I skip two -thirds of my books. The reason I skip two -thirds is because they』re embarrassing. They don』t sound like good books to read. They』ll sound trivial or silly. Who cares? I don』t have to tell everybody everything I read. I read all kinds of stuff other people consider junk or even reprehensible. I read all kinds of stuff I disagree with because they』re mind -bending . [4]
 
-顺便说一下，当我告诉别人我在读什么时，我会跳过三分之二的书。我跳过三分之二的原因是因为它们让人难堪。它们听起来不像是可以读的好书。他们会听起来琐碎或愚蠢。谁在乎啊？我不需要把我读到的每件事都告诉每个人。我读了所有其他人认为是垃圾甚至应该受到谴责的东西。我读了所有我不同意的东西，因为它们让人神魂颠倒。
+順便說一下，當我告訴別人我在讀什麼時，我會跳過三分之二的書。我跳過三分之二的原因是因為它們讓人難堪。它們聽起來不像是可以讀的好書。他們會聽起來瑣碎或愚蠢。誰在乎啊？我不需要把我讀到的每件事都告訴每個人。我讀了所有其他人認為是垃圾甚至應該受到譴責的東西。我讀了所有我不同意的東西，因為它們讓人神魂顛倒。
 
-I always spent money on books. I never viewed that as an expense. That’s an investment to me. [4]
+I always spent money on books. I never viewed that as an expense. That』s an investment to me. [4]
 
-我总是花钱买书。我从来不认为这是一笔开销。这对我来说是一项投资。
+我總是花錢買書。我從來不認為這是一筆開銷。這對我來說是一項投資。
