--- a/2-26.md
+++ b/2-26.md
@@ -1,41 +1,41 @@
 
 ## Other Recommendations
 
-其他建议
+其他建議
 Twitter accounts like:
-Twitter账号如下：
+Twitter賬號如下：
 @AmuseChimp (my all -time favorite Twitter account)
-@AmuseChimp(我一直以来最喜欢的Twitter账号)
+@AmuseChimp(我一直以來最喜歡的Twitter賬號)
 @mmay3r
 @mmay3r
 @nntaleb
 @nntaleb
 Art De Vany (on Facebook)
-艺术·德·瓦尼(在Facebook上)
+藝術·德·瓦尼(在Facebook上)
 Genius is here, just unevenly distributed. [4]
 
-天才就在这里，只是分布不均。
+天才就在這裡，只是分佈不均。
 
-Must -read . (Twitter thread on “intellectual compounding ” by @zaoyang). [11]
+Must -read . (Twitter thread on 「intellectual compounding 」 by @zaoyang). [11]
 
-必读的书。(推特上@枣阳的“智力复合”帖子)。[11]
+必讀的書。(推特上@棗陽的「智力複合」帖子)。[11]
 
-There are actually some really good graphic novels out there. If you’re open to the cartoony element of it, Transmetropolitan  [Warren Ellis], The Boys  [Garth Ennis], Planetary  [Warren Ellis], and The Sandman  [Neil Gaiman]…some of these are, I think, among the finest works of art of our age. I also grew up as a boy reading comics, so I may be very biased toward those. [1]
+There are actually some really good graphic novels out there. If you』re open to the cartoony element of it, Transmetropolitan  [Warren Ellis], The Boys  [Garth Ennis], Planetary  [Warren Ellis], and The Sandman  [Neil Gaiman]…some of these are, I think, among the finest works of art of our age. I also grew up as a boy reading comics, so I may be very biased toward those. [1]
 
-事实上，市面上确实有一些非常好的漫画小说。如果你对其中的卡通元素持开放态度，跨大都会乐队[沃伦·埃利斯]，男孩乐队[加思·恩尼斯]，行星乐队[沃伦·埃利斯]，以及沙人乐队[尼尔·盖曼]…我认为，其中一些是我们这个时代最好的艺术品之一。我从小也是看漫画长大的，所以我可能对漫画有很大的偏见。
+事實上，市面上確實有一些非常好的漫畫小說。如果你對其中的卡通元素持開放態度，跨大都會樂隊[沃倫·埃利斯]，男孩樂隊[加思·恩尼斯]，行星樂隊[沃倫·埃利斯]，以及沙人樂隊[尼爾·蓋曼]…我認為，其中一些是我們這個時代最好的藝術品之一。我從小也是看漫畫長大的，所以我可能對漫畫有很大的偏見。
 
 Rick and Morty (TV show + comic book)
-“里克和莫蒂”(电视剧+漫画)
-Rick and Morty is the best show on television (IMHO, of course). Just watch the first episode—that’s all it takes. It’s Back to the Future meets The Hitchhiker’s Guide to the Galaxy .
+「里克和莫蒂」(電視劇+漫畫)
+Rick and Morty is the best show on television (IMHO, of course). Just watch the first episode—that』s all it takes. It』s Back to the Future meets The Hitchhiker』s Guide to the Galaxy .
 
-“里克和莫蒂”是电视上最好的节目(当然是IMHO)。只要看第一集就行了--这就够了。“回到未来”与“银河系漫游指南”相遇。
+「里克和莫蒂」是電視上最好的節目(當然是IMHO)。只要看第一集就行了--這就夠了。「回到未來」與「銀河系漫遊指南」相遇。
 
 The Rick and Morty comic [by Zac Gorman] is just as clever as the show.
 
-[扎克·戈尔曼(Zac Gorman)]创作的里克和莫蒂(Rick And Morty)漫画和这部剧一样聪明。
+[扎克·戈爾曼(Zac Gorman)]創作的里克和莫蒂(Rick And Morty)漫畫和這部劇一樣聰明。
 
-“ You and Your Research ” by Richard Hamming
-理查德·汉明的“你和你的研究”(You And Your Research)
-A beautiful essay, I highly recommend reading it. It’s ostensibly written for people who are in scientific research, but I think it applies across the board. It’s just an old -timer essay on how to do great work. It reminds me of much of what Richard Feynman used to say, although I think Hamming has put it more eloquently than almost anywhere else I’ve seen. [74]
+「 You and Your Research 」 by Richard Hamming
+理查德·漢明的「你和你的研究」(You And Your Research)
+A beautiful essay, I highly recommend reading it. It』s ostensibly written for people who are in scientific research, but I think it applies across the board. It』s just an old -timer essay on how to do great work. It reminds me of much of what Richard Feynman used to say, although I think Hamming has put it more eloquently than almost anywhere else I』ve seen. [74]
 
-一篇漂亮的文章，我强烈推荐你读一读。它表面上是为从事科学研究的人写的，但我认为它适用于所有人。这只是一篇关于如何做好工作的老掉牙的文章。这让我想起了理查德·费曼(Richard Feynman)过去常说的话，尽管我认为汉明比我见过的几乎任何其他地方都更有说服力。
+一篇漂亮的文章，我強烈推薦你讀一讀。它表面上是為從事科學研究的人寫的，但我認為它適用於所有人。這只是一篇關於如何做好工作的老掉牙的文章。這讓我想起了理查德·費曼(Richard Feynman)過去常說的話，儘管我認為漢明比我見過的幾乎任何其他地方都更有說服力。
