--- a/2-28.md
+++ b/2-28.md
@@ -1,42 +1,42 @@
 # Next on Naval
 
-纳瓦尔下一站
+納瓦爾下一站
 
-If you loved this book, there are many ways to dive deeper into Naval. I am publishing “Navalmanack” shorts on Navalmanack.com . These are sections that were edited out of the original (enormous) manuscript of this book. I’ve published them online for those interested in Naval’s more specific insights on:
+If you loved this book, there are many ways to dive deeper into Naval. I am publishing 「Navalmanack」 shorts on Navalmanack.com . These are sections that were edited out of the original (enormous) manuscript of this book. I』ve published them online for those interested in Naval』s more specific insights on:
 
-如果你喜欢这本书，有很多方法可以更深入地了解纳瓦尔。我要在Navalmanack.com上发布“Navalmanack”短片。这些部分是从这本书的原始(巨幅)手稿中编辑出来的。我已经在网上为那些对纳瓦尔在以下方面的更具体见解感兴趣的人发布了这些文章：
+如果你喜歡這本書，有很多方法可以更深入地瞭解納瓦爾。我要在Navalmanack.com上發佈「Navalmanack」短片。這些部分是從這本書的原始(巨幅)手稿中編輯出來的。我已經在網上為那些對納瓦爾在以下方面的更具體見解感興趣的人發佈了這些文章：
 * Education
 * 教育
 * The Story of AngelList
-* 《天使清单的故事》(The Story Of AngelList)
+* 《天使清單的故事》(The Story Of AngelList)
 * Investing
-* 投资
+* 投資
 * Startups
-* 创业型企业
+* 創業型企業
 * Crypto
-* 密码学
+* 密碼學
 * Relationships
-* 两性关系
+* 兩性關係
 Naval continues to create and share great insights:
-纳瓦尔继续创造和分享伟大的见解：
+納瓦爾繼續創造和分享偉大的見解：
 * On Twitter: Twitter.com/Naval
 * 在Twitter上：Twitter.com/Naval
 * On his podcast: Naval
-* 在他的播客上：纳瓦尔
+* 在他的播客上：納瓦爾
 * On his website: https://nav.al/
-* 在他的网站上：https://nav.al/
-The most popular of Naval’s material at the time of writing:
-在撰写本文时，纳瓦尔最受欢迎的材料是：
+* 在他的網站上：https://nav.al/
+The most popular of Naval』s material at the time of writing:
+在撰寫本文時，納瓦爾最受歡迎的材料是：
 * Naval podcast episodes compilation:How to Get Rich
-* 纳瓦尔播客集锦：如何致富
+* 納瓦爾播客集錦：如何致富
 * Interview on The Knowledge Project
-* 关于“知识工程”的访谈
+* 關於「知識工程」的訪談
 * Interview on Joe Rogan Podcast
-* 乔·罗根播客专访
-Readwise.io has generously created a collection of excerpts of this book, available through Readwise.io/naval . You will receive a weekly email with key excerpts from this book to keep the concepts top -of -mind long after you’ve finished reading.
+* 喬·羅根播客專訪
+Readwise.io has generously created a collection of excerpts of this book, available through Readwise.io/naval . You will receive a weekly email with key excerpts from this book to keep the concepts top -of -mind long after you』ve finished reading.
 
-Io已经慷慨地创建了这本书的摘录集，可通过Readwise.io/Naval获取。你每周会收到一封电子邮件，里面有这本书的主要摘录，让你在读完之后很长一段时间里都能把这些概念放在首位。
+Io已經慷慨地建立了這本書的摘錄集，可通過Readwise.io/Naval獲取。你每週會收到一封電子郵件，裡面有這本書的主要摘錄，讓你在讀完之後很長一段時間裡都能把這些概念放在首位。
 
-If you love the illustrations by Jack Butcher, you can find more of his illustrations of Naval’s ideas on Navalmanack.com and more of his work at VisualizeValue.com .
+If you love the illustrations by Jack Butcher, you can find more of his illustrations of Naval』s ideas on Navalmanack.com and more of his work at VisualizeValue.com .
 
-如果你喜欢杰克·布彻的插图，你可以在Navalmanack.com上找到更多他对纳瓦尔思想的插图，在VisualizeValue.com上找到更多他的作品。
+如果你喜歡傑克·布徹的插圖，你可以在Navalmanack.com上找到更多他對納瓦爾思想的插圖，在VisualizeValue.com上找到更多他的作品。
