--- a/2-8.md
+++ b/2-8.md
@@ -1,47 +1,47 @@
 # Envy Is the Enemy of Happiness
 
-嫉妒是幸福的敌人
+嫉妒是幸福的敵人
 
-I don’t think life is that hard. I think we make it hard. One of the things I’m trying to get rid of is the word “should.” Whenever the word “should” creeps up in your mind, it’s guilt or social programming. Doing something because you “should” basically means you don’t actually want to do it. It’s just making you miserable, so I’m trying to eliminate as many “shoulds” from my life as possible. [1]
+I don』t think life is that hard. I think we make it hard. One of the things I』m trying to get rid of is the word 「should.」 Whenever the word 「should」 creeps up in your mind, it』s guilt or social programming. Doing something because you 「should」 basically means you don』t actually want to do it. It』s just making you miserable, so I』m trying to eliminate as many 「shoulds」 from my life as possible. [1]
 
-我不认为生活有那么难。我想我们让事情变得困难了。我想要摆脱的一件事是“应该”这个词。每当“应该”这个词悄悄出现在你的脑海中时，它就是内疚或社交程序。因为你“应该”而做某事基本上意味着你实际上并不想去做。这只会让你很痛苦，所以我试图从我的生活中尽可能多地剔除“应该”。
+我不認為生活有那麼難。我想我們讓事情變得困難了。我想要擺脫的一件事是「應該」這個詞。每當「應該」這個詞悄悄出現在你的腦海中時，它就是內疚或社交程式。因為你「應該」而做某事基本上意味著你實際上並不想去做。這隻會讓你很痛苦，所以我試圖從我的生活中儘可能多地剔除「應該」。
 
 The enemy of peace of mind is expectations drilled into you by society and other people.
 
-心灵安宁的敌人是社会和其他人灌输给你的期望。
+心靈安寧的敵人是社會和其他人灌輸給你的期望。
 
-Socially, we’re told, “Go work out. Go look good.” That’s a multi -player competitive game. Other people can see if I’m doing a good job or not. We’re told, “Go make money. Go buy a big house.” Again, external multiplayer competitive game. Training yourself to be happy is completely internal. There is no external progress, no external validation. You’re competing against yourself—it is a single -player game.
+Socially, we』re told, 「Go work out. Go look good.」 That』s a multi -player competitive game. Other people can see if I』m doing a good job or not. We』re told, 「Go make money. Go buy a big house.」 Again, external multiplayer competitive game. Training yourself to be happy is completely internal. There is no external progress, no external validation. You』re competing against yourself—it is a single -player game.
 
-在社交方面，我们被告知，“去锻炼吧。好好打扮一下吧。“这是一个多人竞争的游戏。其他人可以看到我做得好不好。我们被告知，“去赚钱吧。去买一栋大房子吧。“再说一遍，外部多人竞技游戏。训练自己快乐完全是内在的。没有外部进展，没有外部验证。你在和你自己竞争--这是一场单人游戏。
+在社交方面，我們被告知，「去鍛鍊吧。好好打扮一下吧。「這是一個多人競爭的遊戲。其他人可以看到我做得好不好。我們被告知，「去賺錢吧。去買一棟大房子吧。「再說一遍，外部多人競技遊戲。訓練自己快樂完全是內在的。沒有外部進展，沒有外部驗證。你在和你自己競爭--這是一場單人遊戲。
 
-We’re like bees or ants. We are such social creatures, we’re externally programmed and driven. We don’t know how to play and win these single -player games anymore. We compete purely in multiplayer games.
+We』re like bees or ants. We are such social creatures, we』re externally programmed and driven. We don』t know how to play and win these single -player games anymore. We compete purely in multiplayer games.
 
-我们就像蜜蜂或蚂蚁。我们是这样的社会性生物，我们被外部编程和驱使。我们再也不知道如何玩和赢得这些单人游戏了。我们纯粹是在多人游戏中竞争。
+我們就像蜜蜂或螞蟻。我們是這樣的社會性生物，我們被外部程式設計和驅使。我們再也不知道如何玩和贏得這些單人遊戲了。我們純粹是在多人遊戲中競爭。
 
-The reality is life is a single -player game. You’re born alone. You’re going to die alone. All of your interpretations are alone. All your memories are alone. You’re gone in three generations, and nobody cares. Before you showed up, nobody cared. It’s all single player.
+The reality is life is a single -player game. You』re born alone. You』re going to die alone. All of your interpretations are alone. All your memories are alone. You』re gone in three generations, and nobody cares. Before you showed up, nobody cared. It』s all single player.
 
-现实是，生活是一场单人游戏。你生来就是孤身一人。你会孤身一人死去。你所有的解释都是单独的。你所有的记忆都是孤独的。再过三代你就走了，没人在乎。在你出现之前，没人在乎。都是单人游戏。
+現實是，生活是一場單人遊戲。你生來就是孤身一人。你會孤身一人死去。你所有的解釋都是單獨的。你所有的記憶都是孤獨的。再過三代你就走了，沒人在乎。在你出現之前，沒人在乎。都是單人遊戲。
 
 Perhaps one reason why yoga and meditation are hard to sustain is they have no extrinsic value. Purely single -player games.
 
-也许瑜伽和冥想难以持续的原因之一是它们没有外在价值。纯粹的单人游戏。
+也許瑜伽和冥想難以持續的原因之一是它們沒有外在價值。純粹的單人遊戲。
 
-Buffett has a great example when he asks if you want to be the world’s best lover and known as the worst, or the world’s worst lover and known as the best? [paraphrased] in reference to an inner or external scorecard.
+Buffett has a great example when he asks if you want to be the world』s best lover and known as the worst, or the world』s worst lover and known as the best? [paraphrased] in reference to an inner or external scorecard.
 
-巴菲特有一个很好的例子，当他问你是想成为世界上最好的情人，被称为最糟糕的，还是世界上最糟糕的情人，被称为最好的？[释义]指的是内部或外部记分卡。
+巴菲特有一個很好的例子，當他問你是想成為世界上最好的情人，被稱為最糟糕的，還是世界上最糟糕的情人，被稱為最好的？[釋義]指的是內部或外部記分卡。
 
 Exactly right. All the real scorecards are internal.
 
-完全正确。所有真正的记分卡都是内部的。
+完全正確。所有真正的記分卡都是內部的。
 
-Jealousy was a very hard emotion for me to overcome. When I was young, I had a lot of jealousy. By and by, I learned to get rid of it. It still crops up every now and then. It’s such a poisonous emotion because, at the end of the day, you’re no better off with jealousy. You’re unhappier, and the person you’re jealous of is still successful or good -looking or whatever they are.
+Jealousy was a very hard emotion for me to overcome. When I was young, I had a lot of jealousy. By and by, I learned to get rid of it. It still crops up every now and then. It』s such a poisonous emotion because, at the end of the day, you』re no better off with jealousy. You』re unhappier, and the person you』re jealous of is still successful or good -looking or whatever they are.
 
-嫉妒对我来说是一种很难克服的情绪。当我年轻的时候，我有很多嫉妒。渐渐地，我学会了摆脱它。它仍然时不时地冒出来。这是一种非常有害的情绪，因为在一天结束的时候，嫉妒并不会让你过得更好。你变得更不快乐了，而你嫉妒的那个人仍然是成功的或者英俊的，或者不管他们是什么。
+嫉妒對我來說是一種很難克服的情緒。當我年輕的時候，我有很多嫉妒。漸漸地，我學會了擺脫它。它仍然時不時地冒出來。這是一種非常有害的情緒，因為在一天結束的時候，嫉妒並不會讓你過得更好。你變得更不快樂了，而你嫉妒的那個人仍然是成功的或者英俊的，或者不管他們是什麼。
 
-One day, I realized with all these people I was jealous of, I couldn’t just choose little aspects of their life. I couldn’t say I want his body, I want her money, I want his personality. You have to be that person. Do you want to actually be that person with all of their reactions, their desires, their family, their happiness level, their outlook on life, their self -image ? If you’re not willing to do a wholesale, 24/7, 100 percent swap with who that person is, then there is no point in being jealous.
+One day, I realized with all these people I was jealous of, I couldn』t just choose little aspects of their life. I couldn』t say I want his body, I want her money, I want his personality. You have to be that person. Do you want to actually be that person with all of their reactions, their desires, their family, their happiness level, their outlook on life, their self -image ? If you』re not willing to do a wholesale, 24/7, 100 percent swap with who that person is, then there is no point in being jealous.
 
-有一天，我意识到，和所有这些我嫉妒的人在一起，我不能只选择他们生活中的一些小方面。我不能说我想要他的身体，我想要她的钱，我想要他的个性。你必须成为那个人。你真的想成为那个拥有他们所有的反应，他们的欲望，他们的家庭，他们的幸福水平，他们的人生观，他们的自我形象的人吗？如果你不愿意全天候、百分之百地与那个人交换，那么嫉妒是没有意义的。
+有一天，我意識到，和所有這些我嫉妒的人在一起，我不能只選擇他們生活中的一些小方面。我不能說我想要他的身體，我想要她的錢，我想要他的個性。你必須成為那個人。你真的想成為那個擁有他們所有的反應，他們的慾望，他們的家庭，他們的幸福水平，他們的人生觀，他們的自我形象的人嗎？如果你不願意全天候、百分之百地與那個人交換，那麼嫉妒是沒有意義的。
 
-Once I came to that realization, jealousy faded away because I don’t want to be anybody else. I’m perfectly happy being me. By the way, even that is under my control. To be happy being me. It’s just there are no social rewards for it. [4]
-一旦我意识到这一点，嫉妒就消失了，因为我不想成为其他任何人。我非常乐意做我自己。顺便说一下，就连那也在我的控制之下。快乐地做我自己。这只是因为它没有社会回报。“[4]
+Once I came to that realization, jealousy faded away because I don』t want to be anybody else. I』m perfectly happy being me. By the way, even that is under my control. To be happy being me. It』s just there are no social rewards for it. [4]
+一旦我意識到這一點，嫉妒就消失了，因為我不想成為其他任何人。我非常樂意做我自己。順便說一下，就連那也在我的控制之下。快樂地做我自己。這只是因為它沒有社會回報。「[4]
 H
