--- a/1-10.md
+++ b/1-10.md
@@ -1,148 +1,148 @@
 # Find Work That Feels Like Play
 
-找一份感觉像是娱乐的工作
+找一份感覺像是娛樂的工作
 
-Humans evolved as hunters and gatherers where we all worked for ourselves. It’s only at the beginning of agriculture we became more hierarchical. The Industrial Revolution and factories made us extremely hierarchical because one individual couldn’t necessarily own or build a factory, but now, thanks to the internet, we’re going back to an age where more and more people can work for themselves. I would rather be a failed entrepreneur than someone who never tried. Because even a failed entrepreneur has the skill set to make it on their own. [14]
+Humans evolved as hunters and gatherers where we all worked for ourselves. It』s only at the beginning of agriculture we became more hierarchical. The Industrial Revolution and factories made us extremely hierarchical because one individual couldn』t necessarily own or build a factory, but now, thanks to the internet, we』re going back to an age where more and more people can work for themselves. I would rather be a failed entrepreneur than someone who never tried. Because even a failed entrepreneur has the skill set to make it on their own. [14]
 
-人类进化为狩猎者和采集者，在那里我们都为自己工作。只是在农业刚开始的时候，我们才变得更加等级森严。工业革命和工厂让我们变得非常等级化，因为一个人不一定能拥有或建造工厂，但现在，多亏了互联网，我们正在回到一个越来越多的人可以为自己工作的时代。我宁愿做一个失败的企业家，也不愿做一个从未尝试过的人。因为即使是一个失败的企业家也有靠自己成功的技能。
+人類進化為狩獵者和採集者，在那裡我們都為自己工作。只是在農業剛開始的時候，我們才變得更加等級森嚴。工業革命和工廠讓我們變得非常等級化，因為一個人不一定能擁有或建造工廠，但現在，多虧了網際網路，我們正在回到一個越來越多的人可以為自己工作的時代。我寧願做一個失敗的企業家，也不願做一個從未嘗試過的人。因為即使是一個失敗的企業家也有靠自己成功的技能。
 
 There are almost 7 billion people on this planet. Someday, I hope, there will be almost 7 billion companies.
 
-这个星球上几乎有70亿人。我希望，有一天，会有近70亿家公司。
+這個星球上幾乎有70億人。我希望，有一天，會有近70億家公司。
 
-I learned how to make money because it was a necessity. After it stopped being a necessity, I stopped caring about it. At least for me, work was a means to an end. Making money was a means to an end. I’m much more interested in solving problems than I am in making money.
+I learned how to make money because it was a necessity. After it stopped being a necessity, I stopped caring about it. At least for me, work was a means to an end. Making money was a means to an end. I』m much more interested in solving problems than I am in making money.
 
-我学会了如何赚钱，因为这是必需品。在它不再是必需品之后，我就不再关心它了。至少对我来说，工作是达到目的的一种手段。赚钱是达到目的的一种手段。比起赚钱，我对解决问题更感兴趣。
+我學會了如何賺錢，因為這是必需品。在它不再是必需品之後，我就不再關心它了。至少對我來說，工作是達到目的的一種手段。賺錢是達到目的的一種手段。比起賺錢，我對解決問題更感興趣。
 
-Any end goal will just lead to another goal, lead to another goal. We just play games in life. When you grow up, you’re playing the school game, or you’re playing the social game. Then you’re playing the money game, and then you’re playing the status game. These games just have longer and longer and longer -lived horizons. At some point, at least I believe, these are all just games. These are games where the outcome really stops mattering once you see through the game.
+Any end goal will just lead to another goal, lead to another goal. We just play games in life. When you grow up, you』re playing the school game, or you』re playing the social game. Then you』re playing the money game, and then you』re playing the status game. These games just have longer and longer and longer -lived horizons. At some point, at least I believe, these are all just games. These are games where the outcome really stops mattering once you see through the game.
 
-任何最终目标都只会通向另一个目标，通向另一个目标。我们只是在生活中玩游戏。当你长大后，你是在玩学校游戏，还是在玩社交游戏。然后你在玩金钱游戏，然后你在玩地位游戏。这些游戏的视野越来越长，寿命越来越长。在某种程度上，至少我相信，这些都只是一场游戏。在这些游戏中，一旦你看透了游戏，结果就不再重要了。
+任何最終目標都只會通向另一個目標，通向另一個目標。我們只是在生活中玩遊戲。當你長大后，你是在玩學校遊戲，還是在玩社交遊戲。然後你在玩金錢遊戲，然後你在玩地位遊戲。這些遊戲的視野越來越長，壽命越來越長。在某種程度上，至少我相信，這些都只是一場遊戲。在這些遊戲中，一旦你看透了遊戲，結果就不再重要了。
 
-Then you just get tired of games. I would say I’m at the stage where I’m just tired of games. I don’t think there is any end goal or purpose. I’m just living life as I want to. I’m literally just doing it moment to moment.
+Then you just get tired of games. I would say I』m at the stage where I』m just tired of games. I don』t think there is any end goal or purpose. I』m just living life as I want to. I』m literally just doing it moment to moment.
 
-那你就是厌倦了游戏。我会说我正处在一个我只是厌倦了游戏的阶段。我不认为有任何最终目标或目的。我只是过着我想要的生活。我真的是时时刻刻都在这么做。
+那你就是厭倦了遊戲。我會說我正處在一個我只是厭倦了遊戲的階段。我不認為有任何最終目標或目的。我只是過著我想要的生活。我真的是時時刻刻都在這麼做。
 
 I want to be off the hedonic treadmill. [1]
 
-我想离开享乐主义跑步机。
+我想離開享樂主義跑步機。
 
-What you really want is freedom. You want freedom from your money problems, right? I think that’s okay. Once you can solve your money problems, either by lowering your lifestyle or by making enough money, you want to retire. Not retirement at sixty -five years old, sitting in a nursing home collecting a check retirement—it’s a different definition.
+What you really want is freedom. You want freedom from your money problems, right? I think that』s okay. Once you can solve your money problems, either by lowering your lifestyle or by making enough money, you want to retire. Not retirement at sixty -five years old, sitting in a nursing home collecting a check retirement—it』s a different definition.
 
-你真正想要的是自由。你想从金钱问题中解脱出来，对吧？我想那没问题。一旦你可以通过降低生活方式或赚足够的钱来解决你的金钱问题，你就想退休了。不是在65岁退休，坐在疗养院领取退休支票-这是一个不同的定义。
+你真正想要的是自由。你想從金錢問題中解脫出來，對吧？我想那沒問題。一旦你可以通過降低生活方式或賺足夠的錢來解決你的金錢問題，你就想退休了。不是在65歲退休，坐在療養院領取退休支票-這是一個不同的定義。
 
 What is your definition of retirement?
 
-你对退休的定义是什么？
+你對退休的定義是什麼？
 
-Retirement is when you stop sacrificing today for an imaginary tomorrow. When today is complete, in and of itself, you’re retired.
+Retirement is when you stop sacrificing today for an imaginary tomorrow. When today is complete, in and of itself, you』re retired.
 
-退休就是你不再为了想象中的明天而牺牲今天。今天结束后，你就可以退休了。
+退休就是你不再爲了想像中的明天而犧牲今天。今天結束后，你就可以退休了。
 
 How do you get there?
 
-你怎么去那里？
+你怎麼去那裡？
 
 Well, one way is to have so much money saved that your passive income (without you lifting a finger) covers your burn rate.
 
-嗯，一种方法是存很多钱，这样你的被动收入(不需要你动一根手指)就可以覆盖你的烧钱率。
+嗯，一種方法是存很多錢，這樣你的被動收入(不需要你動一根手指)就可以覆蓋你的燒錢率。
 
 A second is you just drive your burn rate down to zero—you become a monk.
 
-第二，你只要把你的烧钱率降到零--你就成了一名僧侣。
+第二，你只要把你的燒錢率降到零--你就成了一名僧侶。
 
-A third is you’re doing something you love. You enjoy it so much, it’s not about the money. So there are multiple ways to retirement.
+A third is you』re doing something you love. You enjoy it so much, it』s not about the money. So there are multiple ways to retirement.
 
-第三个是你正在做你喜欢做的事情。你太享受了，这不是钱的问题。所以退休的方式有很多种。
+第三個是你正在做你喜歡做的事情。你太享受了，這不是錢的問題。所以退休的方式有很多種。
 
-The way to get out of the competition trap is to be authentic, to find the thing you know how to do better than anybody. You know how to do it better because you love it, and no one can compete with you. If you love to do it, be authentic, and then figure out how to map that to what society actually wants. Apply some leverage and put your name on it. You take the risks, but you gain the rewards, have ownership and equity in what you’re doing, and just crank it up. [77]
+The way to get out of the competition trap is to be authentic, to find the thing you know how to do better than anybody. You know how to do it better because you love it, and no one can compete with you. If you love to do it, be authentic, and then figure out how to map that to what society actually wants. Apply some leverage and put your name on it. You take the risks, but you gain the rewards, have ownership and equity in what you』re doing, and just crank it up. [77]
 
-走出竞争陷阱的方法是做真实的事情，找到你知道如何做得比任何人都好的事情。你知道如何做得更好，因为你热爱它，没有人能与你竞争。如果你喜欢这样做，那就做一个真实的人，然后弄清楚如何将它映射到社会真正想要的东西上。施加一些筹码，把你的名字写在上面。你承担风险，但你获得了回报，对你所做的事情拥有所有权和权益，然后就把它发动起来。
+走出競爭陷阱的方法是做真實的事情，找到你知道如何做得比任何人都好的事情。你知道如何做得更好，因為你熱愛它，沒有人能與你競爭。如果你喜歡這樣做，那就做一個真實的人，然後弄清楚如何將它對映到社會真正想要的東西上。施加一些籌碼，把你的名字寫在上面。你承擔風險，但你獲得了回報，對你所做的事情擁有所有權和權益，然後就把它發動起來。
 
 Did your motivation to earn money drop after you become financially independent?
-当你经济独立后，你赚钱的动力有没有下降？
+當你經濟獨立后，你賺錢的動力有沒有下降？
 
 Yes and no. It did in the sense the desperation was gone.
 
-是也不是。从某种意义上说，它确实做到了，绝望已经消失了。
+是也不是。從某種意義上說，它確實做到了，絕望已經消失了。
 
-But if anything, creating businesses and making money are now more of an “art.” [74]
-但如果说有什么不同的话，那就是创业和赚钱现在更像是一门“艺术”。
+But if anything, creating businesses and making money are now more of an 「art.」 [74]
+但如果說有什麼不同的話，那就是創業和賺錢現在更像是一門「藝術」。
 
 Whether in commerce, science, or politics—history remembers the artists.
 
-无论是在商业、科学还是政治领域，历史都会记住艺术家。
+無論是在商業、科學還是政治領域，歷史都會記住藝術家。
 
-Art is creativity. Art is anything done for its own sake. What are the things that are done for their own sake, and there’s nothing behind them? Loving somebody, creating something, playing. To me, creating businesses is play. I create businesses because it’s fun, because I’m into the product. [77]
+Art is creativity. Art is anything done for its own sake. What are the things that are done for their own sake, and there』s nothing behind them? Loving somebody, creating something, playing. To me, creating businesses is play. I create businesses because it』s fun, because I』m into the product. [77]
 
-艺术就是创造力。艺术是任何为了它自己而做的事情。有哪些事情是为了自己的利益而做的，而它们背后却什么都没有呢？爱一个人，创造一些东西，玩耍。对我来说，创业就是玩耍。我做生意是因为它有趣，因为我喜欢这个产品。
+藝術就是創造力。藝術是任何爲了它自己而做的事情。有哪些事情是爲了自己的利益而做的，而它們背後卻什麼都沒有呢？愛一個人，創造一些東西，玩耍。對我來說，創業就是玩耍。我做生意是因為它有趣，因為我喜歡這個產品。
 
-I can create a new business within three months: raise the money, assemble a team, and launch it. It’s fun for me. It’s really cool to see what can I put together. It makes money almost as a side effect. Creating businesses is the game I became good at. It’s just my motivation has shifted from being goal -oriented to being artistic. Ironically, I think I’m much better at it now. [74]
+I can create a new business within three months: raise the money, assemble a team, and launch it. It』s fun for me. It』s really cool to see what can I put together. It makes money almost as a side effect. Creating businesses is the game I became good at. It』s just my motivation has shifted from being goal -oriented to being artistic. Ironically, I think I』m much better at it now. [74]
 
-我可以在三个月内创建一家新公司：筹集资金，组建一个团队，然后启动它。这对我来说很有趣。看看我能拼凑出什么真的很酷。它赚钱几乎是一种副作用。创业是我擅长的游戏。只是我的动机已经从目标导向转向艺术。具有讽刺意味的是，我认为我现在做得要好得多。
+我可以在三個月內建立一家新公司：籌集資金，組建一個團隊，然後啟動它。這對我來說很有趣。看看我能拼湊出什麼真的很酷。它賺錢幾乎是一種副作用。創業是我擅長的遊戲。只是我的動機已經從目標導向轉向藝術。具有諷刺意味的是，我認為我現在做得要好得多。
 
-Even when I invest, it’s because I like the people involved, I like hanging out with them, I learn from them, I think the product is really cool. These days, I will pass on great investments because I don’t find the products interesting.
+Even when I invest, it』s because I like the people involved, I like hanging out with them, I learn from them, I think the product is really cool. These days, I will pass on great investments because I don』t find the products interesting.
 
-即使当我投资的时候，也是因为我喜欢参与其中的人，我喜欢和他们在一起，我从他们身上学到了东西，我认为这个产品真的很酷。这几天，我会放弃很棒的投资，因为我觉得这些产品没什么意思。
+即使當我投資的時候，也是因為我喜歡參與其中的人，我喜歡和他們在一起，我從他們身上學到了東西，我認為這個產品真的很酷。這幾天，我會放棄很棒的投資，因為我覺得這些產品沒什麼意思。
 
-These are not 100 percent -or -nothing things. You can start moving more and more toward that goal in your life. It’s a goal. When I was younger, I used to be so desperate to make money that I would have done anything. If you’d shown up and said, “Hey, I’ve got a sewage trucking business, want to go into that?” I would have said, “Great, I want to make money!” Thank God no one gave me that opportunity. I’m glad I went down the road of technology and science, which I genuinely enjoy. I got to combine my vocation and my avocation.
+These are not 100 percent -or -nothing things. You can start moving more and more toward that goal in your life. It』s a goal. When I was younger, I used to be so desperate to make money that I would have done anything. If you』d shown up and said, 「Hey, I』ve got a sewage trucking business, want to go into that?」 I would have said, 「Great, I want to make money!」 Thank God no one gave me that opportunity. I』m glad I went down the road of technology and science, which I genuinely enjoy. I got to combine my vocation and my avocation.
 
-这些都不是百分之百或一无所有的事情。在你的生活中，你可以开始越来越多地朝着那个目标前进。这是个进球。当我年轻的时候，我常常不顾一切地赚钱，以至于我什么都愿意做。如果你出现并说，“嘿，我有一家污水卡车运输公司，你想进去吗？”我会说，“太好了，我想赚钱！”谢天谢地没人给我这个机会。我很高兴我走上了科技之路，这是我真心享受的。我必须把我的职业和业余爱好结合起来。
+這些都不是百分之百或一無所有的事情。在你的生活中，你可以開始越來越多地朝著那個目標前進。這是個進球。當我年輕的時候，我常常不顧一切地賺錢，以至於我什麼都願意做。如果你出現並說，「嘿，我有一家污水卡車運輸公司，你想進去嗎？」我會說，「太好了，我想賺錢！」謝天謝地沒人給我這個機會。我很高興我走上了科技之路，這是我真心享受的。我必須把我的職業和業餘愛好結合起來。
 
-I’m always “working.” It looks like work to others, but it feels like play to me. And that’s how I know no one can compete with me on it. Because I’m just playing, for sixteen hours a day. If others want to compete with me, they’re going to work, and they’re going to lose because they’re not going to do it for sixteen hours a day, seven days a week. [77]
+I』m always 「working.」 It looks like work to others, but it feels like play to me. And that』s how I know no one can compete with me on it. Because I』m just playing, for sixteen hours a day. If others want to compete with me, they』re going to work, and they』re going to lose because they』re not going to do it for sixteen hours a day, seven days a week. [77]
 
-我总是在“工作”。对别人来说，这看起来像是工作，但对我来说，它感觉像是玩耍。这就是为什么我知道没有人能在这方面与我竞争。因为我只是在玩，一天玩16个小时。如果其他人想与我竞争，他们就会去工作，他们会输，因为他们不会一周七天每天工作16个小时。“[77]
+我總是在「工作」。對別人來說，這看起來像是工作，但對我來說，它感覺像是玩耍。這就是為什麼我知道沒有人能在這方面與我競爭。因為我只是在玩，一天玩16個小時。如果其他人想與我競爭，他們就會去工作，他們會輸，因為他們不會一週七天每天工作16個小時。「[77]
 
 What was your figure where you thought you were financially safe?
 
-你认为自己在财务上是安全的，你的数字是多少？
+你認為自己在財務上是安全的，你的數字是多少？
 
-Money is not the root of all evil; there’s nothing evil about it. But the lust for money is bad. The lust for money is not bad in a social sense. It’s not bad in the sense of “you’re a bad person for lusting for money.” It’s bad for you.
+Money is not the root of all evil; there』s nothing evil about it. But the lust for money is bad. The lust for money is not bad in a social sense. It』s not bad in the sense of 「you』re a bad person for lusting for money.」 It』s bad for you.
 
-金钱不是万恶之源，它没有什么邪恶之处。但是，对金钱的欲望是不好的。从社会意义上讲，对金钱的贪婪并不是坏事。从“你是一个贪财的坏人”的意义上来说，这并不是坏事。这对你不好。
+金錢不是萬惡之源，它沒有什麼邪惡之處。但是，對金錢的慾望是不好的。從社會意義上講，對金錢的貪婪並不是壞事。從「你是一個貪財的壞人」的意義上來說，這並不是壞事。這對你不好。
 
-Lusting for money is bad for us because it is a bottomless pit. It will always occupy your mind. If you love money, and you make it, there’s never enough. There is never enough because the desire is turned on and doesn’t turn off at some number. It’s a fallacy to think it turns off at some number.
+Lusting for money is bad for us because it is a bottomless pit. It will always occupy your mind. If you love money, and you make it, there』s never enough. There is never enough because the desire is turned on and doesn』t turn off at some number. It』s a fallacy to think it turns off at some number.
 
-贪财对我们不好，因为这是一个无底洞。它会一直占据你的脑海。如果你爱钱，而且你能赚到钱，那么钱永远不够。永远不会满足，因为欲望被打开了，而且在某个数字上没有关闭。认为它会在某个数字关闭是一种谬论。
+貪財對我們不好，因為這是一個無底洞。它會一直佔據你的腦海。如果你愛錢，而且你能賺到錢，那麼錢永遠不夠。永遠不會滿足，因為慾望被打開了，而且在某個數字上沒有關閉。認為它會在某個數字關閉是一種謬論。
 
-The punishment for the love of money is delivered at the same time as the money. As you make money, you just want even more, and you become paranoid and fearful of losing what you do have. There’s no free lunch.
+The punishment for the love of money is delivered at the same time as the money. As you make money, you just want even more, and you become paranoid and fearful of losing what you do have. There』s no free lunch.
 
-对金钱的爱的惩罚是与金钱同时进行的。当你赚钱的时候，你只会想要更多，你会变得偏执，害怕失去你所拥有的东西。天下没有免费的午餐。
+對金錢的愛的懲罰是與金錢同時進行的。當你賺錢的時候，你只會想要更多，你會變得偏執，害怕失去你所擁有的東西。天下沒有免費的午餐。
 
-You make money to solve your money and material problems. I think the best way to stay away from this constant love of money is to not upgrade your lifestyle as you make money. It’s very easy to keep upgrading your lifestyle as you make money. But if you can hold your lifestyle fixed and hopefully make your money in giant lump sums as opposed to a trickle at a time, you won’t have time to upgrade your lifestyle. You may get so far ahead you actually become financially free.
+You make money to solve your money and material problems. I think the best way to stay away from this constant love of money is to not upgrade your lifestyle as you make money. It』s very easy to keep upgrading your lifestyle as you make money. But if you can hold your lifestyle fixed and hopefully make your money in giant lump sums as opposed to a trickle at a time, you won』t have time to upgrade your lifestyle. You may get so far ahead you actually become financially free.
 
-你赚钱是为了解决你的金钱和物质问题。我认为，远离这种对金钱的持续热爱的最好方法是，在赚钱的同时不要升级你的生活方式。在赚钱的同时不断升级你的生活方式是非常容易的。但是如果你能保持你的生活方式不变，并且希望你的钱是一次性的，而不是涓涓细流，那么你就没有时间升级你的生活方式了。你可能会走得很远，实际上在经济上变得自由了。
+你賺錢是爲了解決你的金錢和物質問題。我認為，遠離這種對金錢的持續熱愛的最好方法是，在賺錢的同時不要升級你的生活方式。在賺錢的同時不斷升級你的生活方式是非常容易的。但是如果你能保持你的生活方式不變，並且希望你的錢是一次性的，而不是涓涓細流，那麼你就沒有時間升級你的生活方式了。你可能會走得很遠，實際上在經濟上變得自由了。
 
-Another thing that helps: I value freedom above everything else. All kinds of freedom: freedom to do what I want, freedom from things I don’t want to do, freedom from my own emotions or things that may disturb my peace. For me, freedom is my number one value.
+Another thing that helps: I value freedom above everything else. All kinds of freedom: freedom to do what I want, freedom from things I don』t want to do, freedom from my own emotions or things that may disturb my peace. For me, freedom is my number one value.
 
-另一件有帮助的事情是：我把自由看得比一切都重要。各种各样的自由：做我想做的事的自由，不做我不想做的事情的自由，不受我自己的情绪或可能扰乱我平静的事情的自由。对我来说，自由是我的第一价值。
+另一件有幫助的事情是：我把自由看得比一切都重要。各種各樣的自由：做我想做的事的自由，不做我不想做的事情的自由，不受我自己的情緒或可能擾亂我平靜的事情的自由。對我來說，自由是我的第一價值。
 
-To the extent money buys freedom, it’s great. But to the extent it makes me less free, which it definitely does at some level as well, I don’t like it. [74]
-就金钱能买到自由的程度而言，这是很棒的。但在一定程度上，它让我变得不那么自由，这在某种程度上肯定也是如此，我不喜欢它。
+To the extent money buys freedom, it』s great. But to the extent it makes me less free, which it definitely does at some level as well, I don』t like it. [74]
+就金錢能買到自由的程度而言，這是很棒的。但在一定程度上，它讓我變得不那麼自由，這在某種程度上肯定也是如此，我不喜歡它。
 
 The winners of any game are the people who are so addicted they continue playing even as the marginal utility from winning declines.
 
-任何游戏的赢家都是那些沉迷于游戏的人，即使赢球的边际效用下降了，他们也会继续玩下去。
+任何遊戲的贏家都是那些沉迷於遊戲的人，即使贏球的邊際效用下降了，他們也會繼續玩下去。
 
 Do I have to start a company to be successful?
 
-我一定要开一家公司才能成功吗？
+我一定要開一家公司才能成功嗎？
 
 The most successful class of people in Silicon Valley on a consistent basis are either the venture capitalists (because they are diversified and control what used to be a scarce resource) or people who are very good at identifying companies that have just hit product/market fit. Those people have the background, expertise, and references those companies really want to help them scale. Then, they go into the latest Dropbox or the latest Airbnb.
 
-硅谷一贯最成功的一类人要么是风险资本家(因为他们是多元化的，控制着过去稀缺的资源)，要么是非常善于识别刚刚达到产品/市场匹配的公司的人。这些人拥有这些公司真正想要帮助他们扩大规模的背景、专业知识和推荐人。然后，他们进入最新的Dropbox或最新的Airbnb。
+硅谷一貫最成功的一類人要麼是風險資本家(因為他們是多元化的，控制著過去稀缺的資源)，要麼是非常善於識別剛剛達到產品/市場匹配的公司的人。這些人擁有這些公司真正想要幫助他們擴大規模的背景、專業知識和推薦人。然後，他們進入最新的Dropbox或最新的Airbnb。
 
 The people who were at Google, then joined Facebook when it was one hundred people, and then joined Stripe when it was one hundred people?
 
-那些在谷歌工作的人，然后在Facebook是100人的时候加入了Facebook，然后在它是100人的时候加入了条纹公司？
+那些在谷歌工作的人，然後在Facebook是100人的時候加入了Facebook，然後在它是100人的時候加入了條紋公司？
 
-When Zuckerberg was just starting to scale his company and panicked, he was like, “I don’t know how to do this.” And he called Jim Breyer [venture capitalist and founder of Accel Partners]. And Jim Breyer said, “Well, I have this really great head of product at this other company, and you need this person.” Those people tend to do the best, risk -adjusted over a long period of time, other than the venture investors themselves. [30]
+When Zuckerberg was just starting to scale his company and panicked, he was like, 「I don』t know how to do this.」 And he called Jim Breyer [venture capitalist and founder of Accel Partners]. And Jim Breyer said, 「Well, I have this really great head of product at this other company, and you need this person.」 Those people tend to do the best, risk -adjusted over a long period of time, other than the venture investors themselves. [30]
 
-当扎克伯格刚刚开始扩大他的公司规模并惊慌失措时，他就像是，“我不知道该怎么做。”他还称吉姆·布雷耶(Jim Breyer)为[风险投资家、Accel Partners创始人]。吉姆·布雷耶说：“嗯，我在另一家公司有一个非常棒的产品主管，你需要这个人。”这些人往往做得最好，在很长一段时间内进行风险调整，而不是风险投资者自己。
+當扎克伯格剛剛開始擴大他的公司規模並驚慌失措時，他就像是，「我不知道該怎麼做。」他還稱吉姆·佈雷耶(Jim Breyer)為[風險投資家、Accel Partners創始人]。吉姆·佈雷耶說：「嗯，我在另一家公司有一個非常棒的產品主管，你需要這個人。」這些人往往做得最好，在很長一段時間內進行風險調整，而不是風險投資者自己。
 
-Some of the most successful people I’ve seen in Silicon Valley had breakouts very early in their careers. They got promoted to VP, director, or CEO, or started a company that did well fairly early. If you’re not getting promoted through the ranks, it gets a lot harder to catch up later in life. It’s good to be in a smaller company early because there’s less of an infrastructure to prevent early promotion. [76]
+Some of the most successful people I』ve seen in Silicon Valley had breakouts very early in their careers. They got promoted to VP, director, or CEO, or started a company that did well fairly early. If you』re not getting promoted through the ranks, it gets a lot harder to catch up later in life. It』s good to be in a smaller company early because there』s less of an infrastructure to prevent early promotion. [76]
 
-我在硅谷见过的一些最成功的人在他们职业生涯的早期就取得了突破。他们被提升为副总裁、董事或首席执行官，或者很早就创办了一家业绩不错的公司。如果你在职级中得不到晋升，那么在以后的生活中要想迎头赶上就会困难得多。提早进入一家规模较小的公司是件好事，因为阻止提早晋升的基础设施较少。“[76]
+我在硅谷見過的一些最成功的人在他們職業生涯的早期就取得了突破。他們被提升爲副總裁、董事或執行長，或者很早就創辦了一家業績不錯的公司。如果你在職級中得不到晉陞，那麼在以後的生活中要想迎頭趕上就會困難得多。提早進入一家規模較小的公司是件好事，因為阻止提早晉陞的基礎設施較少。「[76]
 
-For someone who is early in their career (and maybe even later), the single most important thing about a company is the alumni network you’re going to build. Think about who you will work with and what those people are going on to do. [76]
+For someone who is early in their career (and maybe even later), the single most important thing about a company is the alumni network you』re going to build. Think about who you will work with and what those people are going on to do. [76]
 
-对于处于职业生涯早期(甚至更晚)的人来说，公司最重要的一件事就是你要建立的校友关系网。想一想你将与谁一起工作，以及这些人将会做些什么。“[76]
+對於處於職業生涯早期(甚至更晚)的人來說，公司最重要的一件事就是你要建立的校友關係網。想一想你將與誰一起工作，以及這些人將會做些什麼。「[76]
