--- a/1-12.md
+++ b/1-12.md
@@ -2,85 +2,85 @@
 
 要有耐心
 
-One thing I figured out later in life is generally (at least in the tech business in Silicon Valley), great people have great outcomes. You just have to be patient. Every person I met at the beginning of my career twenty years ago, where I looked at them and said, “Wow, that guy or gal is super capable—so smart and dedicated”…all of them, almost without exception, became extremely successful. You just had to give them a long enough timescale. It never happens in the timescale you want, or they want, but it does happen. [4]
+One thing I figured out later in life is generally (at least in the tech business in Silicon Valley), great people have great outcomes. You just have to be patient. Every person I met at the beginning of my career twenty years ago, where I looked at them and said, 「Wow, that guy or gal is super capable—so smart and dedicated」…all of them, almost without exception, became extremely successful. You just had to give them a long enough timescale. It never happens in the timescale you want, or they want, but it does happen. [4]
 
-我在后来的生活中发现的一件事是，通常(至少在硅谷的科技行业)，伟大的人会有伟大的成就。你只要有耐心就行了。20年前我刚开始职业生涯时遇到的每一个人，我看着他们说，“哇，那个家伙或女孩非常能干--如此聪明和敬业。”…他们几乎无一例外地都获得了极大的成功。你只要给他们足够长的时间就行了。它永远不会在你想要的时间范围内发生，也不会在他们想要的时间范围内发生，但它确实会发生。
+我在後來的生活中發現的一件事是，通常(至少在硅谷的科技行業)，偉大的人會有偉大的成就。你只要有耐心就行了。20年前我剛開始職業生涯時遇到的每一個人，我看著他們說，「哇，那個傢伙或女孩非常能幹--如此聰明和敬業。」…他們幾乎無一例外地都獲得了極大的成功。你只要給他們足夠長的時間就行了。它永遠不會在你想要的時間範圍內發生，也不會在他們想要的時間範圍內發生，但它確實會發生。
 
 Apply specific knowledge with leverage and eventually, you will get what you deserve.
 
-用杠杆运用特定的知识，最终，你会得到你应得的。
+用槓桿運用特定的知識，最終，你會得到你應得的。
 
-It takes time—even once you have all of these pieces in place, there is an indeterminate amount of time you have to put in. If you’re counting, you’ll run out of patience before success actually arrives.
+It takes time—even once you have all of these pieces in place, there is an indeterminate amount of time you have to put in. If you』re counting, you』ll run out of patience before success actually arrives.
 
-这需要时间-即使你把所有这些东西都准备好了，你也必须投入不确定的时间。如果你在计算，在成功真正到来之前，你就会失去耐心。
+這需要時間-即使你把所有這些東西都準備好了，你也必須投入不確定的時間。如果你在計算，在成功真正到來之前，你就會失去耐心。
 
-Everybody wants to get rich immediately, but the world is an efficient place; immediate doesn’t work. You do have to put in the time. You do have to put in the hours, and so I think you have to put yourself in the position with the specific knowledge, with accountability, with leverage, with the authentic skill set you have, to be the best in the world at what you do.
+Everybody wants to get rich immediately, but the world is an efficient place; immediate doesn』t work. You do have to put in the time. You do have to put in the hours, and so I think you have to put yourself in the position with the specific knowledge, with accountability, with leverage, with the authentic skill set you have, to be the best in the world at what you do.
 
-每个人都想立即致富，但这个世界是一个高效的地方；立即致富是行不通的。你确实需要投入时间。你确实必须投入时间，所以我认为你必须把自己放在有具体知识、有责任、有杠杆、有真正技能的位置上，才能在你所做的事情上成为世界上最好的。
+每個人都想立即致富，但這個世界是一個高效的地方；立即致富是行不通的。你確實需要投入時間。你確實必須投入時間，所以我認為你必須把自己放在有具體知識、有責任、有槓桿、有真正技能的位置上，才能在你所做的事情上成為世界上最好的。
 
-You have to enjoy it and keep doing it, keep doing it, and keep doing it. Don’t keep track, and don’t keep count because if you do, you will run out of time. [78]
+You have to enjoy it and keep doing it, keep doing it, and keep doing it. Don』t keep track, and don』t keep count because if you do, you will run out of time. [78]
 
-你必须乐在其中，坚持下去。不要记账，也不要记数，因为如果你这样做，你的时间就会用完。“[78]
+你必須樂在其中，堅持下去。不要記賬，也不要記數，因為如果你這樣做，你的時間就會用完。「[78]
 
-The most common bad advice I hear is: “You’re too young.” Most of history was built by young people. They just got credit when they were older. The only way to truly learn something is by doing it. Yes, listen to guidance. But don’t wait. [3]
+The most common bad advice I hear is: 「You』re too young.」 Most of history was built by young people. They just got credit when they were older. The only way to truly learn something is by doing it. Yes, listen to guidance. But don』t wait. [3]
 
-我听到的最常见的坏建议是：“你太年轻了。”历史的大部分是由年轻人创造的。他们只是在年纪大的时候才拿到学分。真正学到东西的唯一方法就是去做。是的，听从指导。但不要等待。“[3]
+我聽到的最常見的壞建議是：「你太年輕了。」歷史的大部分是由年輕人創造的。他們只是在年紀大的時候才拿到學分。真正學到東西的唯一方法就是去做。是的，聽從指導。但不要等待。「[3]
 
 People are oddly consistent. Karma is just you, repeating your patterns, virtues, and flaws until you finally get what you deserve.
 
-人们出奇地始终如一。业力就是你，不断重复你的模式、美德和缺点，直到你最终得到你应得的。
+人們出奇地始終如一。業力就是你，不斷重複你的模式、美德和缺點，直到你最終得到你應得的。
 
-Always pay it forward. And don’t keep count.
+Always pay it forward. And don』t keep count.
 
-永远要把它发扬光大。别再数了。
+永遠要把它發揚光大。別再數了。
 
-This is not to say it’s easy. It’s not easy. It’s actually really freaking hard. It is the hardest thing you will do. But it’s also rewarding. Look at the kids who are born rich—they have no meaning to their lives.
+This is not to say it』s easy. It』s not easy. It』s actually really freaking hard. It is the hardest thing you will do. But it』s also rewarding. Look at the kids who are born rich—they have no meaning to their lives.
 
-这并不是说这很容易。这并不容易。实际上真的很难。这是你要做的最难的事。但这也是值得的。看看那些天生富有的孩子--他们对自己的生活毫无意义。
+這並不是說這很容易。這並不容易。實際上真的很難。這是你要做的最難的事。但這也是值得的。看看那些天生富有的孩子--他們對自己的生活毫無意義。
 
-Your real résumé is just a catalog of all your suffering. If I ask you to describe your real life to yourself, and you look back from your deathbed at the interesting things you’ve done, it’s all going to be around the sacrifices you made, the hard things you did.
+Your real résumé is just a catalog of all your suffering. If I ask you to describe your real life to yourself, and you look back from your deathbed at the interesting things you』ve done, it』s all going to be around the sacrifices you made, the hard things you did.
 
-你真正的简历只是你所有痛苦的目录。如果我让你向自己描述一下你的真实生活，当你在临终前回顾你所做的有趣的事情时，一切都会围绕着你所做出的牺牲，你所做的那些艰难的事情。
+你真正的簡歷只是你所有痛苦的目錄。如果我讓你向自己描述一下你的真實生活，當你在臨終前回顧你所做的有趣的事情時，一切都會圍繞著你所做出的犧牲，你所做的那些艱難的事情。
 
-However, anything you’re given doesn’t matter. You have your four limbs, your brain, your head, your skin—that’s all for granted. You have to do hard things anyway to create your own meaning in life. Making money is a fine thing to choose. Go struggle. It is hard. I’m not going to say it’s easy. It’s really hard, but the tools are all available. It’s all out there. [77]
+However, anything you』re given doesn』t matter. You have your four limbs, your brain, your head, your skin—that』s all for granted. You have to do hard things anyway to create your own meaning in life. Making money is a fine thing to choose. Go struggle. It is hard. I』m not going to say it』s easy. It』s really hard, but the tools are all available. It』s all out there. [77]
 
-然而，你得到的任何东西都无关紧要。你有你的四肢，你的大脑，你的头，你的皮肤--这些都是理所当然的。不管怎样，你必须做一些艰难的事情来创造你自己的生活意义。赚钱是一件不错的选择。去奋斗吧。这很难。我不会说这很容易。这真的很难，但是工具都是可用的。这一切都在那里。)[77]
+然而，你得到的任何東西都無關緊要。你有你的四肢，你的大腦，你的頭，你的面板--這些都是理所當然的。不管怎樣，你必須做一些艱難的事情來創造你自己的生活意義。賺錢是一件不錯的選擇。去奮鬥吧。這很難。我不會說這很容易。這真的很難，但是工具都是可用的。這一切都在那裡。)[77]
 
-Money buys you freedom in the material world. It’s not going to make you happy, it’s not going to solve your health problems, it’s not going to make your family great, it’s not going to make you fit, it’s not going to make you calm. But it will solve a lot of external problems. It’s a reasonable step to go ahead and make money. [10]
+Money buys you freedom in the material world. It』s not going to make you happy, it』s not going to solve your health problems, it』s not going to make your family great, it』s not going to make you fit, it』s not going to make you calm. But it will solve a lot of external problems. It』s a reasonable step to go ahead and make money. [10]
 
-在物质世界里，金钱可以买到自由。它不会让你快乐，不会解决你的健康问题，不会让你的家庭变得美好，不会让你健康，不会让你平静。但它会解决很多外部问题。这是向前走并赚钱的合理一步。“[10]
+在物質世界裡，金錢可以買到自由。它不會讓你快樂，不會解決你的健康問題，不會讓你的家庭變得美好，不會讓你健康，不會讓你平靜。但它會解決很多外部問題。這是向前走並賺錢的合理一步。「[10]
 
-What making money will do is solve your money problems. It will remove a set of things that could get in the way of being happy, but it is not going to make you happy. I know many very wealthy people who are unhappy. Most of the time, the person you have to become to make money is a high -anxiety , high -stress , hard -working , competitive person. When you have done that for twenty, thirty, forty, fifty years, and you suddenly make money, you can’t turn it off. You’ve trained yourself to be a high -anxiety person. Then, you have to learn how to be happy. [11]
+What making money will do is solve your money problems. It will remove a set of things that could get in the way of being happy, but it is not going to make you happy. I know many very wealthy people who are unhappy. Most of the time, the person you have to become to make money is a high -anxiety , high -stress , hard -working , competitive person. When you have done that for twenty, thirty, forty, fifty years, and you suddenly make money, you can』t turn it off. You』ve trained yourself to be a high -anxiety person. Then, you have to learn how to be happy. [11]
 
-赚钱会解决你的钱问题。它会移除一系列可能阻碍你快乐的事情，但不会让你快乐。我认识很多非常富有的人，他们并不快乐。大多数时候，为了赚钱你必须成为一个高度焦虑、高度紧张、努力工作、有竞争力的人。当你做了二十年、三十年、四十年、五十年后，你突然赚到了钱，你就不能把它关掉。你把自己训练成一个高度焦虑的人。然后，你必须学会如何快乐。
+賺錢會解決你的錢問題。它會移除一系列可能阻礙你快樂的事情，但不會讓你快樂。我認識很多非常富有的人，他們並不快樂。大多數時候，爲了賺錢你必須成為一個高度焦慮、高度緊張、努力工作、有競爭力的人。當你做了二十年、三十年、四十年、五十年後，你突然賺到了錢，你就不能把它關掉。你把自己訓練成一個高度焦慮的人。然後，你必須學會如何快樂。
 
-Let’s get you rich first. I’m very practical about it because, you know, Buddha was a prince. He started off really rich, then he got to go off in the woods.
+Let』s get you rich first. I』m very practical about it because, you know, Buddha was a prince. He started off really rich, then he got to go off in the woods.
 
-我们先让你发财吧。我对此非常实际，因为，你知道，佛陀是一位王子。他一开始很有钱，然后去了森林。
+我們先讓你發財吧。我對此非常實際，因為，你知道，佛陀是一位王子。他一開始很有錢，然後去了森林。
 
 In the old days, if you wanted to be peaceful inside, you would become a monk. You would give up everything, renounce sex, children, money, politics, science, technology, everything, and you would go out in the woods by yourself. You had to give everything up to be free inside.
 
-在过去，如果你想内心安宁，你就会成为一名僧侣。你会放弃一切，放弃性、孩子、金钱、政治、科学、技术，什么都不做，然后你就会独自一人走进森林。你必须放弃一切才能获得内心的自由。
+在過去，如果你想內心安寧，你就會成為一名僧侶。你會放棄一切，放棄性、孩子、金錢、政治、科學、技術，什麼都不做，然後你就會獨自一人走進森林。你必須放棄一切才能獲得內心的自由。
 
-Today, with this wonderful invention called money, you can store it in a bank account. You can you work really hard, do great things for society, and society will give you money for things it wants but doesn’t know how to get. You can save money, you can live a little below your means, and you can find a certain freedom.
+Today, with this wonderful invention called money, you can store it in a bank account. You can you work really hard, do great things for society, and society will give you money for things it wants but doesn』t know how to get. You can save money, you can live a little below your means, and you can find a certain freedom.
 
-今天，有了这项叫做货币的奇妙发明，你可以把它存入银行账户。你可以非常努力地工作，为社会做伟大的事情，社会会给你钱去买它想要但不知道怎么得到的东西。你可以省钱，你可以过入不敷出的生活，你可以找到某种自由。
+今天，有了這項叫做貨幣的奇妙發明，你可以把它存入銀行賬戶。你可以非常努力地工作，為社會做偉大的事情，社會會給你錢去買它想要但不知道怎麼得到的東西。你可以省錢，你可以過入不敷出的生活，你可以找到某種自由。
 
 That will give you the time and the energy to pursue your own internal peace and happiness. I believe the solution to making everybody happy is to give them what they want.
 
-这会给你时间和精力去追求自己内心的平静和幸福。我相信让每个人都开心的解决办法就是给他们想要的东西。
+這會給你時間和精力去追求自己內心的平靜和幸福。我相信讓每個人都開心的解決辦法就是給他們想要的東西。
 
-Let’s get them all rich.
+Let』s get them all rich.
 
-让我们让他们都发财吧。
+讓我們讓他們都發財吧。
 
-Let’s get them all fit and healthy.
+Let』s get them all fit and healthy.
 
-让我们让他们都身体健康吧。
+讓我們讓他們都身體健康吧。
 
-Then, let’s get them all happy. [77]
-那么，让我们让他们所有人都开心吧。
+Then, let』s get them all happy. [77]
+那麼，讓我們讓他們所有人都開心吧。
 
 Amazing how many people confuse wealth and wisdom.
 
-令人惊讶的是，有那么多人把财富和智慧混为一谈。
+令人驚訝的是，有那麼多人把財富和智慧混為一談。
