--- a/1-14.md
+++ b/1-14.md
@@ -1,45 +1,45 @@
 # Judgment
 
-判断力
+判斷力
 
 If you want to make the maximum amount of money possible, if you want to get rich over your life in a deterministically predictable way, stay on the bleeding edge of trends and study technology, design, and art—become really good at something. [1]
 
-如果你想赚最多的钱，如果你想以一种确定性的、可预测的方式在你的一生中致富，那么就保持在潮流的前沿，学习技术、设计和艺术-成为真正擅长的东西。
+如果你想賺最多的錢，如果你想以一種確定性的、可預測的方式在你的一生中致富，那麼就保持在潮流的前沿，學習技術、設計和藝術-成為真正擅長的東西。
 
-You don’t get rich by spending your time to save money.
+You don』t get rich by spending your time to save money.
 
-你不会因为把时间花在省钱上而变得富有。
+你不會因為把時間花在省錢上而變得富有。
 
 You get rich by saving your time to make money.
 
-你通过节省时间来赚钱而致富。
+你通過節省時間來賺錢而致富。
 
 Hard work is really overrated. How hard you work matters a lot less in the modern economy.
 
-努力工作确实被高估了。在现代经济中，你工作有多努力就不那么重要了。
+努力工作確實被高估了。在現代經濟中，你工作有多努力就不那麼重要了。
 
 What is underrated?
 
-什么被低估了？
+什麼被低估了？
 
 Judgment. Judgment is underrated. [1]
-判断。判断力被低估了。
+判斷。判斷力被低估了。
 
 Can you define judgment?
-你能给判断下定义吗？
+你能給判斷下定義嗎？
 
-My definition of wisdom is knowing the long -term consequences of your actions. Wisdom applied to external problems is judgment. They’re highly linked; knowing the long -term consequences of your actions and then making the right decision to capitalize on that. [78]
+My definition of wisdom is knowing the long -term consequences of your actions. Wisdom applied to external problems is judgment. They』re highly linked; knowing the long -term consequences of your actions and then making the right decision to capitalize on that. [78]
 
-我对智慧的定义是知道你行为的长期后果。适用于外部问题的智慧就是判断。它们高度相关；知道你行为的长期后果，然后做出正确的决定来利用这一点。“[78]
+我對智慧的定義是知道你行為的長期後果。適用於外部問題的智慧就是判斷。它們高度相關；知道你行為的長期後果，然後做出正確的決定來利用這一點。「[78]
 
 In an age of leverage, one correct decision can win everything.
 
-在杠杆的时代，一个正确的决定可以赢得一切。
+在槓桿的時代，一個正確的決定可以贏得一切。
 
-Without hard work, you’ll develop neither judgment nor leverage.
+Without hard work, you』ll develop neither judgment nor leverage.
 
-不努力工作，你既不会有判断力，也不会有筹码。
+不努力工作，你既不會有判斷力，也不會有籌碼。
 
-You have to put in the time, but the judgment is more important. The direction you’re heading in matters more than how fast you move, especially with leverage. Picking the direction you’re heading in for every decision is far, far more important than how much force you apply. Just pick the right direction to start walking in, and start walking. [1]
+You have to put in the time, but the judgment is more important. The direction you』re heading in matters more than how fast you move, especially with leverage. Picking the direction you』re heading in for every decision is far, far more important than how much force you apply. Just pick the right direction to start walking in, and start walking. [1]
 
-你必须投入时间，但判断力更重要。你前进的方向比你移动的速度更重要，特别是在有杠杆的情况下。为每一个决定选择前进的方向比你施加多大的力量要重要得多。只需选择正确的方向开始行走，然后开始行走。
+你必須投入時間，但判斷力更重要。你前進的方向比你移動的速度更重要，特別是在有槓桿的情況下。為每一個決定選擇前進的方向比你施加多大的力量要重要得多。只需選擇正確的方向開始行走，然後開始行走。
