--- a/1-18.md
+++ b/1-18.md
@@ -4,205 +4,205 @@
 
 During decision -making , the brain is a memory prediction machine.
 
-在决策过程中，大脑是一台记忆预测机器。
+在決策過程中，大腦是一臺記憶預測機器。
 
-A lousy way to do memory prediction is “X happened in the past, therefore X will happen in the future.” It’s too based on specific circumstances. What you want is principles. You want mental models.
+A lousy way to do memory prediction is 「X happened in the past, therefore X will happen in the future.」 It』s too based on specific circumstances. What you want is principles. You want mental models.
 
-一种糟糕的记忆预测方式是“X发生在过去，因此X将发生在未来。”这也是根据具体情况而定的。你需要的是原则。你想要心理模型。
+一種糟糕的記憶預測方式是「X發生在過去，因此X將發生在未來。」這也是根據具體情況而定的。你需要的是原則。你想要心理模型。
 
-The best mental models I have found came through evolution, game theory, and Charlie Munger. Charlie Munger is Warren Buffett’s partner. Very good investor. He has tons and tons of great mental models. Author and trader Nassim Taleb has great mental models. Benjamin Franklin had great mental models. I basically load my head full of mental models. [4]
+The best mental models I have found came through evolution, game theory, and Charlie Munger. Charlie Munger is Warren Buffett』s partner. Very good investor. He has tons and tons of great mental models. Author and trader Nassim Taleb has great mental models. Benjamin Franklin had great mental models. I basically load my head full of mental models. [4]
 
-我找到的最好的心智模型来自进化论、博弈论和查理·芒格。查理·芒格是沃伦·巴菲特的合伙人。非常好的投资者。他有许许多多伟大的精神典范。作家兼交易员纳西姆·塔勒布(Nassim Taleb)有很好的心理模型。本杰明·富兰克林有很好的心理模型。我基本上满脑子都是心理模型。
+我找到的最好的心智模型來自進化論、博弈論和查理·芒格。查理·芒格是沃倫·巴菲特的合夥人。非常好的投資者。他有許許多多偉大的精神典範。作家兼交易員納西姆·塔勒布(Nassim Taleb)有很好的心理模型。本傑明·富蘭克林有很好的心理模型。我基本上滿腦子都是心理模型。
 
-I use my tweets and other people’s tweets as maxims that help compress my own learnings and recall them. The brain space is finite—you have finite neurons—so you can almost think of these as pointers, addresses, or mnemonics to help you remember deep -seated principles where you have the underlying experience to back it up.
+I use my tweets and other people』s tweets as maxims that help compress my own learnings and recall them. The brain space is finite—you have finite neurons—so you can almost think of these as pointers, addresses, or mnemonics to help you remember deep -seated principles where you have the underlying experience to back it up.
 
-我用我的推文和别人的推文作为格言，帮助我压缩和回忆自己学到的东西。大脑空间是有限的-你的神经元是有限的-所以你几乎可以把它们看作指针、地址或助记符，以帮助你记住深层次的原则，在这些原则中，你有潜在的经验来支持它。
+我用我的推文和別人的推文作為格言，幫助我壓縮和回憶自己學到的東西。大腦空間是有限的-你的神經元是有限的-所以你幾乎可以把它們看作指針、地址或助記符，以幫助你記住深層次的原則，在這些原則中，你有潛在的經驗來支援它。
 
-If you don’t have the underlying experience, then it just reads like a collection of quotes. It’s cool, it’s inspirational for a moment, maybe you’ll make a nice poster out of it. But then you forget it and move on. Mental models are really just compact ways for you to recall your own knowledge. [78]
+If you don』t have the underlying experience, then it just reads like a collection of quotes. It』s cool, it』s inspirational for a moment, maybe you』ll make a nice poster out of it. But then you forget it and move on. Mental models are really just compact ways for you to recall your own knowledge. [78]
 
-如果你没有基本的经验，那么它读起来就像是引语的集合。它很酷，有一阵子很鼓舞人心，也许你会把它做成一张漂亮的海报。但之后你就忘了这件事，继续前进。心理模型真的只是你回忆自己知识的紧凑方式。“[78]
+如果你沒有基本的經驗，那麼它讀起來就像是引語的集合。它很酷，有一陣子很鼓舞人心，也許你會把它做成一張漂亮的海報。但之後你就忘了這件事，繼續前進。心理模型真的只是你回憶自己知識的緊湊方式。「[78]
 
 ## Evolution
 
-进化论
+進化論
 
-I think a lot of modern society can be explained through evolution. One theory is civilization exists to answer the question of who gets to mate. If you look around, from a purely sexual selection perspective, sperm is abundant and eggs are scarce. It’s an allocation problem.
+I think a lot of modern society can be explained through evolution. One theory is civilization exists to answer the question of who gets to mate. If you look around, from a purely sexual selection perspective, sperm is abundant and eggs are scarce. It』s an allocation problem.
 
-我认为很多现代社会都可以通过进化论来解释。一种理论认为，文明的存在是为了回答谁可以交配的问题。如果你环顾四周，从纯粹的性别选择角度来看，精子很丰富，卵子很稀少。这是一个分配问题。
+我認為很多現代社會都可以通過進化論來解釋。一種理論認為，文明的存在是爲了回答誰可以交配的問題。如果你環顧四周，從純粹的性別選擇角度來看，精子很豐富，卵子很稀少。這是一個分配問題。
 
 Literally all of the works of mankind and womankind can be traced down to people trying to solve this problem.
 
-从字面上讲，人类和女性的所有工作都可以追溯到试图解决这个问题的人们。
+從字面上講，人類和女性的所有工作都可以追溯到試圖解決這個問題的人們。
 
 Evolution, thermodynamics, information theory, and complexity have explanatory and predictive power in many aspects of life. [11]
-进化论、热力学、信息论和复杂性在生活的许多方面都具有解释力和预测力。
+進化論、熱力學、資訊理論和複雜性在生活的許多方面都具有解釋力和預測力。
 
 ## Inversion
 
 倒置
 
-I don’t believe I have the ability to say what is going to work. Rather, I try to eliminate what’s not going to work. I think being successful is just about not making mistakes. It’s not about having correct judgment. It’s about avoiding incorrect judgments. [4]
-我不相信我有能力说出什么是可行的。相反，我试着排除不起作用的东西。我认为成功就是不犯错误。这不是要有正确的判断。这是关于避免错误的判断。
+I don』t believe I have the ability to say what is going to work. Rather, I try to eliminate what』s not going to work. I think being successful is just about not making mistakes. It』s not about having correct judgment. It』s about avoiding incorrect judgments. [4]
+我不相信我有能力說出什麼是可行的。相反，我試著排除不起作用的東西。我認為成功就是不犯錯誤。這不是要有正確的判斷。這是關於避免錯誤的判斷。
 
 ## Complexity Theory
 
-复杂性理论
+複雜性理論
 
 I was really into complexity theory back in the mid -90s. The more I got into it, the more I understand the limits of our knowledge and the limits of our prediction capability. Complexity has been super helpful to me. It has helped me come to a system that operates in the face of ignorance. I believe we are fundamentally ignorant and very, very bad at predicting the future. [4]
-早在90年代中期，我就对复杂性理论非常着迷。我越深入，就越了解我们知识的极限和预测能力的极限。复杂性对我有很大的帮助。它帮助我形成了一个面对无知而运作的体系。我相信我们从根本上来说是无知的，在预测未来方面非常非常糟糕。
+早在90年代中期，我就對複雜性理論非常著迷。我越深入，就越瞭解我們知識的極限和預測能力的極限。複雜性對我有很大的幫助。它幫助我形成了一個面對無知而運作的體系。我相信我們從根本上來說是無知的，在預測未來方面非常非常糟糕。
 
 ## Economics
 
-经济学
+經濟學
 
-Microeconomics and game theory are fundamental. I don’t think you can be successful in business or even navigate most of our modern capitalist society without an extremely good understanding of supply -and -demand , labor -versus -capital , game theory, and those kinds of things. [4]
-微观经济学和博弈论是基础。我认为，如果不对供求关系、劳动力与资本、博弈论和诸如此类的东西有非常好的理解，你就不可能在商业上取得成功，甚至不能驾驭我们现代资本主义社会的大部分地区。
+Microeconomics and game theory are fundamental. I don』t think you can be successful in business or even navigate most of our modern capitalist society without an extremely good understanding of supply -and -demand , labor -versus -capital , game theory, and those kinds of things. [4]
+微觀經濟學和博弈論是基礎。我認為，如果不對供求關係、勞動力與資本、博弈論和諸如此類的東西有非常好的理解，你就不可能在商業上取得成功，甚至不能駕馭我們現代資本主義社會的大部分地區。
 
 Ignore the noise. The market will decide.
 
-忽略噪音。市场将做出决定。
+忽略噪音。市場將做出決定。
 
 ## Principal-Agent Problem
 
-委托代理问题
+委託代理問題
 
 To me, the principal -agent problem is the single most fundamental problem in microeconomics. If you do not understand the principal -agent problem, you will not know how to navigate your way through the world. It is important if you want to build a successful company or be successful in your dealings.
 
-对我来说，委托代理问题是微观经济学中最基本的问题。如果你不了解委托代理问题，你就不知道如何在这个世界上导航。如果你想要建立一家成功的公司或在你的交易中取得成功，这一点很重要。
+對我來說，委託代理問題是微觀經濟學中最基本的問題。如果你不瞭解委託代理問題，你就不知道如何在這個世界上導航。如果你想要建立一家成功的公司或在你的交易中取得成功，這一點很重要。
 
-It’s a very simple concept. Julius Caesar famously said, “If you want it done, then go. And if not, then send.” What he meant was, if you want it done right, then you have to go yourself and do it. When you are the principal, then you are the owner—you care, and you will do a great job. When you are the agent and you are doing it on somebody else’s behalf, you can do a bad job. You just don’t care. You optimize for yourself rather than for the principal’s assets.
+It』s a very simple concept. Julius Caesar famously said, 「If you want it done, then go. And if not, then send.」 What he meant was, if you want it done right, then you have to go yourself and do it. When you are the principal, then you are the owner—you care, and you will do a great job. When you are the agent and you are doing it on somebody else』s behalf, you can do a bad job. You just don』t care. You optimize for yourself rather than for the principal』s assets.
 
-这是一个非常简单的概念。尤利乌斯·凯撒曾说过一句名言：“如果你想做这件事，那就去做吧。如果没有，那就派人去吧。“他的意思是，如果你想把它做好，那么你必须亲自去做。当你是校长的时候，你就是所有者-你关心，你会做得很好。如果你是代理人，你是代表别人做这件事的，你可能会做得很糟糕。你就是不在乎。你是为自己而不是为委托人的资产进行优化。
+這是一個非常簡單的概念。尤利烏斯·凱撒曾說過一句名言：「如果你想做這件事，那就去做吧。如果沒有，那就派人去吧。「他的意思是，如果你想把它做好，那麼你必須親自去做。當你是校長的時候，你就是所有者-你關心，你會做得很好。如果你是代理人，你是代表別人做這件事的，你可能會做得很糟糕。你就是不在乎。你是為自己而不是為委託人的資產進行優化。
 
-The smaller the company, the more everyone feels like a principal. The less you feel like an agent, the better the job you’re going to do. The more closely you can tie someone’s compensation to the exact value they’re creating, the more you turn them into a principal, and the less you turn them into an agent. [12]
-公司越小，每个人就越觉得自己是校长。你越不觉得自己是个特工，你要做的工作就越好。你越能将某人的薪酬与他们创造的确切价值联系得越紧密，你就越能把他们变成委托人，把他们变成代理人的次数就越少。
+The smaller the company, the more everyone feels like a principal. The less you feel like an agent, the better the job you』re going to do. The more closely you can tie someone』s compensation to the exact value they』re creating, the more you turn them into a principal, and the less you turn them into an agent. [12]
+公司越小，每個人就越覺得自己是校長。你越不覺得自己是個特工，你要做的工作就越好。你越能將某人的薪酬與他們創造的確切價值聯繫得越緊密，你就越能把他們變成委託人，把他們變成代理人的次數就越少。
 
-I think at a core fundamental level, we understand this. We’re attracted to principals, and we all bond with principals, but the media and modern society spend a lot of time brainwashing you about needing an agent, an agent being important, and the agent being knowledgeable. [12]
-我认为，在核心基本面上，我们理解这一点。我们被委托人所吸引，我们都与委托人建立了联系，但媒体和现代社会花了很多时间给你洗脑，告诉你需要一个代理人，一个代理人是重要的，代理人是有知识的。
+I think at a core fundamental level, we understand this. We』re attracted to principals, and we all bond with principals, but the media and modern society spend a lot of time brainwashing you about needing an agent, an agent being important, and the agent being knowledgeable. [12]
+我認為，在覈心基本面上，我們理解這一點。我們被委託人所吸引，我們都與委託人建立了聯繫，但媒體和現代社會花了很多時間給你洗腦，告訴你需要一個代理人，一個代理人是重要的，代理人是有知識的。
 
 ## Compound Interest
 
-复利
+複利
 
-Compound interest—most of you should know it in the finance context. If you don’t, crack open a microeconomics textbook. It’s worth reading a microeconomics textbook from start to finish.
+Compound interest—most of you should know it in the finance context. If you don』t, crack open a microeconomics textbook. It』s worth reading a microeconomics textbook from start to finish.
 
-复利-你们中的大多数人应该在金融背景下知道这一点。如果你没有，打开一本微观经济学教科书。从头到尾读一本微观经济学教科书是值得的。
+複利-你們中的大多數人應該在金融背景下知道這一點。如果你沒有，打開一本微觀經濟學教科書。從頭到尾讀一本微觀經濟學教科書是值得的。
 
-An example of compound interest—let’s say you’re earning 10 percent a year on your $1. The first year, you make 10 percent, and you end up with $1.10. The next year, you end up with $1.21, and the next year $1.33. It keeps adding onto itself. If you’re compounding at 30 percent per year for thirty years, you don’t just end up with ten or twenty times your money—you end up with thousands of times your money. [10]
-举个复利的例子--假设你的1美元每年赚10%。第一年，你赚了10%，最后你得到了1.10美元。第二年，你最终会得到1.21美元，第二年是1.33美元。它不断地自我增加。如果你在30年内以每年30%的速度复利，你最终得到的不只是你钱的10倍或20倍，而是你钱的数千倍。
+An example of compound interest—let』s say you』re earning 10 percent a year on your $1. The first year, you make 10 percent, and you end up with $1.10. The next year, you end up with $1.21, and the next year $1.33. It keeps adding onto itself. If you』re compounding at 30 percent per year for thirty years, you don』t just end up with ten or twenty times your money—you end up with thousands of times your money. [10]
+舉個複利的例子--假設你的1美元每年賺10%。第一年，你賺了10%，最後你得到了1.10美元。第二年，你最終會得到1.21美元，第二年是1.33美元。它不斷地自我增加。如果你在30年內以每年30%的速度複利，你最終得到的不只是你錢的10倍或20倍，而是你錢的數千倍。
 
 In the intellectual domain, compound interest rules. When you look at a business with one hundred users growing at a compound rate of 20 percent per month, it can very, very quickly stack up to having millions of users. Sometimes, even the founders of these companies are surprised by how large the business scales. [10]
-在智力领域，复利规则。当您看到一个拥有100个用户的企业每月以20%的复合增长率增长时，它可以非常、非常快地累积到拥有数百万用户。有时，即使是这些公司的创始人也会对业务规模之大感到惊讶。“[10]
+在智力領域，複利規則。當您看到一個擁有100個使用者的企業每月以20%的複合增長率增長時，它可以非常、非常快地累積到擁有數百萬使用者。有時，即使是這些公司的創始人也會對業務規模之大感到驚訝。「[10]
 
 ## Basic Math
 
-基础数学
+基礎數學
 
-I think basic mathematics is really underrated. If you’re going to make money, if you’re going to invest money, your basic math should be really good. You don’t need to learn geometry, trigonometry, calculus, or any of the complicated stuff if you’re just going into business. But you want arithmetic, probability, and statistics. Those are extremely important. Crack open a basic math book, and make sure you are really good at multiplying, dividing, compounding, probability, and statistics.
+I think basic mathematics is really underrated. If you』re going to make money, if you』re going to invest money, your basic math should be really good. You don』t need to learn geometry, trigonometry, calculus, or any of the complicated stuff if you』re just going into business. But you want arithmetic, probability, and statistics. Those are extremely important. Crack open a basic math book, and make sure you are really good at multiplying, dividing, compounding, probability, and statistics.
 
-我认为基础数学真的被低估了。如果你要赚钱，如果你要投资，你的基础数学应该非常好。如果你刚开始做生意，你不需要学习几何、三角、微积分或任何复杂的东西。但你需要算术、概率和统计。这些都是极其重要的。打开一本基本的数学书，确保你真的擅长乘法、除法、复合、概率和统计。
+我認為基礎數學真的被低估了。如果你要賺錢，如果你要投資，你的基礎數學應該非常好。如果你剛開始做生意，你不需要學習幾何、三角、微積分或任何複雜的東西。但你需要算術、概率和統計。這些都是極其重要的。打開一本基本的數學書，確保你真的擅長乘法、除法、複合、概率和統計。
 
 ## Black Swans
 
-黑天鹅
+黑天鵝
 
-There’s a new branch of probability statistics, which is really around tail events. Black swans are extreme probabilities. Again, I have to refer back to Nassim Taleb, who I think is one of the greatest philosopher -scientists of our times. He’s really done a lot of pioneering work on this.
+There』s a new branch of probability statistics, which is really around tail events. Black swans are extreme probabilities. Again, I have to refer back to Nassim Taleb, who I think is one of the greatest philosopher -scientists of our times. He』s really done a lot of pioneering work on this.
 
-概率统计有了一个新的分支，它实际上是围绕尾部事件的。黑天鹅是极有可能的。再一次，我不得不回顾纳西姆·塔勒布，我认为他是我们这个时代最伟大的哲学家之一-科学家。他在这方面确实做了很多开创性的工作。
+概率統計有了一個新的分支，它實際上是圍繞尾部事件的。黑天鵝是極有可能的。再一次，我不得不回顧納西姆·塔勒布，我認為他是我們這個時代最偉大的哲學家之一-科學家。他在這方面確實做了很多開創性的工作。
 
 ## Calculus
 
-微积分
+微積分
 
-Calculus is useful to know, to understand the rates of change and how nature works. But it’s more important to understand the principles of calculus—where you’re measuring the change in small discrete or small continuous events. It’s not important you solve integrals or do derivations on demand, because you’re not going to need to in the business world.
+Calculus is useful to know, to understand the rates of change and how nature works. But it』s more important to understand the principles of calculus—where you』re measuring the change in small discrete or small continuous events. It』s not important you solve integrals or do derivations on demand, because you』re not going to need to in the business world.
 
-微积分对了解、理解变化率和自然界是如何运作的很有用。但更重要的是要理解微积分的原理--你要衡量的是小的离散事件或小的连续事件的变化。求解积分或按需求导数并不重要，因为在商业世界中您不需要这样做。
+微積分對了解、理解變化率和自然界是如何運作的很有用。但更重要的是要理解微積分的原理--你要衡量的是小的離散事件或小的連續事件的變化。求解積分或按需求導數並不重要，因為在商業世界中您不需要這樣做。
 
 ## Falsifiability
 
-可证伪性
+可證偽性
 
-Least understood, but the most important principle for anyone claiming “science” on their side—falsifiability. If it doesn’t make falsifiable predictions, it’s not science. For you to believe something is true, it should have predictive power, and it must be falsifiable. [11]
-最不为人所知，但对于任何声称自己是“科学”的人来说，最重要的原则是可证伪性。如果它不能做出可证伪的预测，那就不是科学。你要相信某件事是真的，它应该有预测能力，而且它必须是可证伪的。
+Least understood, but the most important principle for anyone claiming 「science」 on their side—falsifiability. If it doesn』t make falsifiable predictions, it』s not science. For you to believe something is true, it should have predictive power, and it must be falsifiable. [11]
+最不為人所知，但對於任何聲稱自己是「科學」的人來說，最重要的原則是可證偽性。如果它不能做出可證偽的預測，那就不是科學。你要相信某件事是真的，它應該有預測能力，而且它必須是可證偽的。
 
-I think macroeconomics, because it doesn’t make falsifiable predictions (which is the hallmark of science), has become corrupted. You never have a counterexample when studying the economy. You can never take the US economy and run two different experiments at the same time. [4]
-我认为宏观经济学已经腐化了，因为它不会做出可证伪的预测(这是科学的标志)。在研究经济时，你永远不会有反例。你永远不能拿美国经济来说，同时做两个不同的实验。
+I think macroeconomics, because it doesn』t make falsifiable predictions (which is the hallmark of science), has become corrupted. You never have a counterexample when studying the economy. You can never take the US economy and run two different experiments at the same time. [4]
+我認為宏觀經濟學已經腐化了，因為它不會做出可證偽的預測(這是科學的標誌)。在研究經濟時，你永遠不會有反例。你永遠不能拿美國經濟來說，同時做兩個不同的實驗。
 
-If you can’t decide, the answer is no.
+If you can』t decide, the answer is no.
 
 如果你拿不定主意，答案是否定的。
 
-If I’m faced with a difficult choice, such as:
-如果我面临一个艰难的选择，比如：
+If I』m faced with a difficult choice, such as:
+如果我面臨一個艱難的選擇，比如：
 * Should I marry this person?
-* 我应该嫁给这个人吗？
+* 我應該嫁給這個人嗎？
 * Should I take this job?
-* 我应该接受这份工作吗？
+* 我應該接受這份工作嗎？
 * Should I buy this house?
-* 我应该买下这栋房子吗？
+* 我應該買下這棟房子嗎？
 * Should I move to this city?
-* 我应该搬到这个城市去吗？
+* 我應該搬到這個城市去嗎？
 * Should I go into business with this person?
-* 我应该和这个人做生意吗？
+* 我應該和這個人做生意嗎？
 If you cannot decide, the answer is no. And the reason is, modern society is full of options. There are tons and tons of options. We live on a planet of seven billion people, and we are connected to everybody on the internet. There are hundreds of thousands of careers available to you. There are so many choices.
 
-如果你不能决定，答案是否定的。原因是，现代社会充满了选择。有许许多多的选择。我们生活在一个拥有70亿人口的星球上，我们与互联网上的每个人都相连。你有成千上万的职业可供选择。有这么多选择。
+如果你不能決定，答案是否定的。原因是，現代社會充滿了選擇。有許許多多的選擇。我們生活在一個擁有70億人口的星球上，我們與網際網路上的每個人都相連。你有成千上萬的職業可供選擇。有這麼多選擇。
 
-You’re biologically not built to realize how many choices there are. Historically, we’ve all evolved in tribes of 150 people. When someone comes along, they may be your only option for a partner.
+You』re biologically not built to realize how many choices there are. Historically, we』ve all evolved in tribes of 150 people. When someone comes along, they may be your only option for a partner.
 
-从生物学上讲，你不是为了意识到有多少选择而生的。从历史上看，我们都是在150人的部落中进化的。当有人出现时，他们可能是你唯一的伴侣选择。
+從生物學上講，你不是爲了意識到有多少選擇而生的。從歷史上看，我們都是在150人的部落中進化的。當有人出現時，他們可能是你唯一的伴侶選擇。
 
-When you choose something, you get locked in for a long time. Starting a business may take ten years. You start a relationship that will be five years or maybe more. You move to a city for ten to twenty years. These are very, very long -lived decisions. It’s very, very important we only say yes when we are pretty certain. You’re never going to be absolutely certain, but you’re going to be very certain.
+When you choose something, you get locked in for a long time. Starting a business may take ten years. You start a relationship that will be five years or maybe more. You move to a city for ten to twenty years. These are very, very long -lived decisions. It』s very, very important we only say yes when we are pretty certain. You』re never going to be absolutely certain, but you』re going to be very certain.
 
-当你选择某样东西时，你会被锁定很长一段时间。创业可能需要十年时间。你开始了一段五年甚至更长时间的关系。你搬到一个城市住十到二十年。这些都是非常、非常持久的决定。非常非常重要的是，我们只有在相当确定的情况下才会说“是”。你永远不会绝对确定，但你会非常确定。
+當你選擇某樣東西時，你會被鎖定很長一段時間。創業可能需要十年時間。你開始了一段五年甚至更長時間的關係。你搬到一個城市住十到二十年。這些都是非常、非常持久的決定。非常非常重要的是，我們只有在相當確定的情況下才會說「是」。你永遠不會絕對確定，但你會非常確定。
 
-If you find yourself creating a spreadsheet for a decision with a list of yes’s and no’s, pros and cons, checks and balances, why this is good or bad…forget it. If you cannot decide, the answer is no. [10]
-如果您发现自己正在为一项决策创建一个电子表格，其中包含一系列是与否、利弊、制衡的列表，那么为什么这是一个好的或坏的…休想。如果你不能决定，答案是否定的。
+If you find yourself creating a spreadsheet for a decision with a list of yes』s and no』s, pros and cons, checks and balances, why this is good or bad…forget it. If you cannot decide, the answer is no. [10]
+如果您發現自己正在為一項決策建立一個電子表格，其中包含一系列是與否、利弊、制衡的列表，那麼為什麼這是一個好的或壞的…休想。如果你不能決定，答案是否定的。
 
 ## Run Uphill
 
 上坡跑步
 
-Simple heuristic: If you’re evenly split on a difficult decision, take the path more painful in the short term.
+Simple heuristic: If you』re evenly split on a difficult decision, take the path more painful in the short term.
 
-简单启发式：如果你在一个艰难的决定上意见不一，那么在短期内走一条更痛苦的道路。
+簡單啓發式：如果你在一個艱難的決定上意見不一，那麼在短期內走一條更痛苦的道路。
 
-If you have two choices to make, and they’re relatively equal choices, take the path more difficult and more painful in the short term.
+If you have two choices to make, and they』re relatively equal choices, take the path more difficult and more painful in the short term.
 
-如果你有两个选择要做，而且是相对平等的选择，那么在短期内走一条更艰难、更痛苦的路吧。
+如果你有兩個選擇要做，而且是相對平等的選擇，那麼在短期內走一條更艱難、更痛苦的路吧。
 
-What’s actually going on is one of these paths requires short -term pain. And the other path leads to pain further out in the future. And what your brain is doing through conflict -avoidance is trying to push off the short -term pain.
+What』s actually going on is one of these paths requires short -term pain. And the other path leads to pain further out in the future. And what your brain is doing through conflict -avoidance is trying to push off the short -term pain.
 
-实际上，其中一条道路需要短期的痛苦。而另一条路则会在未来带来更远的痛苦。而你的大脑通过避免冲突所做的就是试图推开短期的痛苦。
+實際上，其中一條道路需要短期的痛苦。而另一條路則會在未來帶來更遠的痛苦。而你的大腦通過避免衝突所做的就是試圖推開短期的痛苦。
 
 By definition, if the two are even and one has short -term pain, that path has long -term gain associated. With the law of compound interest, long -term gain is what you want to go toward. Your brain is overvaluing the side with the short -term happiness and trying to avoid the one with short -term pain.
 
-根据定义，如果两者相等，其中一个有短期痛苦，那么这条道路就有长期收益。根据复利定律，长期收益是你想要达到的目标。你的大脑高估了有短期快乐的那一边，而试图避开有短期痛苦的那一边。
+根據定義，如果兩者相等，其中一個有短期痛苦，那麼這條道路就有長期收益。根據複利定律，長期收益是你想要達到的目標。你的大腦高估了有短期快樂的那一邊，而試圖避開有短期痛苦的那一邊。
 
-So you have to cancel the tendency out (it’s a powerful subconscious tendency) by leaning into the pain. As you know, most of the gains in life come from suffering in the short term so you can get paid in the long term.
+So you have to cancel the tendency out (it』s a powerful subconscious tendency) by leaning into the pain. As you know, most of the gains in life come from suffering in the short term so you can get paid in the long term.
 
-所以你必须靠向疼痛来抵消这种倾向(这是一种强大的潜意识倾向)。正如你所知道的，生活中的大部分收获都来自于短期的痛苦，所以你可以在长期内获得报酬。
+所以你必須靠向疼痛來抵消這種傾向(這是一種強大的潛意識傾向)。正如你所知道的，生活中的大部分收穫都來自於短期的痛苦，所以你可以在長期內獲得報酬。
 
-Working out for me is not fun; I suffer in the short term, I feel pain. But then in the long term, I’m better off because I have muscles or I’m healthier.
+Working out for me is not fun; I suffer in the short term, I feel pain. But then in the long term, I』m better off because I have muscles or I』m healthier.
 
-锻炼对我来说并不好玩；我在短期内受苦，我感到痛苦。但从长远来看，我会过得更好，因为我有肌肉，或者我更健康。
+鍛鍊對我來說並不好玩；我在短期內受苦，我感到痛苦。但從長遠來看，我會過得更好，因為我有肌肉，或者我更健康。
 
-If I am reading a book and I’m getting confused, it is just like working out and the muscle getting sore or tired, except now my brain is being overwhelmed. In the long run I’m getting smarter because I’m absorbing new concepts from working at the limit or edge of my capability.
+If I am reading a book and I』m getting confused, it is just like working out and the muscle getting sore or tired, except now my brain is being overwhelmed. In the long run I』m getting smarter because I』m absorbing new concepts from working at the limit or edge of my capability.
 
-如果我在读一本书时感到困惑，就像锻炼时肌肉酸痛或疲惫一样，只是现在我的大脑已经不堪重负了。从长远来看，我变得越来越聪明，因为我在尽我的能力工作中吸收新的概念。
+如果我在讀一本書時感到困惑，就像鍛鍊時肌肉痠痛或疲憊一樣，只是現在我的大腦已經不堪重負了。從長遠來看，我變得越來越聰明，因為我在盡我的能力工作中吸收新的概念。
 
 So you generally want to lean into things with short -term pain, but long -term gain.
 
-因此，你通常会倾向于做一些有短期痛苦，但有长期收益的事情。
+因此，你通常會傾向於做一些有短期痛苦，但有長期收益的事情。
 
 What are the most efficient ways to build new mental models?
 
-建立新的心理模型最有效的方法是什么？
+建立新的心理模型最有效的方法是什麼？
 
 Read a lot—just read. [2]
 
-多读书--只要读就行了。
+多讀書--只要讀就行了。
 
 Reading science, math, and philosophy one hour per day will likely put you at the upper echelon of human success within seven years.
 
-每天阅读科学、数学和哲学一小时，可能会让你在七年内跻身人类成功的最高梯队。
+每天閱讀科學、數學和哲學一小時，可能會讓你在七年內躋身人類成功的最高梯隊。
