--- a/1-19.md
+++ b/1-19.md
@@ -1,237 +1,237 @@
 # Learn to Love to Read
 
-学会爱读书
+學會愛讀書
 
-(Specific recommendations for books, blogs, and more are in “Naval’s Recommended Reading” section.)
+(Specific recommendations for books, blogs, and more are in 「Naval』s Recommended Reading」 section.)
 
-(关于书籍、博客等的具体推荐请参见“纳瓦尔推荐读物”部分。)
+(關於書籍、部落格等的具體推薦請參見「納瓦爾推薦讀物」部分。)
 
-The genuine love for reading itself, when cultivated, is a superpower. We live in the age of Alexandria, when every book and every piece of knowledge ever written down is a fingertip away. The means of learning are abundant—it’s the desire to learn that is scarce. [3]
-对阅读的真正热爱，一旦培养起来，就是一种超强的力量。我们生活在亚历山大时代，在这个时代，每一本书和每一段写下的知识都离我们只有一指之遥。学习的手段是丰富的--学习的欲望是稀缺的。
+The genuine love for reading itself, when cultivated, is a superpower. We live in the age of Alexandria, when every book and every piece of knowledge ever written down is a fingertip away. The means of learning are abundant—it』s the desire to learn that is scarce. [3]
+對閱讀的真正熱愛，一旦培養起來，就是一種超強的力量。我們生活在亞歷山大時代，在這個時代，每一本書和每一段寫下的知識都離我們只有一指之遙。學習的手段是豐富的--學習的慾望是稀缺的。
 
 Reading was my first love. [4]
 
-阅读是我的初恋。
+閱讀是我的初戀。
 
-I remember my grandparents’ house in India. I’d be a little kid on the floor going through all of my grandfather’s Reader’s Digest s, which is all he had to read. Now, of course, there’s a smorgasbord of information out there—anybody can read anything all the time. Back then, it was much more limited. I would read comic books, storybooks, whatever I could get my hands on.
+I remember my grandparents』 house in India. I』d be a little kid on the floor going through all of my grandfather』s Reader』s Digest s, which is all he had to read. Now, of course, there』s a smorgasbord of information out there—anybody can read anything all the time. Back then, it was much more limited. I would read comic books, storybooks, whatever I could get my hands on.
 
-我记得我祖父母在印度的房子。我会是一个躺在地板上的小孩子，阅读我祖父所有的读者文摘，这就是他要读的全部内容。当然，现在有各种各样的信息--任何人都可以随时阅读任何东西。当时，它的限制要有限得多。我会读漫画书，故事书，任何我能弄到的书。
+我記得我祖父母在印度的房子。我會是一個躺在地板上的小孩子，閱讀我祖父所有的讀者文摘，這就是他要讀的全部內容。當然，現在有各種各樣的資訊--任何人都可以隨時閱讀任何東西。當時，它的限制要有限得多。我會讀漫畫書，故事書，任何我能弄到的書。
 
-I think I always loved to read because I’m actually an antisocial introvert. I was lost in the world of words and ideas from an early age. I think some of it comes from the happy circumstance that when I was young, nobody forced me to read certain things.
+I think I always loved to read because I』m actually an antisocial introvert. I was lost in the world of words and ideas from an early age. I think some of it comes from the happy circumstance that when I was young, nobody forced me to read certain things.
 
-我想我一直都喜欢读书，因为我实际上是一个反社会的内向的人。我从小就迷失在文字和思想的世界里。我想部分原因是因为我年轻的时候，没有人强迫我读某些东西，这是一种幸福的环境。
+我想我一直都喜歡讀書，因為我實際上是一個反社會的內向的人。我從小就迷失在文字和思想的世界裡。我想部分原因是因為我年輕的時候，沒有人強迫我讀某些東西，這是一種幸福的環境。
 
-I think there’s a tendency among parents and teachers to say, “Oh, you should read this, but don’t read that.” I read a lot which (by today’s standards) would be considered mental junk food. [4]
-我认为在家长和老师中有一种倾向，他们会说，“哦，你应该读这个，但不要读那个。”我读了很多(按照今天的标准)会被认为是精神垃圾食品的书。
+I think there』s a tendency among parents and teachers to say, 「Oh, you should read this, but don』t read that.」 I read a lot which (by today』s standards) would be considered mental junk food. [4]
+我認為在家長和老師中有一種傾向，他們會說，「哦，你應該讀這個，但不要讀那個。」我讀了很多(按照今天的標準)會被認為是精神垃圾食品的書。
 
 Read what you love until you love to read.
 
-读你喜欢的书，直到你爱读为止。
+讀你喜歡的書，直到你愛讀為止。
 
-You almost have to read the stuff you’re reading, because you’re into it. You don’t need any other reason. There’s no mission here to accomplish. Just read because you enjoy it.
+You almost have to read the stuff you』re reading, because you』re into it. You don』t need any other reason. There』s no mission here to accomplish. Just read because you enjoy it.
 
-你几乎不得不读你正在读的东西，因为你对它很着迷。你不需要任何其他理由。这里没有要完成的任务。阅读只是因为你喜欢它。
+你幾乎不得不讀你正在讀的東西，因為你對它很著迷。你不需要任何其他理由。這裡沒有要完成的任務。閱讀只是因為你喜歡它。
 
-These days, I find myself rereading as much (or more) as I do reading. A tweet from @illacertus said, “I don’t want to read everything. I just want to read the 100 great books over and over again.” I think there’s a lot to that idea. It’s really more about identifying the great books for you because different books speak to different people. Then, you can really absorb those.
+These days, I find myself rereading as much (or more) as I do reading. A tweet from @illacertus said, 「I don』t want to read everything. I just want to read the 100 great books over and over again.」 I think there』s a lot to that idea. It』s really more about identifying the great books for you because different books speak to different people. Then, you can really absorb those.
 
-这些天，我发现自己重读的次数和读书一样多(甚至更多)。@illacertus的一条推文说，“我不想读所有的东西。我只想一遍又一遍地读100本好书。“我认为这个想法有很大的道理。这实际上更多的是为你识别伟大的书籍，因为不同的书对不同的人说话。然后，你才能真正吸收这些东西。
+這些天，我發現自己重讀的次數和讀書一樣多(甚至更多)。@illacertus的一條推文說，「我不想讀所有的東西。我只想一遍又一遍地讀100本好書。「我認為這個想法有很大的道理。這實際上更多的是為你識別偉大的書籍，因為不同的書對不同的人說話。然後，你才能真正吸收這些東西。
 
-Reading a book isn’t a race—the better the book, the more slowly it should be absorbed.
+Reading a book isn』t a race—the better the book, the more slowly it should be absorbed.
 
-阅读一本书不是一场竞赛--书越好，它被吸收的速度就越慢。
+閱讀一本書不是一場競賽--書越好，它被吸收的速度就越慢。
 
-I don’t know about you, but I have very poor attention. I skim. I speed read. I jump around. I could not tell you specific passages or quotes from books. At some deep level, you absorb them, and they become threads in the tapestry of your psyche. They kind of weave in there.
+I don』t know about you, but I have very poor attention. I skim. I speed read. I jump around. I could not tell you specific passages or quotes from books. At some deep level, you absorb them, and they become threads in the tapestry of your psyche. They kind of weave in there.
 
-我不知道你怎么样，但我的注意力很差。我略读。我快速阅读。我跳来跳去。我不能告诉你书中的具体段落或语录。在某些深层次上，你吸收它们，它们就会成为你心灵织锦上的线。他们在那里有点纠结。
+我不知道你怎麼樣，但我的注意力很差。我略讀。我快速閱讀。我跳來跳去。我不能告訴你書中的具體段落或語錄。在某些深層次上，你吸收它們，它們就會成為你心靈織錦上的線。他們在那裡有點糾結。
 
-I’m sure you’ve had this feeling where you pick up a book and start reading it, and you’re like, “This is pretty interesting. This is pretty good.” You’re getting this increasing sense of deja vu. Then halfway through the book, you realize, “I’ve read this book before.” That’s perfectly fine. It means you were ready to reread it. [4]
-我相信你一定有过这样的感觉，当你拿起一本书开始阅读时，你会说，“这很有趣。这是相当不错的。“你会越来越有似曾相识的感觉。然后这本书读到一半，你就会意识到，“我以前读过这本书。”那太好了。这意味着你已经准备好重读了。
+I』m sure you』ve had this feeling where you pick up a book and start reading it, and you』re like, 「This is pretty interesting. This is pretty good.」 You』re getting this increasing sense of deja vu. Then halfway through the book, you realize, 「I』ve read this book before.」 That』s perfectly fine. It means you were ready to reread it. [4]
+我相信你一定有過這樣的感覺，當你拿起一本書開始閱讀時，你會說，「這很有趣。這是相當不錯的。「你會越來越有似曾相識的感覺。然後這本書讀到一半，你就會意識到，「我以前讀過這本書。」那太好了。這意味著你已經準備好重讀了。
 
-I don’t actually read a lot of books. I pick up a lot of books and only get through a few which form the foundation of my knowledge.
+I don』t actually read a lot of books. I pick up a lot of books and only get through a few which form the foundation of my knowledge.
 
-我其实不怎么看书。我捡了很多书，但只读了几本，这些书构成了我知识的基础。
+我其實不怎麼看書。我撿了很多書，但只讀了幾本，這些書構成了我知識的基礎。
 
-The reality is, I don’t actually read much compared to what people think. I probably read one to two hours a day. That puts me in the top .00001 percent. I think that alone accounts for any material success I’ve had in my life and any intelligence I might have. Real people don’t read an hour a day. Real people, I think, read a minute a day or less. Making it an actual habit is the most important thing.
+The reality is, I don』t actually read much compared to what people think. I probably read one to two hours a day. That puts me in the top .00001 percent. I think that alone accounts for any material success I』ve had in my life and any intelligence I might have. Real people don』t read an hour a day. Real people, I think, read a minute a day or less. Making it an actual habit is the most important thing.
 
-事实是，与人们的想法相比，我实际上读得并不多。我可能一天看一到两个小时的书。这使我跻身前0.00001%的行列。我认为，光是这一点就可以解释我生活中取得的任何物质成功和我可能拥有的任何智力。真正的人每天不会看一个小时的书。我认为，真正的人每天阅读一分钟或更少。让它成为一种实际的习惯是最重要的。
+事實是，與人們的想法相比，我實際上讀得並不多。我可能一天看一到兩個小時的書。這使我躋身前0.00001%的行列。我認為，光是這一點就可以解釋我生活中取得的任何物質成功和我可能擁有的任何智力。真正的人每天不會看一個小時的書。我認為，真正的人每天閱讀一分鐘或更少。讓它成為一種實際的習慣是最重要的。
 
-It almost doesn’t matter what you read. Eventually, you will read enough things (and your interests will lead you there) that it will dramatically improve your life. Just like the best workout for you is one you’re excited enough to do every day, I would say for books, blogs, tweets, or whatever—anything with ideas and information and learning—the best ones to read are the ones you’re excited about reading all the time. [4]
+It almost doesn』t matter what you read. Eventually, you will read enough things (and your interests will lead you there) that it will dramatically improve your life. Just like the best workout for you is one you』re excited enough to do every day, I would say for books, blogs, tweets, or whatever—anything with ideas and information and learning—the best ones to read are the ones you』re excited about reading all the time. [4]
 
-你读什么几乎无关紧要。最终，你会读到足够多的东西(你的兴趣会引导你去那里)，这将极大地改善你的生活。就像对你来说最好的锻炼是你每天都足够兴奋的锻炼一样，我想说对于书籍、博客、推特或任何东西-任何有想法、信息和学习的东西-最值得阅读的是那些你总是对阅读感到兴奋的书。
+你讀什麼幾乎無關緊要。最終，你會讀到足夠多的東西(你的興趣會引導你去那裡)，這將極大地改善你的生活。就像對你來說最好的鍛鍊是你每天都足夠興奮的鍛鍊一樣，我想說對於書籍、部落格、推特或任何東西-任何有想法、資訊和學習的東西-最值得閱讀的是那些你總是對閱讀感到興奮的書。
 
-“As long as I have a book in my hand, I don’t feel like I’m wasting time.”
-“只要我手里还拿着一本书，我就不会觉得自己在浪费时间。”
+「As long as I have a book in my hand, I don』t feel like I』m wasting time.」
+「只要我手裡還拿著一本書，我就不會覺得自己在浪費時間。」
 
 —Charlie Munger
 
 --查理·芒格(Charlie Munger)
 
-Everyone’s brain works differently. Some people love to take notes. Actually, my notetaking is Twitter. I read and read and read. If I have some fundamental “ah -ha ” insight or concept, Twitter forces me to distill it into a few characters. Then I try and put it out there as an aphorism. Then I get attacked by random people who point out all kinds of obvious exceptions and jump down my throat. Then I think, “Why did I do this again?” [4]
+Everyone』s brain works differently. Some people love to take notes. Actually, my notetaking is Twitter. I read and read and read. If I have some fundamental 「ah -ha 」 insight or concept, Twitter forces me to distill it into a few characters. Then I try and put it out there as an aphorism. Then I get attacked by random people who point out all kinds of obvious exceptions and jump down my throat. Then I think, 「Why did I do this again?」 [4]
 
-每个人的大脑工作方式都不同。有些人喜欢做笔记。事实上，我的笔记是推特。我读啊读。如果我有一些基本的“啊哈”的洞察力或概念，Twitter强迫我把它提炼成几个字符。然后我试着把它作为格言发布出去。然后，我被随机的人攻击，他们指出了各种明显的例外情况，并猛烈抨击我。然后我想，“我为什么要再做一次呢？”
+每個人的大腦工作方式都不同。有些人喜歡做筆記。事實上，我的筆記是推特。我讀啊讀。如果我有一些基本的「啊哈」的洞察力或概念，Twitter強迫我把它提煉成幾個字元。然後我試著把它作為格言發佈出去。然後，我被隨機的人攻擊，他們指出了各種明顯的例外情況，並猛烈抨擊我。然後我想，「我為什麼要再做一次呢？」
 
-Pointing out obvious exceptions implies either the target isn’t smart or you aren’t.
+Pointing out obvious exceptions implies either the target isn』t smart or you aren』t.
 
-指出明显的例外意味着要么目标不聪明，要么你不聪明。
+指出明顯的例外意味著要麼目標不聰明，要麼你不聰明。
 
-When you first pick up a book, are you skimming for something interesting? How do you go about reading it? Do you just flip to a random page and start reading? What’s your process?
-当你第一次拿起一本书时，你是在浏览有趣的东西吗？你是怎么读这本书的？你会随便翻到一页就开始阅读吗？你的流程是什么？
-I’ll start at the beginning, but I’ll move fast. If it’s not interesting, I’ll just start flipping ahead, skimming, or speed reading. If it doesn’t grab my attention within the first chapter in a meaningful, positive way, I’ll either drop the book or skip ahead a few chapters.
+When you first pick up a book, are you skimming for something interesting? How do you go about reading it? Do you just flip to a random page and start reading? What』s your process?
+當你第一次拿起一本書時，你是在瀏覽有趣的東西嗎？你是怎麼讀這本書的？你會隨便翻到一頁就開始閱讀嗎？你的流程是什麼？
+I』ll start at the beginning, but I』ll move fast. If it』s not interesting, I』ll just start flipping ahead, skimming, or speed reading. If it doesn』t grab my attention within the first chapter in a meaningful, positive way, I』ll either drop the book or skip ahead a few chapters.
 
-我会从头开始，但我会动作快。如果不有趣，我就开始往前翻，略读，或者快速阅读。如果它不能在第一章中以一种有意义的、积极的方式吸引我的注意力，我要么放弃这本书，要么跳过几章。
+我會從頭開始，但我會動作快。如果不有趣，我就開始往前翻，略讀，或者快速閱讀。如果它不能在第一章中以一種有意義的、積極的方式吸引我的注意力，我要麼放棄這本書，要麼跳過幾章。
 
-I don’t believe in delayed gratification when there are an infinite number of books out there to read. There are so many great books.
+I don』t believe in delayed gratification when there are an infinite number of books out there to read. There are so many great books.
 
-当有无限多的书可供阅读时，我不相信延迟满足。有这么多好书。
+當有無限多的書可供閱讀時，我不相信延遲滿足。有這麼多好書。
 
 The number of books completed is a vanity metric. As you know more, you leave more books unfinished. Focus on new concepts with predictive power.
 
-完成的图书数量是一个虚荣心的指标。随着你知道的越多，你留下的未完成的书就越多。关注具有预测力的新概念。
+完成的圖書數量是一個虛榮心的指標。隨著你知道的越多，你留下的未完成的書就越多。關注具有預測力的新概念。
 
-Generally, I’ll skim. I’ll fast forward. I’ll try and find a part to catch my attention. Most books have one point to make. (Obviously, this is nonfiction. I’m not talking about fiction.) They have one point to make, they make it, and then they give you example after example after example after example, and they apply it to explain everything in the world. Once I feel like I’ve gotten the gist, I feel very comfortable putting the book down. There’s a lot of these, what I would call pseudoscience bestsellers…People are like, “Oh, did you read this book?” I always say yes, but the reality is I read maybe two chapters of it. I got the gist.
+Generally, I』ll skim. I』ll fast forward. I』ll try and find a part to catch my attention. Most books have one point to make. (Obviously, this is nonfiction. I』m not talking about fiction.) They have one point to make, they make it, and then they give you example after example after example after example, and they apply it to explain everything in the world. Once I feel like I』ve gotten the gist, I feel very comfortable putting the book down. There』s a lot of these, what I would call pseudoscience bestsellers…People are like, 「Oh, did you read this book?」 I always say yes, but the reality is I read maybe two chapters of it. I got the gist.
 
-一般来说，我会略读一下。我会快进的。我会试着找一个能引起我注意的零件。大多数书都有一点要说明。(显然，这是非虚构的。我不是在说小说。)他们有一点要说明，他们会提出，然后他们会给你一个接一个的例子，然后他们用它来解释世界上的一切。一旦我感觉到了要领，我就会觉得很舒服地把书放下。有很多这样的，我称之为伪科学畅销书…人们会说，“哦，你读过这本书吗？”我总是说可以，但事实是我可能读了其中的两章。我抓住要点了。
+一般來說，我會略讀一下。我會快進的。我會試著找一個能引起我注意的零件。大多數書都有一點要說明。(顯然，這是非虛構的。我不是在說小說。)他們有一點要說明，他們會提出，然後他們會給你一個接一個的例子，然後他們用它來解釋世界上的一切。一旦我感覺到了要領，我就會覺得很舒服地把書放下。有很多這樣的，我稱之為偽科學暢銷書…人們會說，「哦，你讀過這本書嗎？」我總是說可以，但事實是我可能讀了其中的兩章。我抓住要點了。
 
-If they wrote it to make money, don’t read it.
+If they wrote it to make money, don』t read it.
 
-如果他们是为了赚钱而写的，那就不要看。
+如果他們是爲了賺錢而寫的，那就不要看。
 
 What practices do you follow to internalize/organize information from reading books?
-你遵循哪些做法来内化/组织阅读书籍中的信息？
+你遵循哪些做法來內化/組織閱讀書籍中的資訊？
 Explain what you learned to someone else. Teaching forces learning.
 
-向别人解释你学到的东西。教书育人，学以致用。
+向別人解釋你學到的東西。教書育人，學以致用。
 
-It’s not about “educated” vs. “uneducated.” It’s about “likes to read” and “doesn’t like to read.”
+It』s not about 「educated」 vs. 「uneducated.」 It』s about 「likes to read」 and 「doesn』t like to read.」
 
-这不是“受过教育”还是“没有受过教育”的问题。它是关于“喜欢阅读”和“不喜欢阅读”。
+這不是「受過教育」還是「沒有受過教育」的問題。它是關於「喜歡閱讀」和「不喜歡閱讀」。
 
 What can I do for the next sixty days to become a clearer, more independent thinker?
 
-在接下来的60天里，我能做些什么来成为一个更清晰、更独立的思考者？
+在接下來的60天里，我能做些什麼來成為一個更清晰、更獨立的思考者？
 
 Read the greats in math, science, and philosophy. Ignore your contemporaries and news. Avoid tribal identification. Put truth above social approval. [11]
 
-阅读数学、科学和哲学方面的名著。忽略你的同龄人和新闻。避免部落认同。把真相放在社会认可之上。
+閱讀數學、科學和哲學方面的名著。忽略你的同齡人和新聞。避免部落認同。把真相放在社會認可之上。
 
-Study logic and math, because once you’ve mastered them, you won’t fear any book.
+Study logic and math, because once you』ve mastered them, you won』t fear any book.
 
-学习逻辑和数学，因为一旦你掌握了它们，你就不会害怕任何一本书。
+學習邏輯和數學，因為一旦你掌握了它們，你就不會害怕任何一本書。
 
-No book in the library should scare you. Whether it’s a math, physics, electrical engineering, sociology, or economics book. You should be able to take any book down off the shelf and read it. A number of them are going to be too difficult for you. That’s okay—read them anyway. Then go back and reread them and reread them.
+No book in the library should scare you. Whether it』s a math, physics, electrical engineering, sociology, or economics book. You should be able to take any book down off the shelf and read it. A number of them are going to be too difficult for you. That』s okay—read them anyway. Then go back and reread them and reread them.
 
-图书馆里没有一本书能吓到你。无论是数学、物理、电气工程、社会学还是经济学书籍。你应该可以把书架上的任何一本书拿下来读。其中一些对你来说太难了。没关系--不管怎样，还是要读一读。然后回去再读一遍，再读一遍。
+圖書館裡沒有一本書能嚇到你。無論是數學、物理、電氣工程、社會學還是經濟學書籍。你應該可以把書架上的任何一本書拿下來讀。其中一些對你來說太難了。沒關係--不管怎樣，還是要讀一讀。然後回去再讀一遍，再讀一遍。
 
-When you’re reading a book and you’re confused, that confusion is similar to the pain you get in the gym when you’re working out. But you’re building mental muscles instead of physical muscles. Learn how to learn and read the books.
+When you』re reading a book and you』re confused, that confusion is similar to the pain you get in the gym when you』re working out. But you』re building mental muscles instead of physical muscles. Learn how to learn and read the books.
 
-当你在读一本书时感到困惑，这种困惑就像你在健身房锻炼时的疼痛一样。但你在锻炼的是心理肌肉，而不是身体肌肉。学习如何学习和阅读书籍。
+當你在讀一本書時感到困惑，這種困惑就像你在健身房鍛鍊時的疼痛一樣。但你在鍛鍊的是心理肌肉，而不是身體肌肉。學習如何學習和閱讀書籍。
 
-The problem with saying “just read” is there is so much junk out there. There are as many different kinds of authors as there are people. Many of them are going to write lots of junk.
+The problem with saying 「just read」 is there is so much junk out there. There are as many different kinds of authors as there are people. Many of them are going to write lots of junk.
 
-说“只读”的问题是外面有太多垃圾了。有多少人，就有多少种不同的作者。他们中的许多人将会写很多垃圾。
+說「只讀」的問題是外面有太多垃圾了。有多少人，就有多少種不同的作者。他們中的許多人將會寫很多垃圾。
 
-I have people in my life I consider to be very well -read who aren’t very smart. The reason is because even though they’re very well -read , they read the wrong things in the wrong order. They started out reading a set of false or just weakly true things, and those formed the axioms of the foundation for their worldview. Then, when new things come, they judge the new idea based on a foundation they already built. Your foundation is critical.
+I have people in my life I consider to be very well -read who aren』t very smart. The reason is because even though they』re very well -read , they read the wrong things in the wrong order. They started out reading a set of false or just weakly true things, and those formed the axioms of the foundation for their worldview. Then, when new things come, they judge the new idea based on a foundation they already built. Your foundation is critical.
 
-在我的生活中，有一些我认为非常博学的人并不是很聪明。原因是，即使他们非常博览群书，他们也会以错误的顺序阅读错误的东西。他们开始阅读一系列错误的或微弱真实的东西，这些东西构成了他们世界观的基础公理。然后，当新事物到来时，他们会根据自己已经建立的基础来判断新想法。你的基础很重要。
+在我的生活中，有一些我認為非常博學的人並不是很聰明。原因是，即使他們非常博覽群書，他們也會以錯誤的順序閱讀錯誤的東西。他們開始閱讀一系列錯誤的或微弱真實的東西，這些東西構成了他們世界觀的基礎公理。然後，當新事物到來時，他們會根據自己已經建立的基礎來判斷新想法。你的基礎很重要。
 
-Because most people are intimidated by math and can’t independently critique it, they overvalue opinions backed with math/pseudoscience.
+Because most people are intimidated by math and can』t independently critique it, they overvalue opinions backed with math/pseudoscience.
 
-因为大多数人都被数学吓倒，不能独立批评它，所以他们高估了有数学/伪科学支持的观点。
+因為大多數人都被數學嚇倒，不能獨立批評它，所以他們高估了有數學/偽科學支援的觀點。
 
 When it comes to reading, make sure your foundation is very, very high quality.
 
-当谈到阅读时，要确保你的基础质量非常非常高。
+當談到閱讀時，要確保你的基礎質量非常非常高。
 
-The best way to have a high -quality foundation (you may not love this answer), but the trick is to stick to science and to stick to the basics. Generally, there are only a few things you can read people don’t disagree with. Very few people disagree 2+2=4, right? That is serious knowledge. Mathematics is a solid foundation.
+The best way to have a high -quality foundation (you may not love this answer), but the trick is to stick to science and to stick to the basics. Generally, there are only a few things you can read people don』t disagree with. Very few people disagree 2+2=4, right? That is serious knowledge. Mathematics is a solid foundation.
 
-拥有高质量基础的最好方法(你可能不会喜欢这个答案)，但诀窍是坚持科学，坚持基础。一般说来，你能读到的东西很少，人们不会不同意。很少有人不同意2+2=4，对吗？这是一门严肃的学问。数学是一个坚实的基础。
+擁有高質量基礎的最好方法(你可能不會喜歡這個答案)，但訣竅是堅持科學，堅持基礎。一般說來，你能讀到的東西很少，人們不會不同意。很少有人不同意2+2=4，對嗎？這是一門嚴肅的學問。數學是一個堅實的基礎。
 
-Similarly, the hard sciences are a solid foundation. Microeconomics is a solid foundation. The moment you start wandering outside of these solid foundations you’re in trouble because now you don’t know what’s true and what’s false. I would focus as much as I could on having solid foundations.
+Similarly, the hard sciences are a solid foundation. Microeconomics is a solid foundation. The moment you start wandering outside of these solid foundations you』re in trouble because now you don』t know what』s true and what』s false. I would focus as much as I could on having solid foundations.
 
-同样，硬科学也是坚实的基础。微观经济学是一个坚实的基础。当你开始在这些坚实的基础之外徘徊的那一刻，你就有麻烦了，因为现在你不知道什么是真的，什么是假的。我会尽我所能专注于拥有坚实的基础。
+同樣，硬科學也是堅實的基礎。微觀經濟學是一個堅實的基礎。當你開始在這些堅實的基礎之外徘徊的那一刻，你就有麻煩了，因為現在你不知道什麼是真的，什麼是假的。我會盡我所能專注于擁有堅實的基礎。
 
-It’s better to be really great at arithmetic and geometry than to be deep into advanced mathematics. I would read microeconomics all day long—Microeconomics 101.
+It』s better to be really great at arithmetic and geometry than to be deep into advanced mathematics. I would read microeconomics all day long—Microeconomics 101.
 
-真正精通算术和几何要比深谙高等数学要好。我会整天读“微观经济学”--“微观经济学入门”。
+真正精通算術和幾何要比深諳高等數學要好。我會整天讀「微觀經濟學」--「微觀經濟學入門」。
 
-Another way to do this is to read originals and read classics. If you’re interested in evolution, read Charles Darwin. Don’t begin with Richard Dawkins (even though I think he’s great). Read him later; read Darwin first.
+Another way to do this is to read originals and read classics. If you』re interested in evolution, read Charles Darwin. Don』t begin with Richard Dawkins (even though I think he』s great). Read him later; read Darwin first.
 
-另一种方法是阅读原著和经典。如果你对进化论感兴趣，请阅读查尔斯·达尔文。不要从理查德·道金斯开始(尽管我认为他很棒)。以后再读他，先读达尔文。
+另一種方法是閱讀原著和經典。如果你對進化論感興趣，請閱讀查爾斯·達爾文。不要從理查德·道金斯開始(儘管我認為他很棒)。以後再讀他，先讀達爾文。
 
-If you want to learn macroeconomics, first read Adam Smith, read von Mises, or read Hayek. Start with the original philosophers of the economy. If you’re into communist or socialist ideas (which I’m personally not), start by reading Karl Marx. Don’t read the current interpretation someone is feeding you about how things should be done and run.
+If you want to learn macroeconomics, first read Adam Smith, read von Mises, or read Hayek. Start with the original philosophers of the economy. If you』re into communist or socialist ideas (which I』m personally not), start by reading Karl Marx. Don』t read the current interpretation someone is feeding you about how things should be done and run.
 
-如果你想学习宏观经济学，先读亚当·斯密(Adam Smith)、冯·米塞斯(Von Mises)或哈耶克(Hayek)。先从经济学的原始哲学家说起。如果你对共产主义或社会主义思想感兴趣(我个人并非如此)，那就从阅读卡尔·马克思开始吧。不要阅读当前的解释，有人告诉你事情应该如何做和如何运行。
+如果你想學習宏觀經濟學，先讀亞當·斯密(Adam Smith)、馮·米塞斯(Von Mises)或哈耶克(Hayek)。先從經濟學的原始哲學家說起。如果你對共產主義或社會主義思想感興趣(我個人並非如此)，那就從閱讀卡爾·馬克思開始吧。不要閱讀目前的解釋，有人告訴你事情應該如何做和如何執行。
 
-If you start with the originals as your foundations, then you have enough of a worldview and understanding that you won’t fear any book. Then you can just learn. If you’re a perpetual learning machine, you will never be out of options for how to make money. You can always see what’s coming up in society, what the value is, where the demand is, and you can learn to come up to speed. [74]
-如果你以原著为基础，那么你就有了足够的世界观和理解力，你就不会害怕任何一本书。那你就可以自己学了。如果你是一台永恒不变的学习机器，你就永远不会有赚钱的选择。你总是可以看到社会上正在发生什么，价值是什么，需求在哪里，你可以学会跟上步伐。“[74]
-To think clearly, understand the basics. If you’re memorizing advanced concepts without being able to re -derive them as needed, you’re lost.
+If you start with the originals as your foundations, then you have enough of a worldview and understanding that you won』t fear any book. Then you can just learn. If you』re a perpetual learning machine, you will never be out of options for how to make money. You can always see what』s coming up in society, what the value is, where the demand is, and you can learn to come up to speed. [74]
+如果你以原著為基礎，那麼你就有了足夠的世界觀和理解力，你就不會害怕任何一本書。那你就可以自己學了。如果你是一臺永恒不變的學習機器，你就永遠不會有賺錢的選擇。你總是可以看到社會上正在發生什麼，價值是什麼，需求在哪裡，你可以學會跟上步伐。「[74]
+To think clearly, understand the basics. If you』re memorizing advanced concepts without being able to re -derive them as needed, you』re lost.
 
-要想清楚，就要了解基本知识。如果你在记忆高级概念，却不能根据需要重新派生，那你就输了。
+要想清楚，就要了解基本知識。如果你在記憶高級概念，卻不能根據需要重新派生，那你就輸了。
 
-We’re now in a day and age of Twitter and Facebook. We’re getting bite -sized , pithy wisdom, which is really hard to absorb. Books are very difficult to read as a modern person because we’ve been trained. We have two contradictory pieces of training:
-我们现在处在Twitter和Facebook的时代。我们得到的是一口大小的、简明扼要的智慧，这真的很难吸收。书籍作为现代人是很难读的，因为我们受过训练。我们有两个相互矛盾的培训项目：
-One is our attention span has gone through the floor because we’re hit with so much information all the time. We want to skip, summarize, and cut to the chase.
+We』re now in a day and age of Twitter and Facebook. We』re getting bite -sized , pithy wisdom, which is really hard to absorb. Books are very difficult to read as a modern person because we』ve been trained. We have two contradictory pieces of training:
+我們現在處在Twitter和Facebook的時代。我們得到的是一口大小的、簡明扼要的智慧，這真的很難吸收。書籍作為現代人是很難讀的，因為我們受過訓練。我們有兩個相互矛盾的培訓專案：
+One is our attention span has gone through the floor because we』re hit with so much information all the time. We want to skip, summarize, and cut to the chase.
 
-其一是我们的注意力持续时间已经过了最低点，因为我们总是被如此多的信息所冲击。我们想跳过、总结并切入主题。
+其一是我們的注意力持續時間已經過了最低點，因為我們總是被如此多的資訊所衝擊。我們想跳過、總結並切入主題。
 
 Twitter has made me a worse reader but a much better writer.
 
-推特让我成为一个更差的读者，但却是一个好得多的作家。
+推特讓我成為一個更差的讀者，但卻是一個好得多的作家。
 
-On the other hand, we’re also taught from a young age to finish your books. Books are sacred—when you go to school and you’re assigned to read a book, you have to finish the book. Over time, we forget how to read books. Everyone I know is stuck on some book.
+On the other hand, we』re also taught from a young age to finish your books. Books are sacred—when you go to school and you』re assigned to read a book, you have to finish the book. Over time, we forget how to read books. Everyone I know is stuck on some book.
 
-另一方面，我们也从小就被教导要读完你的书。书是神圣的--当你去学校时，你被分配去读一本书，你必须读完这本书。随着时间的推移，我们忘记了如何读书。我认识的每个人都被某本书困住了。
+另一方面，我們也從小就被教導要讀完你的書。書是神聖的--當你去學校時，你被分配去讀一本書，你必須讀完這本書。隨著時間的推移，我們忘記了如何讀書。我認識的每個人都被某本書困住了。
 
-I’m sure you’re stuck on something right now—it’s page 332, you can’t go any further, but you know you should finish the book. So what do you do? You give up reading books for a while.
+I』m sure you』re stuck on something right now—it』s page 332, you can』t go any further, but you know you should finish the book. So what do you do? You give up reading books for a while.
 
-我肯定你现在被什么东西卡住了--已经是第332页了，你不能再往前走了，但你知道你应该读完这本书。那你是做什么的？你有一段时间不看书了。
+我肯定你現在被什麼東西卡住了--已經是第332頁了，你不能再往前走了，但你知道你應該讀完這本書。那你是做什麼的？你有一段時間不看書了。
 
-For me, giving up reading was a tragedy. I grew up on books, then I switched to blogs, then I switched to Twitter and Facebook, and I realized I wasn’t actually learning anything. I was just taking little dopamine snacks all day long. I was getting my little 140-character burst of dopamine. I would Tweet, then look to see who retweeted my Tweet. It’s a fun and wonderful thing, but it’s a game I was playing.
+For me, giving up reading was a tragedy. I grew up on books, then I switched to blogs, then I switched to Twitter and Facebook, and I realized I wasn』t actually learning anything. I was just taking little dopamine snacks all day long. I was getting my little 140-character burst of dopamine. I would Tweet, then look to see who retweeted my Tweet. It』s a fun and wonderful thing, but it』s a game I was playing.
 
-对我来说，放弃阅读是一场悲剧。我在书本上长大，然后我转到博客，然后我转到Twitter和Facebook，我意识到我实际上并没有学到任何东西。我一整天都在吃一点多巴胺零食。我得到了我的140个字符的多巴胺小爆发。我会发推特，然后看看是谁转发了我的推文。这是一件有趣而美妙的事情，但这是我在玩的一个游戏。
+對我來說，放棄閱讀是一場悲劇。我在書本上長大，然後我轉到部落格，然後我轉到Twitter和Facebook，我意識到我實際上並沒有學到任何東西。我一整天都在吃一點多巴胺零食。我得到了我的140個字元的多巴胺小爆發。我會發推特，然後看看是誰轉發了我的推文。這是一件有趣而美妙的事情，但這是我在玩的一個遊戲。
 
 I realized I had to go back to reading books. [6]
-我意识到我必须回去读书了。
+我意識到我必須回去讀書了。
 
 I knew it was a very hard problem because my brain had now been trained to spend time on Facebook, Twitter, and these other bite -sized pieces.
 
-我知道这是一个非常困难的问题，因为我的大脑现在已经被训练成把时间花在Facebook、Twitter和其他一些小东西上。
+我知道這是一個非常困難的問題，因為我的大腦現在已經被訓練成把時間花在Facebook、Twitter和其他一些小東西上。
 
-I came up with this hack where I started treating books as throwaway blog posts or bite -sized tweets or posts. I felt no obligation to finish any book. Now, when someone mentions a book to me, I buy it. At any given time, I’m reading somewhere between ten and twenty books. I’m flipping through them.
+I came up with this hack where I started treating books as throwaway blog posts or bite -sized tweets or posts. I felt no obligation to finish any book. Now, when someone mentions a book to me, I buy it. At any given time, I』m reading somewhere between ten and twenty books. I』m flipping through them.
 
-我想出了一个办法，我开始把书当作一次性的博客帖子，或者一口大小的推文或帖子。我觉得没有义务读完任何一本书。现在，当有人向我提到一本书时，我就会买下它。在任何时候，我都在读十到二十本书。我正在翻阅它们。
+我想出了一個辦法，我開始把書當作一次性的部落格帖子，或者一口大小的推文或帖子。我覺得沒有義務讀完任何一本書。現在，當有人向我提到一本書時，我就會買下它。在任何時候，我都在讀十到二十本書。我正在翻閱它們。
 
-If the book is getting a little boring, I’ll skip ahead. Sometimes, I start reading a book in the middle because some paragraph caught my eye. I’ll just continue from there, and I feel no obligation whatsoever to finish the book. All of a sudden, books are back into my reading library. That’s great, because there is ancient wisdom in books. [6]
+If the book is getting a little boring, I』ll skip ahead. Sometimes, I start reading a book in the middle because some paragraph caught my eye. I』ll just continue from there, and I feel no obligation whatsoever to finish the book. All of a sudden, books are back into my reading library. That』s great, because there is ancient wisdom in books. [6]
 
-如果这本书变得有点枯燥，我就跳过。有时，我开始读中间的一本书，因为有一段话吸引了我的眼球。我就从那里继续，我觉得没有任何义务要读完这本书。突然之间，书又回到了我的阅读图书馆。那太好了，因为书中有古老的智慧。
+如果這本書變得有點枯燥，我就跳過。有時，我開始讀中間的一本書，因為有一段話吸引了我的眼球。我就從那裡繼續，我覺得沒有任何義務要讀完這本書。突然之間，書又回到了我的閱讀圖書館。那太好了，因為書中有古老的智慧。
 
 When solving problems: the older the problem, the older the solution.
 
-解决问题时：问题越陈旧，解决方案就越陈旧。
+解決問題時：問題越陳舊，解決方案就越陳舊。
 
-If you’re trying to learn how to drive a car or fly a plane, you should read something written in the modern age because this problem was created in the modern age and the solution is great in the modern age.
+If you』re trying to learn how to drive a car or fly a plane, you should read something written in the modern age because this problem was created in the modern age and the solution is great in the modern age.
 
-如果你试图学习如何驾驶汽车或驾驶飞机，你应该读一些现代写的东西，因为这个问题是在现代产生的，而这个问题的解决方案在现代是很好的。
+如果你試圖學習如何駕駛汽車或駕駛飛機，你應該讀一些現代寫的東西，因為這個問題是在現代產生的，而這個問題的解決方案在現代是很好的。
 
-If you’re talking about an old problem like how to keep your body healthy, how to stay calm and peaceful, what kinds of value systems are good, how you raise a family, and those kinds of things, the older solutions are probably better.
+If you』re talking about an old problem like how to keep your body healthy, how to stay calm and peaceful, what kinds of value systems are good, how you raise a family, and those kinds of things, the older solutions are probably better.
 
-如果你在谈论一个老问题，比如如何保持身体健康，如何保持平静和安宁，什么样的价值体系是好的，你是如何养家糊口的，以及诸如此类的事情，那么旧的解决方案可能会更好。
+如果你在談論一個老問題，比如如何保持身體健康，如何保持平靜和安寧，什麼樣的價值體系是好的，你是如何養家餬口的，以及諸如此類的事情，那麼舊的解決方案可能會更好。
 
 Any book that survived for two thousand years has been filtered through many people. The general principles are more likely to be correct. I wanted to get back into reading these sorts of books. [6]
-任何存留了两千年的书都经过了很多人的筛选。一般原则更有可能是正确的。我想重新开始读这类书。
+任何存留了兩千年的書都經過了很多人的篩選。一般原則更有可能是正確的。我想重新開始讀這類書。
 
-You know that song you can’t get out of your head? All thoughts work that way. Careful what you read.
+You know that song you can』t get out of your head? All thoughts work that way. Careful what you read.
 
-你还记得那首你忘不掉的歌吗？所有的想法都是这样运作的。当心你读的东西。
+你還記得那首你忘不掉的歌嗎？所有的想法都是這樣運作的。當心你讀的東西。
 
 A calm mind, a fit body, and a house full of love.
 
-平静的心灵，健康的身体，充满爱的房子。
+平靜的心靈，健康的身體，充滿愛的房子。
 
 These things cannot be bought.
 
-这些东西是买不到的。
+這些東西是買不到的。
 
 They must be earned.
 
-它们必须是自己挣来的。
+它們必須是自己掙來的。
