--- a/1-8.md
+++ b/1-8.md
@@ -1,32 +1,32 @@
 # Get Paid for Your Judgment
 
-因为你的判断而得到报酬
+因為你的判斷而得到報酬
 
-Choosing what kinds of jobs, careers, or fields you get into and what sort of deals you’re willing to take from your employer will give you much more free time. Then, you don’t have to worry as much about time management. I would love to be paid purely for my judgment, not for any work. I want a robot, capital, or computer to do the work, but I want to be paid for my judgment. [1]
+Choosing what kinds of jobs, careers, or fields you get into and what sort of deals you』re willing to take from your employer will give you much more free time. Then, you don』t have to worry as much about time management. I would love to be paid purely for my judgment, not for any work. I want a robot, capital, or computer to do the work, but I want to be paid for my judgment. [1]
 
-选择你所从事的工作、职业或领域，以及你愿意从雇主那里得到什么样的交易，都会给你更多的自由时间。那么，你就不必那么担心时间管理了。我希望纯粹因为我的判断而得到报酬，而不是因为任何工作。我想要一个机器人、资本或计算机来做这项工作，但我想要我的判断得到报酬。
+選擇你所從事的工作、職業或領域，以及你願意從僱主那裡得到什麼樣的交易，都會給你更多的自由時間。那麼，你就不必那麼擔心時間管理了。我希望純粹因為我的判斷而得到報酬，而不是因為任何工作。我想要一個機器人、資本或計算機來做這項工作，但我想要我的判斷得到報酬。
 
-I think every human should aspire to being knowledgeable about certain things and being paid for our unique knowledge. We have as much leverage as is possible in our business, whether it’s through robots or computers or what have you. Then, we can be masters of our own time because we are just being tracked on outputs and not inputs.
+I think every human should aspire to being knowledgeable about certain things and being paid for our unique knowledge. We have as much leverage as is possible in our business, whether it』s through robots or computers or what have you. Then, we can be masters of our own time because we are just being tracked on outputs and not inputs.
 
 
-我认为每个人都应该渴望对某些事情有所了解，并因我们独特的知识而获得报酬。我们在我们的业务中拥有尽可能多的筹码，无论是通过机器人还是计算机，或者你拥有的任何东西。然后，我们可以成为我们自己时代的主人，因为我们只是被跟踪输出，而不是输入。
+我認為每個人都應該渴望對某些事情有所瞭解，並因我們獨特的知識而獲得報酬。我們在我們的業務中擁有儘可能多的籌碼，無論是通過機器人還是計算機，或者你擁有的任何東西。然後，我們可以成為我們自己時代的主人，因為我們只是被跟蹤輸出，而不是輸入。
 
-Imagine someone comes along who demonstrably has slightly better judgment. They’re right 85 percent of the time instead of 75 percent. You will pay them $50 million, $100 million, $200 million, whatever it takes, because 10 percent better judgment steering a $100 billion ship is very valuable. CEOs are highly paid because of their leverage. Small differences in judgment and capability really get amplified. [2]
+Imagine someone comes along who demonstrably has slightly better judgment. They』re right 85 percent of the time instead of 75 percent. You will pay them $50 million, $100 million, $200 million, whatever it takes, because 10 percent better judgment steering a $100 billion ship is very valuable. CEOs are highly paid because of their leverage. Small differences in judgment and capability really get amplified. [2]
 
-想象一下，有个人出现了，他的判断力明显稍好一些。他们在85%的时间里是正确的，而不是75%。你会付给他们5000万美元，1亿美元，2亿美元，不惜一切代价，因为驾驶一艘1000亿美元的船的判断力提高了10%，这是非常有价值的。首席执行官们的高薪是因为他们的杠杆作用。判断力和能力上的微小差异真的会被放大。
+想像一下，有個人出現了，他的判斷力明顯稍好一些。他們在85%的時間裡是正確的，而不是75%。你會付給他們5000萬美元，1億美元，2億美元，不惜一切代價，因為駕駛一艘1000億美元的船的判斷力提高了10%，這是非常有價值的。執行長們的高薪是因為他們的槓桿作用。判斷力和能力上的微小差異真的會被放大。
 
-Demonstrated judgment—credibility around the judgment—is so critical. Warren Buffett wins here because he has massive credibility. He’s been highly accountable. He’s been right over and over in the public domain. He’s built a reputation for very high integrity, so you can trust him. People will throw infinite leverage behind him because of his judgment. Nobody asks him how hard he works. Nobody asks him when he wakes up or when he goes to sleep. They’re like, “Warren, just do your thing.”
+Demonstrated judgment—credibility around the judgment—is so critical. Warren Buffett wins here because he has massive credibility. He』s been highly accountable. He』s been right over and over in the public domain. He』s built a reputation for very high integrity, so you can trust him. People will throw infinite leverage behind him because of his judgment. Nobody asks him how hard he works. Nobody asks him when he wakes up or when he goes to sleep. They』re like, 「Warren, just do your thing.」
 
-被证明的判断力-围绕判断力的可信度-是如此关键。沃伦·巴菲特(Warren Buffett)在这里获胜，因为他拥有巨大的可信度。他一直高度负责。他一次又一次地出现在公共领域。他建立了非常正直的声誉，所以你可以信任他。人们会因为他的判断力而在他身后投出无限的筹码。没人问他工作有多努力。没有人问他什么时候醒来，什么时候睡觉。他们就像是，“沃伦，做你该做的。”
+被證明的判斷力-圍繞判斷力的可信度-是如此關鍵。沃倫·巴菲特(Warren Buffett)在這裡獲勝，因為他擁有巨大的可信度。他一直高度負責。他一次又一次地出現在公共領域。他建立了非常正直的聲譽，所以你可以信任他。人們會因為他的判斷力而在他身後投出無限的籌碼。沒人問他工作有多努力。沒有人問他什麼時候醒來，什麼時候睡覺。他們就像是，「沃倫，做你該做的。」
 
 Judgment—especially demonstrated judgment, with high accountability and a clear track record—is critical. [78]
 
-判断力-特别是表现出来的判断力，具有高度的问责制和明确的记录-是至关重要的。“[78]
+判斷力-特別是表現出來的判斷力，具有高度的問責制和明確的記錄-是至關重要的。「[78]
 
 We waste our time with short -term thinking and busywork. Warren Buffett spends a year deciding and a day acting. That act lasts decades.
 
-我们把时间浪费在短视的思考和忙碌的工作上。沃伦·巴菲特(Warren Buffett)花了一年时间做决定，花一天时间表演。这一行为持续了几十年。
+我們把時間浪費在短視的思考和忙碌的工作上。沃倫·巴菲特(Warren Buffett)花了一年時間做決定，花一天時間表演。這一行為持續了幾十年。
 
 Just from being marginally better, like running a quarter mile a fraction of a second faster, some people get paid a lot more—orders of magnitude more. Leverage magnifies those differences even more. Being at the extreme in your art is very important in the age of leverage. [2]
 
-仅仅是稍微好一点，比如跑四分之一英里快了零点几秒，有些人的报酬就高得多--多了几个数量级。杠杆作用进一步放大了这些差异。在这个杠杆化的时代，在你的艺术中达到极致是非常重要的。
+僅僅是稍微好一點，比如跑四分之一英里快了零點幾秒，有些人的報酬就高得多--多了幾個數量級。槓桿作用進一步放大了這些差異。在這個槓桿化的時代，在你的藝術中達到極致是非常重要的。
