--- a/2-1.md
+++ b/2-1.md
@@ -6,12 +6,12 @@ Part II : Happiness
 
 The three big ones in life are wealth, health, and happiness. We pursue them in that order, but their importance is reverse.
 
-人生的三大要素是财富、健康和幸福。我们按照这个顺序追求它们，但它们的重要性是相反的。
+人生的三大要素是財富、健康和幸福。我們按照這個順序追求它們，但它們的重要性是相反的。
 
 ## Learning Happiness
 
-学习快乐
+學習快樂
 
-Don’t take yourself so seriously. You’re just a monkey with a plan.
+Don』t take yourself so seriously. You』re just a monkey with a plan.
 
-别把自己看得太重了。你只是一只有计划的猴子。
+別把自己看得太重了。你只是一隻有計劃的猴子。
