--- a/2-10.md
+++ b/2-10.md
@@ -1,104 +1,104 @@
 # Find Happiness in Acceptance
-在接受中寻找快乐
+在接受中尋找快樂
 In any situation in life, you always have three choices: you can change it, you can accept it, or you can leave it.
 
-在生活中的任何情况下，你总是有三个选择：你可以改变它，你可以接受它，或者你可以离开它。
+在生活中的任何情況下，你總是有三個選擇：你可以改變它，你可以接受它，或者你可以離開它。
 
-If you want to change it, then it is a desire. It will cause you suffering until you successfully change it. So don’t pick too many of those. Pick one big desire in your life at any given time to give yourself purpose and motivation.
+If you want to change it, then it is a desire. It will cause you suffering until you successfully change it. So don』t pick too many of those. Pick one big desire in your life at any given time to give yourself purpose and motivation.
 
-如果你想改变它，那它就是一种愿望。除非你成功地改变它，否则它会给你带来痛苦。所以不要摘太多这样的东西。在任何给定的时间，在你的生活中选择一个最大的愿望，给自己目标和动力。
+如果你想改變它，那它就是一種願望。除非你成功地改變它，否則它會給你帶來痛苦。所以不要摘太多這樣的東西。在任何給定的時間，在你的生活中選擇一個最大的願望，給自己目標和動力。
 
 Why not two?
 
-为什么不是两个呢？
+為什麼不是兩個呢？
 
-You’ll be distracted.
+You』ll be distracted.
 
-你会分心的。
+你會分心的。
 
-Even one is hard enough. Being peaceful comes from having your mind clear of thoughts. And a lot of clarity comes from being in the present moment. It’s very hard to be in the present moment if you’re thinking, “I need to do this. I want that. This has got to change.” [8]
+Even one is hard enough. Being peaceful comes from having your mind clear of thoughts. And a lot of clarity comes from being in the present moment. It』s very hard to be in the present moment if you』re thinking, 「I need to do this. I want that. This has got to change.」 [8]
 
-即使只有一个也够难的了。平和来自于头脑中清晰的思想。而很多清晰的东西都来自于当下。如果你在想，“我需要做这件事，那你就很难活在当下。我要那个。这种情况必须改变。“[8]
+即使只有一個也夠難的了。平和來自於頭腦中清晰的思想。而很多清晰的東西都來自於當下。如果你在想，「我需要做這件事，那你就很難活在當下。我要那個。這種情況必須改變。「[8]
 
-You always have three options: you can change it, you can accept it, or you can leave it. What is not a good option is to sit around wishing you would change it but not changing it, wishing you could leave it but not leaving it and not accepting it. That struggle or aversion is responsible for most of our misery. The phrase I probably use the most to myself in my head is just one word: “accept.” [5]
-你总是有三个选择：你可以改变它，你可以接受它，或者你可以离开它。不是一个好的选择，那就是坐在那里希望你能改变它但不改变它，希望你能离开它但不能离开它而不接受它。这种斗争或厌恶是我们大部分痛苦的罪魁祸首。我脑海中对自己用得最多的一句话可能只有一个词：“接受”。
+You always have three options: you can change it, you can accept it, or you can leave it. What is not a good option is to sit around wishing you would change it but not changing it, wishing you could leave it but not leaving it and not accepting it. That struggle or aversion is responsible for most of our misery. The phrase I probably use the most to myself in my head is just one word: 「accept.」 [5]
+你總是有三個選擇：你可以改變它，你可以接受它，或者你可以離開它。不是一個好的選擇，那就是坐在那裡希望你能改變它但不改變它，希望你能離開它但不能離開它而不接受它。這種鬥爭或厭惡是我們大部分痛苦的罪魁禍首。我腦海中對自己用得最多的一句話可能只有一個詞：「接受」。
 
 What does acceptance look like to you?
 
-在你看来，接受是什么样子的？
+在你看來，接受是什麼樣子的？
 
-It’s to be okay whatever the outcome is. It’s to be balanced and centered. It’s to step back and to see the grander scheme of things.
+It』s to be okay whatever the outcome is. It』s to be balanced and centered. It』s to step back and to see the grander scheme of things.
 
-不管结果如何，一切都会好起来的。它要保持平衡，居中。它是退后一步，看看更宏伟的计划。
+不管結果如何，一切都會好起來的。它要保持平衡，居中。它是退後一步，看看更宏偉的計劃。
 
-We don’t always get what we want, but sometimes what is happening is for the best. The sooner you can accept it as a reality, the sooner you can adapt to it.
+We don』t always get what we want, but sometimes what is happening is for the best. The sooner you can accept it as a reality, the sooner you can adapt to it.
 
-我们并不总是得到我们想要的，但有时正在发生的事情是最好的。你越早接受它成为现实，你就越早适应它。
+我們並不總是得到我們想要的，但有時正在發生的事情是最好的。你越早接受它成為現實，你就越早適應它。
 
-Achieving acceptance is very difficult. I have a couple of hacks I try, but I wouldn’t say they are totally successful.
+Achieving acceptance is very difficult. I have a couple of hacks I try, but I wouldn』t say they are totally successful.
 
-要获得认可是非常困难的。我试过几种破解方法，但我不会说它们完全成功。
+要獲得認可是非常困難的。我試過幾種破解方法，但我不會說它們完全成功。
 
-One hack is stepping back and looking at previous bits of suffering I’ve had in my life. I write them down. “Last time you broke up with somebody, last time you had a business failure, last time you had a health issue, what happened?” I can trace the growth and improvement that came from it years later.
+One hack is stepping back and looking at previous bits of suffering I』ve had in my life. I write them down. 「Last time you broke up with somebody, last time you had a business failure, last time you had a health issue, what happened?」 I can trace the growth and improvement that came from it years later.
 
-其中一个技巧是退后一步，回顾我生活中以前经历过的一些痛苦。我把它们写下来。“上一次你和某人分手，上一次你生意失败，上一次你身体有问题，发生了什么事？”我可以追溯到几年后它带来的成长和进步。
+其中一個技巧是退後一步，回顧我生活中以前經歷過的一些痛苦。我把它們寫下來。「上一次你和某人分手，上一次你生意失敗，上一次你身體有問題，發生了什麼事？」我可以追溯到幾年后它帶來的成長和進步。
 
-I have another hack I use for minor annoyances. When they happen, a part of me will instantly react negatively. But I’ve learned to mentally ask myself, “What is the positive of this situation?”
+I have another hack I use for minor annoyances. When they happen, a part of me will instantly react negatively. But I』ve learned to mentally ask myself, 「What is the positive of this situation?」
 
-我还有另一个用来做小麻烦的黑客。当它们发生时，我身体的一部分会立即做出负面反应。但我学会了在心里问问自己，“这种情况的积极面是什么？”
+我還有另一個用來做小麻煩的黑客。當它們發生時，我身體的一部分會立即做出負面反應。但我學會了在心裡問問自己，「這種情況的積極面是什麼？」
 
-“Okay, I’ll be late for a meeting. But what is the benefit to me? I get to relax and watch the birds for a moment. I’ll also spend less time in that boring meeting.” There’s almost always something positive.
+「Okay, I』ll be late for a meeting. But what is the benefit to me? I get to relax and watch the birds for a moment. I』ll also spend less time in that boring meeting.」 There』s almost always something positive.
 
-“好的，我开会要迟到了。但是这对我有什么好处呢？我可以放松一下，看一会儿鸟儿。我也会在那个无聊的会议上少花点时间。“几乎总会有积极的事情发生。
+「好的，我開會要遲到了。但是這對我有什麼好處呢？我可以放鬆一下，看一會兒鳥兒。我也會在那個無聊的會議上少花點時間。「幾乎總會有積極的事情發生。
 
-Even if you can’t come up with something positive, you can say, “Well, the Universe is going to teach me something now. Now I get to listen and learn.”
-即使你拿不出积极的东西，你也可以说，“好吧，宇宙现在要教我一些东西。现在我可以边听边学。“
+Even if you can』t come up with something positive, you can say, 「Well, the Universe is going to teach me something now. Now I get to listen and learn.」
+即使你拿不出積極的東西，你也可以說，「好吧，宇宙現在要教我一些東西。現在我可以邊聽邊學。「
 To give you the simplest example: I was at an event and afterward, someone flooded my inbox with a whole bunch of photos they took.
 
-举个最简单的例子：我参加了一个活动，事后，有人把他们拍的一大堆照片塞进了我的收件箱。
+舉個最簡單的例子：我參加了一個活動，事後，有人把他們拍的一大堆照片塞進了我的收件箱。
 
-There was a tiny instant judgment saying, “Come on, couldn’t you have just selected a few of the best? Who sends a hundred photos?” But then immediately I asked myself, “What is the positive?” The positive is that I get to pick my five favorite photos. I get to use my judgment.
+There was a tiny instant judgment saying, 「Come on, couldn』t you have just selected a few of the best? Who sends a hundred photos?」 But then immediately I asked myself, 「What is the positive?」 The positive is that I get to pick my five favorite photos. I get to use my judgment.
 
-有一个小小的瞬间判断说，“来吧，你就不能选几个最好的吗？谁会发一百张照片呢？“但我马上问自己，“积极的一面是什么？”积极的一面是，我可以挑选我最喜欢的五张照片。我可以用我的判断力。
+有一個小小的瞬間判斷說，「來吧，你就不能選幾個最好的嗎？誰會發一百張照片呢？「但我馬上問自己，「積極的一面是什麼？」積極的一面是，我可以挑選我最喜歡的五張照片。我可以用我的判斷力。
 
-Over the last year, by practicing this hack enough, I’ve managed to go from taking a couple of seconds to think of a response, to now my brain doing it almost instantaneously. That’s a habit you can train yourself to do. [8]
+Over the last year, by practicing this hack enough, I』ve managed to go from taking a couple of seconds to think of a response, to now my brain doing it almost instantaneously. That』s a habit you can train yourself to do. [8]
 
-在过去的一年里，通过足够多地练习这个技巧，我已经成功地从花几秒钟想出一个回应，到现在我的大脑几乎是瞬间做出反应的。这是一个你可以训练自己去做的习惯。
+在過去的一年裡，通過足夠多地練習這個技巧，我已經成功地從花幾秒鐘想出一個迴應，到現在我的大腦幾乎是瞬間做出反應的。這是一個你可以訓練自己去做的習慣。
 
-How do you learn to accept things you can’t change?
-你如何学会接受你不能改变的事情？
+How do you learn to accept things you can』t change?
+你如何學會接受你不能改變的事情？
 Fundamentally, it boils down to one big hack: embracing death.
 
-从根本上说，它可以归结为一个大技巧：拥抱死亡。
+從根本上說，它可以歸結為一個大技巧：擁抱死亡。
 
-Death is the most important thing that is ever going to happen to you. When you look at your death and you acknowledge it, rather than running away from it, it’ll bring great meaning to your life. We spend so much of our life trying to avoid death. So much of what we struggle for can be classified as a quest for immortality.
+Death is the most important thing that is ever going to happen to you. When you look at your death and you acknowledge it, rather than running away from it, it』ll bring great meaning to your life. We spend so much of our life trying to avoid death. So much of what we struggle for can be classified as a quest for immortality.
 
-死亡是将要发生在你身上的最重要的事情。当你正视自己的死亡并承认它，而不是逃避它时，它会给你的生活带来巨大的意义。我们一生中的很多时间都在努力避免死亡。我们为之奋斗的许多东西都可以归类为对不朽的追求。
+死亡是將要發生在你身上的最重要的事情。當你正視自己的死亡並承認它，而不是逃避它時，它會給你的生活帶來巨大的意義。我們一生中的很多時間都在努力避免死亡。我們為之奮鬥的許多東西都可以歸類為對不朽的追求。
 
-If you’re religious and believe there is an afterlife, then you’ll be taken care of. If you’re not religious, maybe you’ll have kids. If you’re an artist, a painter, or a businessman, you want to leave a legacy behind.
+If you』re religious and believe there is an afterlife, then you』ll be taken care of. If you』re not religious, maybe you』ll have kids. If you』re an artist, a painter, or a businessman, you want to leave a legacy behind.
 
-如果你有宗教信仰，相信有来世，那么你就会得到照顾。如果你不信教，也许你会有孩子。如果你是一名艺术家、画家或商人，你想留下一份遗产。
+如果你有宗教信仰，相信有來世，那麼你就會得到照顧。如果你不信教，也許你會有孩子。如果你是一名藝術家、畫家或商人，你想留下一份遺產。
 
-Here’s a hot tip: There is no legacy. There’s nothing to leave. We’re all going to be gone. Our children will be gone. Our works will be dust. Our civilizations will be dust. Our planet will be dust. Our solar system will be dust. In the grand scheme of things, the Universe has been around for ten billion years. It’ll be around for another ten billion years.
+Here』s a hot tip: There is no legacy. There』s nothing to leave. We』re all going to be gone. Our children will be gone. Our works will be dust. Our civilizations will be dust. Our planet will be dust. Our solar system will be dust. In the grand scheme of things, the Universe has been around for ten billion years. It』ll be around for another ten billion years.
 
-这里有一个热门提示：没有任何遗产。没有什么可以留下的。我们都要走了。我们的孩子将会离开。我们的作品将化为灰烬。我们的文明将化为灰烬。我们的星球将会变成尘埃。我们的太阳系将会变成尘埃。在宏伟的计划中，宇宙已经存在了100亿年。它还将存在100亿年。
+這裡有一個熱門提示：沒有任何遺產。沒有什麼可以留下的。我們都要走了。我們的孩子將會離開。我們的作品將化為灰燼。我們的文明將化為灰燼。我們的星球將會變成塵埃。我們的太陽系將會變成塵埃。在宏偉的計劃中，宇宙已經存在了100億年。它還將存在100億年。
 
-Your life is a firefly blink in a night. You’re here for such a brief period of time. If you fully acknowledge the futility of what you’re doing, then I think it can bring great happiness and peace because you realize this is a game. But it’s a fun game. All that matters is you experience your reality as you go through life. Why not interpret it in the most positive possible way?
+Your life is a firefly blink in a night. You』re here for such a brief period of time. If you fully acknowledge the futility of what you』re doing, then I think it can bring great happiness and peace because you realize this is a game. But it』s a fun game. All that matters is you experience your reality as you go through life. Why not interpret it in the most positive possible way?
 
-你的生活就像一夜之间的萤火虫在眨眼。你在这里只待了这么短的一段时间。如果你充分认识到你正在做的事情是徒劳的，那么我认为它可以带来巨大的快乐和平静，因为你意识到这是一场游戏。但这是个有趣的游戏。重要的是你在生活中体验你的现实。为什么不用最积极的方式来解释呢？
+你的生活就像一夜之間的螢火蟲在眨眼。你在這裡只待了這麼短的一段時間。如果你充分認識到你正在做的事情是徒勞的，那麼我認為它可以帶來巨大的快樂和平靜，因為你意識到這是一場遊戲。但這是個有趣的遊戲。重要的是你在生活中體驗你的現實。為什麼不用最積極的方式來解釋呢？
 
-Any moment where you’re not having a great time, when you’re not really happy, you’re not doing anyone any favors. It’s not like your unhappiness makes them better off somehow. All you’re doing is wasting this incredibly small and precious time you have on this Earth. Keeping death on the forefront and not denying it is very important.
+Any moment where you』re not having a great time, when you』re not really happy, you』re not doing anyone any favors. It』s not like your unhappiness makes them better off somehow. All you』re doing is wasting this incredibly small and precious time you have on this Earth. Keeping death on the forefront and not denying it is very important.
 
-任何你不开心的时刻，当你不是真正快乐的时候，你都不是在帮任何人的忙。这并不是说你的不快乐会让他们过得更好。你所做的一切都是在浪费你在这个地球上拥有的这令人难以置信的小而宝贵的时间。把死亡放在最前面，而不是否认它是非常重要的。
+任何你不開心的時刻，當你不是真正快樂的時候，你都不是在幫任何人的忙。這並不是說你的不快樂會讓他們過得更好。你所做的一切都是在浪費你在這個地球上擁有的這令人難以置信的小而寶貴的時間。把死亡放在最前面，而不是否認它是非常重要的。
 
-Whenever I get caught up in my ego battles, I just think of entire civilizations that have come and gone. For example, take the Sumerians. I’m sure they were important people and did great things, but go ahead and name me a single Sumerian. Tell me anything interesting or important Sumerians did that lasted. Nothing.
+Whenever I get caught up in my ego battles, I just think of entire civilizations that have come and gone. For example, take the Sumerians. I』m sure they were important people and did great things, but go ahead and name me a single Sumerian. Tell me anything interesting or important Sumerians did that lasted. Nothing.
 
-每当我陷入自我斗争时，我只会想到来来去去的整个文明。例如，以苏美尔人为例。我确信他们是重要人物，做了伟大的事情，但请继续，给我一个苏美尔人的名字。告诉我苏美尔人做了什么有趣的或重要的事。没什么。
+每當我陷入自我鬥爭時，我只會想到來來去去的整個文明。例如，以蘇美爾人為例。我確信他們是重要人物，做了偉大的事情，但請繼續，給我一個蘇美爾人的名字。告訴我蘇美爾人做了什麼有趣的或重要的事。沒什麼。
 
-So maybe ten thousand years from now or a hundred thousand years from now, people will say, “Oh yeah, Americans. I’ve heard of Americans.” [8]
+So maybe ten thousand years from now or a hundred thousand years from now, people will say, 「Oh yeah, Americans. I』ve heard of Americans.」 [8]
 
-所以也许一万年后或者十万年后，人们会说，“哦，是的，美国人。我听说过美国人。“[8]
+所以也許一萬年后或者十萬年後，人們會說，「哦，是的，美國人。我聽說過美國人。「[8]
 
-You’re going to die one day, and none of this is going to matter. So enjoy yourself. Do something positive. Project some love. Make someone happy. Laugh a little bit. Appreciate the moment. And do your work. [8]
+You』re going to die one day, and none of this is going to matter. So enjoy yourself. Do something positive. Project some love. Make someone happy. Laugh a little bit. Appreciate the moment. And do your work. [8]
 
-你总有一天会死的，这一切都无关紧要了。所以好好享受吧。做一些积极的事情。投射一些爱。让某人开心。笑一笑。感谢这一刻。做好你的工作。“[8]
+你總有一天會死的，這一切都無關緊要了。所以好好享受吧。做一些積極的事情。投射一些愛。讓某人開心。笑一笑。感謝這一刻。做好你的工作。「[8]
