--- a/2-16.md
+++ b/2-16.md
@@ -1,100 +1,100 @@
 # Choosing to Grow Yourself
 
-选择成长自己
+選擇成長自己
 
-I don’t believe in specific goals. Scott Adams famously said, “Set up systems, not goals.” Use your judgment to figure out what kinds of environments you can thrive in, and then create an environment around you so you’re statistically likely to succeed.
+I don』t believe in specific goals. Scott Adams famously said, 「Set up systems, not goals.」 Use your judgment to figure out what kinds of environments you can thrive in, and then create an environment around you so you』re statistically likely to succeed.
 
-我不相信具体的目标。斯科特·亚当斯(Scott Adams)有句名言，“建立系统，而不是目标。”运用你的判断力找出你可以在什么样的环境中茁壮成长，然后在你周围创造一个环境，这样你就有可能在统计上取得成功。
+我不相信具體的目標。斯科特·亞當斯(Scott Adams)有句名言，「建立系統，而不是目標。」運用你的判斷力找出你可以在什麼樣的環境中茁壯成長，然後在你周圍創造一個環境，這樣你就有可能在統計上取得成功。
 
 The current environment programs the brain, but the clever brain can choose its upcoming environment.
 
-目前的环境对大脑进行编程，但聪明的大脑可以选择即将到来的环境。
+目前的環境對大腦進行程式設計，但聰明的大腦可以選擇即將到來的環境。
 
-I’m not going to be the most successful person on the planet, nor do I want to be. I just want to be the most successful version of myself while working the least hard possible. I want to live in a way that if my life played out 1,000 times, Naval is successful 999 times. He’s not a billionaire, but he does pretty well each time. He may not have nailed life in every regard, but he sets up systems so he’s failed in very few places. [4]
+I』m not going to be the most successful person on the planet, nor do I want to be. I just want to be the most successful version of myself while working the least hard possible. I want to live in a way that if my life played out 1,000 times, Naval is successful 999 times. He』s not a billionaire, but he does pretty well each time. He may not have nailed life in every regard, but he sets up systems so he』s failed in very few places. [4]
 
-我不会成为这个星球上最成功的人，我也不想成为。我只想做最成功的自己，同时尽可能不努力地工作。我想要的生活方式是，如果我的人生上演了1000次，纳瓦尔成功了999次。他不是亿万富翁，但每次都做得很好。他可能并不是在每一个方面都牢牢抓住了生活，但他建立了系统，所以他在很少的地方失败了。
+我不會成為這個星球上最成功的人，我也不想成為。我只想做最成功的自己，同時儘可能不努力地工作。我想要的生活方式是，如果我的人生上演了1000次，納瓦爾成功了999次。他不是億萬富翁，但每次都做得很好。他可能並不是在每一個方面都牢牢抓住了生活，但他建立了系統，所以他在很少的地方失敗了。
 
-Remember I started as a poor kid in India, right? If I can make it, anybody can, in that sense. Obviously, I had all my limbs, my mental faculties, and I did have an education. There are some prerequisites you can’t get past. But if you’re reading this book, you probably have the requisite means at your disposal, which is a functioning body and a functioning mind. [78]
+Remember I started as a poor kid in India, right? If I can make it, anybody can, in that sense. Obviously, I had all my limbs, my mental faculties, and I did have an education. There are some prerequisites you can』t get past. But if you』re reading this book, you probably have the requisite means at your disposal, which is a functioning body and a functioning mind. [78]
 
-还记得我在印度是个贫穷的孩子吗？从这个意义上说，如果我能做到，任何人都能做到。很明显，我的四肢都有了，我的脑力也都有了，而且我确实受过教育。有一些先决条件是你无法克服的。但如果你在读这本书，你可能有必要的手段可供支配，那就是一个正常运作的身体和一个正常运作的心灵。
+還記得我在印度是個貧窮的孩子嗎？從這個意義上說，如果我能做到，任何人都能做到。很明顯，我的四肢都有了，我的腦力也都有了，而且我確實受過教育。有一些先決條件是你無法克服的。但如果你在讀這本書，你可能有必要的手段可供支配，那就是一個正常運作的身體和一個正常運作的心靈。
 
-If there’s something you want to do later, do it now. There is no “later.”
+If there』s something you want to do later, do it now. There is no 「later.」
 
-如果你以后有什么事要做，现在就去做。没有“晚些时候”这回事。
+如果你以後有什麼事要做，現在就去做。沒有「晚些時候」這回事。
 
 How do you personally learn about new subjects?
-你个人是如何学习新科目的？
-Mostly, I just stay on the basics. Even when I learn physics or science, I stick to the basics. I read concepts for fun. I’m more likely to do something that has arithmetic in it than calculus. I won’t be a great physicist at this point. Maybe in the next lifetime or my kid will do it, but it’s too late for me. I have to stick to what I enjoy.
+你個人是如何學習新科目的？
+Mostly, I just stay on the basics. Even when I learn physics or science, I stick to the basics. I read concepts for fun. I』m more likely to do something that has arithmetic in it than calculus. I won』t be a great physicist at this point. Maybe in the next lifetime or my kid will do it, but it』s too late for me. I have to stick to what I enjoy.
 
-大多数情况下，我只是停留在基础知识上。即使当我学习物理或科学时，我也坚持基础知识。我读概念书是为了好玩。比起微积分，我更喜欢做一些算术方面的事情。在这一点上，我不会成为一个伟大的物理学家。也许在下辈子，或者我的孩子会这么做，但对我来说太晚了。我必须坚持我喜欢的东西。
+大多數情況下，我只是停留在基礎知識上。即使當我學習物理或科學時，我也堅持基礎知識。我讀概念書是爲了好玩。比起微積分，我更喜歡做一些算術方面的事情。在這一點上，我不會成為一個偉大的物理學家。也許在下輩子，或者我的孩子會這麼做，但對我來說太晚了。我必須堅持我喜歡的東西。
 
 Science is, to me, the study of truth. It is the only true discipline because it makes falsifiable predictions. It actually changes the world. Applied science becomes technology, and technology is what separates us from the animals and allows us to have things like cell phones, houses, cars, heat, and electricity.
 
-对我来说，科学就是对真理的研究。它是唯一真正的纪律，因为它做出了可证伪的预测。它实际上改变了世界。应用科学变成了技术，而技术将我们与动物区分开来，并允许我们拥有手机、房子、汽车、暖气和电等东西。
+對我來說，科學就是對真理的研究。它是唯一真正的紀律，因為它做出了可證偽的預測。它實際上改變了世界。應用科學變成了技術，而技術將我們與動物區分開來，並允許我們擁有手機、房子、汽車、暖氣和電等東西。
 
 Science, to me, is the study of truth and mathematics is the language of science and nature.
 
-对我来说，科学是对真理的研究，数学是科学和自然的语言。
+對我來說，科學是對真理的研究，數學是科學和自然的語言。
 
-I’m not religious, but I’m spiritual. To me, that is the most devotional thing that I could do, to study the laws of the Universe. The same kick that someone might get out of being in Mecca or Medina and bowing to the prophet, I get the same feeling of awe and small sense of self when I study science. For me, it’s unparalleled and I’d rather stay at the basics. This is the beauty of reading. [4]
+I』m not religious, but I』m spiritual. To me, that is the most devotional thing that I could do, to study the laws of the Universe. The same kick that someone might get out of being in Mecca or Medina and bowing to the prophet, I get the same feeling of awe and small sense of self when I study science. For me, it』s unparalleled and I』d rather stay at the basics. This is the beauty of reading. [4]
 
-我不信教，但我是灵性的。对我来说，这是我能做的最虔诚的事，那就是研究宇宙法则。有人在麦加或麦地那，向先知鞠躬时可能会得到同样的快感，当我学习科学时，我也会有同样的敬畏和渺小的自我意识。对我来说，这是无与伦比的，我更愿意停留在基本功上。这就是阅读的美妙之处。
+我不信教，但我是靈性的。對我來說，這是我能做的最虔誠的事，那就是研究宇宙法則。有人在麥加或麥地那，向先知鞠躬時可能會得到同樣的快感，當我學習科學時，我也會有同樣的敬畏和渺小的自我意識。對我來說，這是無與倫比的，我更願意停留在基本功上。這就是閱讀的美妙之處。
 
-Do you agree with the idea “If you read what everybody else is reading, you’re going to think what everyone else is thinking”?
-你同意“如果你读别人在读的东西，你就会想别人在想什么”这一观点吗？
+Do you agree with the idea 「If you read what everybody else is reading, you』re going to think what everyone else is thinking」?
+你同意「如果你讀別人在讀的東西，你就會想別人在想什麼」這一觀點嗎？
 I think almost everything that people read these days is designed for social approval. [4]
 
-我认为现在人们读到的几乎所有东西都是为社会认可而设计的。
+我認為現在人們讀到的幾乎所有東西都是為社會認可而設計的。
 
-I know people who have read one hundred regurgitated books on evolution and they’ve never read Darwin. Think of the number of macroeconomists out there. I think most of them have read tons of treatises in economics but haven’t read any Adam Smith.
+I know people who have read one hundred regurgitated books on evolution and they』ve never read Darwin. Think of the number of macroeconomists out there. I think most of them have read tons of treatises in economics but haven』t read any Adam Smith.
 
-我认识一些人，他们读过100本关于进化论的反复无常的书，但他们从来没有读过达尔文。想想外面有多少宏观经济学家吧。我想他们中的大多数人读过成堆的经济学论文，但没有读过亚当·斯密(Adam Smith)的著作。
+我認識一些人，他們讀過100本關於進化論的反覆無常的書，但他們從來沒有讀過達爾文。想想外面有多少宏觀經濟學家吧。我想他們中的大多數人讀過成堆的經濟學論文，但沒有讀過亞當·斯密(Adam Smith)的著作。
 
-At some level, you’re doing it for social approval. You’re doing it to fit in with the other monkeys. You’re fitting in to get along with the herd. That’s not where the returns are in life. The returns in life are being out of the herd.
+At some level, you』re doing it for social approval. You』re doing it to fit in with the other monkeys. You』re fitting in to get along with the herd. That』s not where the returns are in life. The returns in life are being out of the herd.
 
-在某种程度上，你这样做是为了获得社会认可。你这么做是为了跟其他猴子打成一片。你正在适应，以便与羊群和睦相处。这不是生活中的回报所在。生活中的回报正在从牛群中脱颖而出。
+在某種程度上，你這樣做是爲了獲得社會認可。你這麼做是爲了跟其他猴子打成一片。你正在適應，以便與羊群和睦相處。這不是生活中的回報所在。生活中的回報正在從牛群中脫穎而出。
 
-Social approval is inside the herd. If you want social approval, definitely go read what the herd is reading. It takes a level of contrarianism to say, “Nope. I’m just going to do my own thing. Regardless of the social outcome, I will learn anything I think is interesting.”
+Social approval is inside the herd. If you want social approval, definitely go read what the herd is reading. It takes a level of contrarianism to say, 「Nope. I』m just going to do my own thing. Regardless of the social outcome, I will learn anything I think is interesting.」
 
-社会认同在群体内部。如果你想获得社会认可，一定要去读一读羊群正在读的东西。需要一定程度的逆向主义才能说，“不。我只想做我自己的事。不管社会结果如何，我会学到任何我认为有趣的东西。“
+社會認同在群體內部。如果你想獲得社會認可，一定要去讀一讀羊群正在讀的東西。需要一定程度的逆向主義才能說，「不。我只想做我自己的事。不管社會結果如何，我會學到任何我認為有趣的東西。「
 
-Do you think there’s some loss aversion there? Because once you diverge, you’re not sure if you’re diverging toward a positive outcome or a negative outcome?
+Do you think there』s some loss aversion there? Because once you diverge, you』re not sure if you』re diverging toward a positive outcome or a negative outcome?
 
-你认为那里有一些厌恶损失的情绪吗？因为一旦你分道扬镳，你就不确定你是朝着积极的结果还是消极的结果发散？
+你認為那裡有一些厭惡損失的情緒嗎？因為一旦你分道揚鑣，你就不確定你是朝著積極的結果還是消極的結果發散？
 
-Absolutely. I think that’s why the smartest and the most successful people I know started out as losers. If you view yourself as a loser, as someone who was cast out by society and has no role in normal society, then you will do your own thing and you’re much more likely to find a winning path. It helps to start out by saying, “I’m never going to be popular. I’m never going to be accepted. I’m already a loser. I’m not going to get what all the other kids have. I’ve just got to be happy being me.”
+Absolutely. I think that』s why the smartest and the most successful people I know started out as losers. If you view yourself as a loser, as someone who was cast out by society and has no role in normal society, then you will do your own thing and you』re much more likely to find a winning path. It helps to start out by saying, 「I』m never going to be popular. I』m never going to be accepted. I』m already a loser. I』m not going to get what all the other kids have. I』ve just got to be happy being me.」
 
-绝对一点儿没错。我想这就是为什么我认识的最聪明、最成功的人一开始都是失败者。如果你认为自己是个失败者，被社会抛弃了，在正常的社会中没有任何角色，那么你就会做你自己的事情，你更有可能找到一条成功的道路。一开始就说，“我永远不会受欢迎。我永远不会被录取的。我已经是个失败者了。我不会得到所有其他孩子都有的。我只要开心地做我自己就行了。“
+絕對一點兒沒錯。我想這就是為什麼我認識的最聰明、最成功的人一開始都是失敗者。如果你認為自己是個失敗者，被社會拋棄了，在正常的社會中沒有任何角色，那麼你就會做你自己的事情，你更有可能找到一條成功的道路。一開始就說，「我永遠不會受歡迎。我永遠不會被錄取的。我已經是個失敗者了。我不會得到所有其他孩子都有的。我只要開心地做我自己就行了。「
 For self -improvement without self -discipline , update your self -image .
 
-对于没有自律的自我提升，更新你的自我形象。
+對於沒有自律的自我提升，更新你的自我形象。
 
-Everyone’s motivated at something. It just depends on the thing. Even the people that we say are unmotivated are suddenly really motivated when they’re playing video games. I think motivation is relative, so you just have to find the thing you’re into. [1]
+Everyone』s motivated at something. It just depends on the thing. Even the people that we say are unmotivated are suddenly really motivated when they』re playing video games. I think motivation is relative, so you just have to find the thing you』re into. [1]
 
-每个人都有动机。这要看具体情况而定。即使是那些我们说没有动力的人，当他们玩电子游戏时，也会突然变得真正有动力。我认为动机是相对的，所以你只需要找到你喜欢的东西。
+每個人都有動機。這要看具體情況而定。即使是那些我們說沒有動力的人，當他們玩電子遊戲時，也會突然變得真正有動力。我認為動機是相對的，所以你只需要找到你喜歡的東西。
 
-Grind and sweat, toil and bleed, face the abyss. It’s all part of becoming an overnight success.
+Grind and sweat, toil and bleed, face the abyss. It』s all part of becoming an overnight success.
 
-磨练和汗水，辛劳和流血，面对深渊。这一切都是一夜成名的一部分。
+磨練和汗水，辛勞和流血，面對深淵。這一切都是一夜成名的一部分。
 
 If you had to pass down to your kids one or two principles, what would they be?
-如果你必须把一两条原则传给你的孩子，你会传授给他们什么呢？
-Number one: read. Read everything you can. And not just the stuff that society tells you is good or even books that I tell you to read. Just read for its own sake. Develop a love for it. Even if you have to read romance novels or paperbacks or comic books. There’s no such thing as junk. Just read it all. Eventually, you’ll guide yourself to the things that you should and want to be reading.
+如果你必須把一兩條原則傳給你的孩子，你會傳授給他們什麼呢？
+Number one: read. Read everything you can. And not just the stuff that society tells you is good or even books that I tell you to read. Just read for its own sake. Develop a love for it. Even if you have to read romance novels or paperbacks or comic books. There』s no such thing as junk. Just read it all. Eventually, you』ll guide yourself to the things that you should and want to be reading.
 
-第一：阅读。读你能读到的所有东西。而且不仅仅是社会告诉你的东西是好的，甚至不只是我告诉你要读的书。只是为了它自己的缘故而阅读。培养一种对它的热爱。即使你不得不读言情小说、平装书或漫画书。根本没有垃圾这回事。全部读完就行了。最终，你会引导自己去阅读你应该和想要阅读的东西。
+第一：閱讀。讀你能讀到的所有東西。而且不僅僅是社會告訴你的東西是好的，甚至不只是我告訴你要讀的書。只是爲了它自己的緣故而閱讀。培養一種對它的熱愛。即使你不得不讀言情小說、平裝書或漫畫書。根本沒有垃圾這回事。全部讀完就行了。最終，你會引導自己去閱讀你應該和想要閱讀的東西。
 
 Related to the skill of reading are the skills of mathematics and persuasion. Both skills help you to navigate through the real world.
 
-与阅读技能相关的是数学技能和说服力。这两种技能都能帮助你在现实世界中导航。
+與閱讀技能相關的是數學技能和說服力。這兩種技能都能幫助你在現實世界中導航。
 
-Having the skill of persuasion is important because if you can influence your fellow human beings, you can get a lot done. I think persuasion is an actual skill. So you can learn it, and it’s not that hard to do so.
+Having the skill of persuasion is important because if you can influence your fellow human beings, you can get a lot done. I think persuasion is an actual skill. So you can learn it, and it』s not that hard to do so.
 
-拥有说服的技能很重要，因为如果你能影响你的人类同胞，你就能做很多事情。我认为说服是一项实实在在的技能。所以你可以学会它，做到这一点并不难。
+擁有說服的技能很重要，因為如果你能影響你的人類同胞，你就能做很多事情。我認為說服是一項實實在在的技能。所以你可以學會它，做到這一點並不難。
 
-Mathematics helps with all the complex and difficult things in life. If you want to make money, if you want to do science, if you want to understand game theory or politics or economics or investments or computers, all of these things have mathematics at the core. It’s a foundational language of nature.
+Mathematics helps with all the complex and difficult things in life. If you want to make money, if you want to do science, if you want to understand game theory or politics or economics or investments or computers, all of these things have mathematics at the core. It』s a foundational language of nature.
 
-数学帮助解决生活中所有复杂和困难的事情。如果你想赚钱，如果你想做科学，如果你想了解博弈论、政治学、经济学、投资学或计算机，所有这些事情都以数学为核心。它是自然界的一种基础性语言。
+數學幫助解決生活中所有複雜和困難的事情。如果你想賺錢，如果你想做科學，如果你想了解博弈論、政治學、經濟學、投資學或計算機，所有這些事情都以數學為核心。它是自然界的一種基礎性語言。
 
-Nature speaks in mathematics. Mathematics is us reverse engineering the language of nature, and we have only scratched the surface. The good news is you don’t have to know a lot of math. You just have to know basic statistics, arithmetic, etc. You should know statistics and probability forwards and backwards and inside out. [8]
+Nature speaks in mathematics. Mathematics is us reverse engineering the language of nature, and we have only scratched the surface. The good news is you don』t have to know a lot of math. You just have to know basic statistics, arithmetic, etc. You should know statistics and probability forwards and backwards and inside out. [8]
 
-大自然用数学说话。数学是我们对自然语言的逆向工程，我们只是触及了皮毛。好消息是你不必知道很多数学知识。你只需要知道基本的统计、算术等就可以了。你应该前前后后、里里外外地了解统计数据和概率。
+大自然用數學說話。數學是我們對自然語言的逆向工程，我們只是觸及了皮毛。好訊息是你不必知道很多數學知識。你只需要知道基本的統計、算術等就可以了。你應該前前後後、裡裏外外地瞭解統計數據和概率。
