--- a/2-21.md
+++ b/2-21.md
@@ -4,48 +4,48 @@
 
 The older the question, the older the answers.
 
-问题越陈旧，答案也就越陈旧。
+問題越陳舊，答案也就越陳舊。
 
-You’ve called your philosophy Rational Buddhism. How does it differ from traditional Buddhism? What type of exploration did you go through?
-你称你的哲学为理性佛教。它与传统佛教有什么不同？你经历了什么类型的探险？
-The rational part means I have to reconcile with science and evolution. I have to reject all the pieces I can’t verify for myself. For example, is meditation good for you? Yes. Is clearing your mind a good thing? Yes. Is there a base layer of awareness below your monkey mind? Yes. All these things I’ve verified for myself.
+You』ve called your philosophy Rational Buddhism. How does it differ from traditional Buddhism? What type of exploration did you go through?
+你稱你的哲學為理性佛教。它與傳統佛教有什麼不同？你經歷了什麼型別的探險？
+The rational part means I have to reconcile with science and evolution. I have to reject all the pieces I can』t verify for myself. For example, is meditation good for you? Yes. Is clearing your mind a good thing? Yes. Is there a base layer of awareness below your monkey mind? Yes. All these things I』ve verified for myself.
 
-理性的部分意味着我必须与科学和进化论调和。我必须拒绝所有我不能亲自核实的东西。例如，冥想对你有好处吗？是。让头脑清醒是一件好事吗？是。在你的猴脑下面有没有一层基本的意识？是。所有这些事情我都已经为自己核实过了。
+理性的部分意味著我必須與科學和進化論調和。我必須拒絕所有我不能親自核實的東西。例如，冥想對你有好處嗎？是。讓頭腦清醒是一件好事嗎？是。在你的猴腦下面有沒有一層基本的意識？是。所有這些事情我都已經為自己覈實過了。
 
-Some beliefs from Buddhism I believe and follow because, again, I’ve verified or reasoned with thought experiments myself. What I will not accept is things like, “There’s a past life you’re paying off the karma for.” I haven’t seen it. I don’t remember any past lives. I don’t have any memory. I just have to not believe that.
+Some beliefs from Buddhism I believe and follow because, again, I』ve verified or reasoned with thought experiments myself. What I will not accept is things like, 「There』s a past life you』re paying off the karma for.」 I haven』t seen it. I don』t remember any past lives. I don』t have any memory. I just have to not believe that.
 
-我相信并追随佛教的一些信仰，是因为我自己也用思想实验来验证或论证过。我不会接受的是这样的话：“你有前世，你正在偿还报应。”我还没看过呢。我不记得任何前世了。我一点都不记得了。我只是不能相信这一点。
+我相信並追隨佛教的一些信仰，是因為我自己也用思想實驗來驗證或論證過。我不會接受的是這樣的話：「你有前世，你正在償還報應。」我還沒看過呢。我不記得任何前世了。我一點都不記得了。我只是不能相信這一點。
 
-When people say your third chakra is opening, etc.—I don’t know—that’s just fancy nomenclature. I have not been able to verify or confirm any of that on my own. If I can’t verify it on my own or if I cannot get there through science, then it may be true, it may be false, but it’s not falsifiable, so I cannot view it as a fundamental truth.
+When people say your third chakra is opening, etc.—I don』t know—that』s just fancy nomenclature. I have not been able to verify or confirm any of that on my own. If I can』t verify it on my own or if I cannot get there through science, then it may be true, it may be false, but it』s not falsifiable, so I cannot view it as a fundamental truth.
 
-当人们说你的第三个脉轮打开了，等等--我不知道--那只是个花哨的术语。我自己还不能核实或确认任何这一点。如果我自己不能证实它，或者如果我不能通过科学到达那里，那么它可能是真的，也可能是假的，但它是不可证伪的，所以我不能把它视为一个基本的真理。
+當人們說你的第三個脈輪打開了，等等--我不知道--那只是個花哨的術語。我自己還不能覈實或確認任何這一點。如果我自己不能證實它，或者如果我不能通過科學到達那裡，那麼它可能是真的，也可能是假的，但它是不可證偽的，所以我不能把它視為一個基本的真理。
 
-On the other side, I do know evolution is true. I do know we are evolved as survival and replication machines. I do know we have an ego, so we get up off the ground and worms don’t eat us and we actually take action. Rational Buddhism, to me, means understanding the internal work Buddhism espouses to make yourself happier, better off, more present and in control of your emotions—being a better human being.
+On the other side, I do know evolution is true. I do know we are evolved as survival and replication machines. I do know we have an ego, so we get up off the ground and worms don』t eat us and we actually take action. Rational Buddhism, to me, means understanding the internal work Buddhism espouses to make yourself happier, better off, more present and in control of your emotions—being a better human being.
 
-另一方面，我确实知道进化论是正确的。我知道我们进化成了生存和复制机器。我知道我们有一种自我，所以我们离开地面，蠕虫不会吃掉我们，我们实际上采取了行动。对我来说，理性的佛教意味着理解佛教所信奉的让你自己更快乐、更富裕、更当下、更能控制自己情绪的内在活动-成为一个更好的人。
+另一方面，我確實知道進化論是正確的。我知道我們進化成了生存和複製機器。我知道我們有一種自我，所以我們離開地面，蠕蟲不會吃掉我們，我們實際上採取了行動。對我來說，理性的佛教意味著理解佛教所信奉的讓你自己更快樂、更富裕、更當下、更能控制自己情緒的內在活動-成為一個更好的人。
 
-I don’t subscribe to anything fanciful because it was written down in a book. I don’t think I can levitate. I don’t think meditation will give me superpowers and those kinds of things. Try everything, test it for yourself, be skeptical, keep what’s useful, and discard what’s not.
+I don』t subscribe to anything fanciful because it was written down in a book. I don』t think I can levitate. I don』t think meditation will give me superpowers and those kinds of things. Try everything, test it for yourself, be skeptical, keep what』s useful, and discard what』s not.
 
-我不会订阅任何奇思妙想的东西，因为它是写在书上的。我想我不能漂浮起来。我不认为冥想会给我超能力之类的东西。尝试一切，自己测试，持怀疑态度，保留有用的，丢弃不有用的。
+我不會訂閱任何奇思妙想的東西，因為它是寫在書上的。我想我不能漂浮起來。我不認為冥想會給我超能力之類的東西。嘗試一切，自己測試，持懷疑態度，保留有用的，丟棄不有用的。
 
 I would say my philosophy falls down to this—on one pole is evolution as a binding principle because it explains so much about humans, on the other is Buddhism, which is the oldest, most time -tested spiritual philosophy regarding the internal state of each of us.
 
-我想说我的哲学归结为这一点-一方面是进化论作为一个有约束力的原则，因为它解释了关于人类的很多东西，另一方面是佛教，这是关于我们每个人的内在状态的最古老、最久经考验的精神哲学。
+我想說我的哲學歸結為這一點-一方面是進化論作為一個有約束力的原則，因為它解釋了關於人類的很多東西，另一方面是佛教，這是關於我們每個人的內在狀態的最古老、最久經考驗的精神哲學。
 
 I think those are absolutely reconcilable. I actually want to write a blog post at some point about how you can map the tenants of Buddhism, especially the non -fanciful ones, directly into a virtual reality simulation. [4]
 
-我认为这些是绝对可以调和的。实际上，我想在某个时候写一篇博客文章，讲述如何将佛教的租户，特别是那些没有想象力的租户，直接映射到虚拟现实模拟中。
+我認為這些是絕對可以調和的。實際上，我想在某個時候寫一篇部落格文章，講述如何將佛教的租戶，特別是那些沒有想像力的租戶，直接對映到虛擬現實模擬中。
 
 Everyone starts out innocent. Everyone is corrupted. Wisdom is the discarding of vices and the return to virtue, by way of knowledge.
 
-每个人一开始都是无辜的。每个人都堕落了。智慧是以知识的方式摒弃恶习，回归美德。
+每個人一開始都是無辜的。每個人都墮落了。智慧是以知識的方式摒棄惡習，迴歸美德。
 
 How do you define wisdom?
-你如何定义智慧？
+你如何定義智慧？
 Understanding the long -term consequences of your actions. [11]
 
-了解你行为的长期后果。
+瞭解你行為的長期後果。
 
-If wisdom could be imparted through words alone, we’d all be done here.
+If wisdom could be imparted through words alone, we』d all be done here.
 
-如果仅靠语言就能传授智慧，我们在这里就都完蛋了。
+如果僅靠語言就能傳授智慧，我們在這裡就都完蛋了。
