--- a/2-22.md
+++ b/2-22.md
@@ -1,29 +1,29 @@
 # The Present Is All We Have
 
-现在是我们的全部
+現在是我們的全部
 
 There is actually nothing but this moment. No one has ever gone back in time, and no one has ever been able to successfully predict the future in any way that matters. Literally, the only thing that exists is this exact point where you are in space at the exact time you happen to be here.
 
-实际上，除了这一刻，什么都没有。没有人能够回到过去，也没有人能够以任何重要的方式成功地预测未来。从字面上讲，唯一存在的东西就是你恰好在这里的确切时间在太空中的这个确切的点。
+實際上，除了這一刻，什麼都沒有。沒有人能夠回到過去，也沒有人能夠以任何重要的方式成功地預測未來。從字面上講，唯一存在的東西就是你恰好在這裡的確切時間在太空中的這個確切的點。
 
-Like all great profound truths, it’s all paradoxes. Any two points are infinitely different. Any moment is perfectly unique. Each moment itself slips by so quickly you can’t grab it. [4]
+Like all great profound truths, it』s all paradoxes. Any two points are infinitely different. Any moment is perfectly unique. Each moment itself slips by so quickly you can』t grab it. [4]
 
-就像所有伟大而深刻的真理一样，这一切都是自相矛盾的。任何两个点都是无限不同的。任何时刻都是独一无二的。每一刻都过得如此之快，以至于你无法抓住它。
+就像所有偉大而深刻的真理一樣，這一切都是自相矛盾的。任何兩個點都是無限不同的。任何時刻都是獨一無二的。每一刻都過得如此之快，以至於你無法抓住它。
 
-You’re dying and being reborn at every moment. It’s up to you whether to forget or remember that. [2]
+You』re dying and being reborn at every moment. It』s up to you whether to forget or remember that. [2]
 
-你每时每刻都在死去和重生。是忘记还是记住，由你自己决定。
+你每時每刻都在死去和重生。是忘記還是記住，由你自己決定。
 
-“Everything is more beautiful because we’re doomed. You will never be lovelier than you are now, and we will never be here again.”
+「Everything is more beautiful because we』re doomed. You will never be lovelier than you are now, and we will never be here again.」
 
-“一切都变得更美好，因为我们注定要失败。你再也不会比现在更可爱了，我们也再也不会在这里了。“
+「一切都變得更美好，因為我們註定要失敗。你再也不會比現在更可愛了，我們也再也不會在這裡了。「
 —Homer, The Iliad
--荷马，“伊利亚特”
+-荷馬，「伊利亞特」
 
-I don’t even remember what I said two minutes ago. At best, the past is some fictional little memory tape in my head. As far as I’m concerned, my past is dead. It’s gone. All death really means is that there are no more future moments. [2]
+I don』t even remember what I said two minutes ago. At best, the past is some fictional little memory tape in my head. As far as I』m concerned, my past is dead. It』s gone. All death really means is that there are no more future moments. [2]
 
-我甚至不记得两分钟前我说了什么。过去充其量只是我脑海中虚构的一些记忆磁带。在我看来，我的过去已经死了。它不见了。死亡真正意味着不再有未来的时刻。
+我甚至不記得兩分鐘前我說了什麼。過去充其量只是我腦海中虛構的一些記憶磁帶。在我看來，我的過去已經死了。它不見了。死亡真正意味著不再有未來的時刻。
 
 Inspiration is perishable—act on it immediately.
 
-灵感是容易腐烂的--立即行动起来。
+靈感是容易腐爛的--立即行動起來。
