--- a/2-23.md
+++ b/2-23.md
@@ -2,20 +2,20 @@
 
 The democratization of technology allows anyone to be a creator, entrepreneur, scientist. The future is brighter.
 
-技术的民主化使任何人都可以成为创造者、企业家和科学家。未来会更加光明。
+技術的民主化使任何人都可以成為創造者、企業家和科學家。未來會更加光明。
 
-It’s statistically likely there are more advanced alien civilizations out there.
+It』s statistically likely there are more advanced alien civilizations out there.
 
-从统计上看，那里很可能有更先进的外星文明。
+從統計上看，那裡很可能有更先進的外星文明。
 
-Hopefully, they’re good environmentalists and find us cute.
+Hopefully, they』re good environmentalists and find us cute.
 
-希望他们是好的环保主义者，觉得我们很可爱。
+希望他們是好的環保主義者，覺得我們很可愛。
 
-# Naval’s Recommended Reading
+# Naval』s Recommended Reading
 
-纳瓦尔推荐读物
+納瓦爾推薦讀物
 
-The truth is, I don’t read for self -improvement . I read out of curiosity and interest. The best book is the one you’ll devour.
+The truth is, I don』t read for self -improvement . I read out of curiosity and interest. The best book is the one you』ll devour.
 
-事实是，我读书不是为了自我提升。我出于好奇和兴趣阅读。最好的书就是你会狼吞虎咽的那本。
+事實是，我讀書不是爲了自我提升。我出於好奇和興趣閱讀。最好的書就是你會狼吞虎嚥的那本。
