--- a/2-27.md
+++ b/2-27.md
@@ -1,77 +1,77 @@
 
-## Naval’s Writing
+## Naval』s Writing
 
-纳瓦尔的写作
+納瓦爾的寫作
 
 Life Formulas I (2008)
 生命公式I(2008)
 
 These are notes to myself. Your frame of reference, and therefore your calculations, may vary. These are not definitions—these are algorithms for success. Contributions are welcome.
 
-这些是写给我自己的便条。你的参照系可能会有所不同，因此你的计算也会有所不同。这些不是定义--它们是成功的算法。欢迎投稿。
+這些是寫給我自己的便條。你的參照系可能會有所不同，因此你的計算也會有所不同。這些不是定義--它們是成功的演算法。歡迎投稿。
 
 * Happiness = Health + Wealth + Good Relationships
-* 幸福=健康+财富+良好的关系
+* 幸福=健康+財富+良好的關係
 * Health = Exercise + Diet + Sleep
-* 健康=锻炼+饮食+睡眠
+* 健康=鍛鍊+飲食+睡眠
 * Exercise = High Intensity Resistance Training + Sports + Rest
-* 运动=高强度耐力训练+运动+休息
+* 運動=高強度耐力訓練+運動+休息
 * Diet = Natural Foods + Intermittent Fasting + Plants
-* 饮食=天然食品+间歇禁食+植物
+* 飲食=天然食品+間歇禁食+植物
 * Sleep = No alarms + 8–9 hours + Circadian rhythms
-* 睡眠=无闹钟+8-9小时+昼夜节律
+* 睡眠=無鬧鐘+8-9小時+晝夜節律
 * Wealth = Income + Wealth * (Return on Investment)
-* 财富=收入+财富*(投资回报)
+* 財富=收入+財富*(投資回報)
 * Income = Accountability + Leverage + Specific Knowledge
-* 收入=责任+杠杆+特定知识
+* 收入=責任+槓桿+特定知識
 * Accountability = Personal Branding + Personal Platform + Taking Risk?
-* 责任=个人品牌+个人平台+承担风险？
+* 責任=個人品牌+個人平臺+承擔風險？
 * Leverage = Capital + People + Intellectual Property
-* 杠杆=资本+人员+知识产权
+* 槓桿=資本+人員+智慧財產權
 * Specific Knowledge = Knowing how to do something society cannot yet easily train other people to do
-* 专门知识=知道如何去做社会还不容易训练别人去做的事情
-* Return on Investment = “Buy -and -Hold ” + Valuation + Margin of Safety [72]
+* 專門知識=知道如何去做社會還不容易訓練別人去做的事情
+* Return on Investment = 「Buy -and -Hold 」 + Valuation + Margin of Safety [72]
 
-* 投资回报率=“买入并持有”+估值+安全边际[72]
+* 投資回報率=「買入並持有」+估值+安全邊際[72]
 
-## Naval’s Rules (2016)
+## Naval』s Rules (2016)
 
-纳瓦尔规则(2016)
+納瓦爾規則(2016)
 * Be present above all else.
-* 至高无上地出席。
+* 至高無上地出席。
 * Desire is suffering. (Buddha)
-* 欲望就是痛苦。(佛陀)
+* 慾望就是痛苦。(佛陀)
 * Anger is a hot coal you hold in your hand while waiting to throw it at someone else. (Buddha)
-* 愤怒是你手中拿着的滚烫的煤，而你正等着把它扔向别人。(佛陀)
-* If you can’t see yourself working with someone for life, don’t work with them for a day.
-* 如果你看不到自己与某人终生共事，那就不要与他们共事一天。
+* 憤怒是你手中拿著的滾燙的煤，而你正等著把它扔向別人。(佛陀)
+* If you can』t see yourself working with someone for life, don』t work with them for a day.
+* 如果你看不到自己與某人終生共事，那就不要與他們共事一天。
 * Reading (learning) is the ultimate meta -skill and can be traded for anything else.
-* 阅读(学习)是终极的元技能，可以用来交换任何其他东西。
+* 閱讀(學習)是終極的元技能，可以用來交換任何其他東西。
 * All the real benefits in life come from compound interest.
-* 生活中所有的实际利益都来自复利。
+* 生活中所有的實際利益都來自複利。
 * Earn with your mind, not your time.
-* 用你的头脑而不是你的时间来挣钱。
+* 用你的頭腦而不是你的時間來掙錢。
 * 99 percent of all effort is wasted.
-* 99%的努力都白费了。
-* Total honesty at all times. It’s almost always possible to be honest and positive.
-* 任何时候都要完全诚实。诚实和积极几乎总是可能的。
+* 99%的努力都白費了。
+* Total honesty at all times. It』s almost always possible to be honest and positive.
+* 任何時候都要完全誠實。誠實和積極幾乎總是可能的。
 * Praise specifically, criticize generally. (Warren Buffett)
-* 具体表扬，一般批评。(沃伦·巴菲特)
+* 具體表揚，一般批評。(沃倫·巴菲特)
 * Truth is that which has predictive power.
-* 真理是具有预测能力的东西。
-* Watch every thought. (Ask “Why am I having this thought?”)
-* 仔细观察每一个想法。(问“我为什么会有这样的想法？”)
+* 真理是具有預測能力的東西。
+* Watch every thought. (Ask 「Why am I having this thought?」)
+* 仔細觀察每一個想法。(問「我為什麼會有這樣的想法？」)
 * All greatness comes from suffering.
-* 所有的伟大都来自于苦难。
+* 所有的偉大都來自於苦難。
 * Love is given, not received.
-* 爱是给予的，而不是接受的。
+* 愛是給予的，而不是接受的。
 * Enlightenment is the space between your thoughts. (Eckhart Tolle)
-* 开悟是你的思想之间的空间。(埃克哈特·托尔)
+* 開悟是你的思想之間的空間。(埃克哈特·托爾)
 * Mathematics is the language of nature.
-* 数学是自然界的语言。
+* 數學是自然界的語言。
 * Every moment has to be complete in and of itself. [5]
-* 每一个时刻本身都必须是完整的。
+* 每一個時刻本身都必須是完整的。
 
 Health, love, and your mission, in that order. Nothing else matters.
 
-健康，爱，还有你的使命，依次是健康、爱和你的使命。其他的都不重要。
+健康，愛，還有你的使命，依次是健康、愛和你的使命。其他的都不重要。
