--- a/2-3.md
+++ b/2-3.md
@@ -1,19 +1,19 @@
 # Happiness Is a Choice
 
-幸福是一种选择
+幸福是一種選擇
 
-Happiness, love, and passion…aren’t things you find—they’re choices you make.
+Happiness, love, and passion…aren』t things you find—they』re choices you make.
 
-幸福、爱情和激情…不是你找到的东西-它们是你做出的选择。
+幸福、愛情和激情…不是你找到的東西-它們是你做出的選擇。
 
 Happiness is a choice you make and a skill you develop.
 
-幸福是你做出的选择，是你发展起来的技能。
+幸福是你做出的選擇，是你發展起來的技能。
 
 The mind is just as malleable as the body. We spend so much time and effort trying to change the external world, other people, and our own bodies—all while accepting ourselves the way we were programmed in our youths.
 
-头脑和身体一样具有可塑性。我们花费了如此多的时间和精力试图改变外部世界、他人和我们自己的身体--所有这些都是在接受我们自己在年轻时被编程的方式的同时。
+頭腦和身體一樣具有可塑性。我們花費了如此多的時間和精力試圖改變外部世界、他人和我們自己的身體--所有這些都是在接受我們自己在年輕時被程式設計的方式的同時。
 
 We accept the voice in our head as the source of all truth. But all of it is malleable, and every day is new. Memory and identity are burdens from the past preventing us from living freely in the present. [3]
 
-我们接受头脑中的声音，认为它是一切真理的源泉。但所有这些都是可塑性的，每天都是新的。记忆和身份是来自过去的负担，阻碍了我们自由地生活在现在。
+我們接受頭腦中的聲音，認為它是一切真理的源泉。但所有這些都是可塑性的，每天都是新的。記憶和身份是來自過去的負擔，阻礙了我們自由地生活在現在。
