--- a/2-4.md
+++ b/2-4.md
@@ -1,27 +1,27 @@
 #  Happiness Requires Presence
 
-幸福需要在场
+幸福需要在場
 
-At any given time, when you’re walking down the streets, a very small percentage of your brain is focused on the present. The rest is planning the future or regretting the past. This keeps you from having an incredible experience. It’s keeping you from seeing the beauty in everything and for being grateful for where you are. You can literally destroy your happiness if you spend all of your time living in delusions of the future. [4]
+At any given time, when you』re walking down the streets, a very small percentage of your brain is focused on the present. The rest is planning the future or regretting the past. This keeps you from having an incredible experience. It』s keeping you from seeing the beauty in everything and for being grateful for where you are. You can literally destroy your happiness if you spend all of your time living in delusions of the future. [4]
 
-在任何给定的时间，当你走在街上时，你的大脑只有很小一部分专注于现在。剩下的要么是规划未来，要么是后悔过去。这会让你不会有不可思议的体验。它让你看不到每件事的美好，也让你不能对自己所处的位置心存感激。如果你把所有的时间都生活在对未来的幻想中，你可能真的会毁了你的幸福。
+在任何給定的時間，當你走在街上時，你的大腦只有很小一部分專注于現在。剩下的要麼是規劃未來，要麼是後悔過去。這會讓你不會有不可思議的體驗。它讓你看不到每件事的美好，也讓你不能對自己所處的位置心存感激。如果你把所有的時間都生活在對未來的幻想中，你可能真的會毀了你的幸福。
 
 We crave experiences that will make us be present, but the cravings themselves take us from the present moment.
 
-我们渴望能让我们活在当下的体验，但这些渴望本身就会把我们从当下带走。
+我們渴望能讓我們活在當下的體驗，但這些渴望本身就會把我們從當下帶走。
 
-I just don’t believe in anything from my past. Anything. No memories. No regrets. No people. No trips. Nothing. A lot of our unhappiness comes from comparing things from the past to the present. [4]
+I just don』t believe in anything from my past. Anything. No memories. No regrets. No people. No trips. Nothing. A lot of our unhappiness comes from comparing things from the past to the present. [4]
 
-我只是不相信我过去的任何事。什么都行。没有记忆。无怨无悔。没有人。没有旅行。没什么。我们的很多不快乐来自于将过去的事情与现在的事情进行比较。
+我只是不相信我過去的任何事。什麼都行。沒有記憶。無怨無悔。沒有人。沒有旅行。沒什麼。我們的很多不快樂來自於將過去的事情與現在的事情進行比較。
 
 Anticipation for our vices pulls us into the future. Eliminating vices makes it easier to be present.
 
-对我们恶行的期待把我们拉向未来。消除恶习会让你更容易活在当下。
+對我們惡行的期待把我們拉向未來。消除惡習會讓你更容易活在當下。
 
-There’s a great definition I read: “Enlightenment is the space between your thoughts.” It means enlightenment isn’t something you achieve after thirty years sitting on a mountaintop. It’s something you can achieve moment to moment, and you can be enlightened to a certain percent every single day. [5]
+There』s a great definition I read: 「Enlightenment is the space between your thoughts.」 It means enlightenment isn』t something you achieve after thirty years sitting on a mountaintop. It』s something you can achieve moment to moment, and you can be enlightened to a certain percent every single day. [5]
 
-我读到了一个很棒的定义：“开悟是你思想之间的空间。”这意味着开悟不是你坐在山顶上三十年后才能实现的东西。这是一件你可以时时刻刻都能做到的事情，你每天都可以得到一定的启发。“[5]
+我讀到了一個很棒的定義：「開悟是你思想之間的空間。」這意味著開悟不是你坐在山頂上三十年後才能實現的東西。這是一件你可以時時刻刻都能做到的事情，你每天都可以得到一定的啓發。「[5]
 
-What if this life is the paradise we were promised, and we’re just squandering it?
+What if this life is the paradise we were promised, and we』re just squandering it?
 
-如果这种生活就是我们被许诺的天堂，而我们只是在浪费它呢？
+如果這種生活就是我們被許諾的天堂，而我們只是在浪費它呢？
