--- a/2-5.md
+++ b/2-5.md
@@ -4,39 +4,39 @@
 
 Are happiness and purpose interconnected?
 
-幸福和目标是相互联系的吗？
+幸福和目標是相互聯繫的嗎？
 
-Happiness is such an overloaded word, I’m not even sure what it means. For me these days, happiness is more about peace than it is about joy. I don’t think peace and purpose go together.
+Happiness is such an overloaded word, I』m not even sure what it means. For me these days, happiness is more about peace than it is about joy. I don』t think peace and purpose go together.
 
-幸福是一个超负荷的词，我甚至不确定它是什么意思。这些天来，对我来说，幸福更多的是关于和平，而不是快乐。我不认为和平和目标是相辅相成的。
+幸福是一個超負荷的詞，我甚至不確定它是什麼意思。這些天來，對我來說，幸福更多的是關於和平，而不是快樂。我不認為和平和目標是相輔相成的。
 
-If it’s your internal purpose, the thing you most want to do, then sure, you’ll be happy doing it. But an externally inflicted purpose, like “society wants me to do X,” “I am the first son of the first son of this, so I should do Y,” or “I have this debt or burden I took on,” I don’t think it will make you happy.
+If it』s your internal purpose, the thing you most want to do, then sure, you』ll be happy doing it. But an externally inflicted purpose, like 「society wants me to do X,」 「I am the first son of the first son of this, so I should do Y,」 or 「I have this debt or burden I took on,」 I don』t think it will make you happy.
 
-如果这是你的内在目标，你最想做的事情，那么当然，你会很乐意去做的。但是一个外在的目的，比如“社会想让我做X”，“我是这个第一个儿子的长子，所以我应该做Y”，或者“我承担了这个债务或负担”，我认为这不会让你开心。
+如果這是你的內在目標，你最想做的事情，那麼當然，你會很樂意去做的。但是一個外在的目的，比如「社會想讓我做X」，「我是這個第一個兒子的長子，所以我應該做Y」，或者「我承擔了這個債務或負擔」，我認為這不會讓你開心。
 
-I think a lot of us have this low -level pervasive feeling of anxiety. If you pay attention to your mind, sometimes you’re just running around doing your thing and you’re not feeling great, and you notice your mind is chattering and chattering about something. Maybe you can’t sit still…There’s this “nexting” thing where you’re sitting in one spot thinking about where you should be next.
+I think a lot of us have this low -level pervasive feeling of anxiety. If you pay attention to your mind, sometimes you』re just running around doing your thing and you』re not feeling great, and you notice your mind is chattering and chattering about something. Maybe you can』t sit still…There』s this 「nexting」 thing where you』re sitting in one spot thinking about where you should be next.
 
-我想我们很多人都有这种低水平的无处不在的焦虑感。如果你注意你的思想，有时你只是在做你的事情，感觉不是很好，你会注意到你的思想在不停地谈论着什么。也许你坐不住了，…有一种“紧要关头”的事情，你坐在一个位置上思考下一步该去哪里。
+我想我們很多人都有這種低水平的無處不在的焦慮感。如果你注意你的思想，有時你只是在做你的事情，感覺不是很好，你會注意到你的思想在不停地談論著什麼。也許你坐不住了，…有一種「緊要關頭」的事情，你坐在一個位置上思考下一步該去哪裡。
 
-It’s always the next thing, then the next thing, the next thing after that, then the next thing after that creating this pervasive anxiety.
+It』s always the next thing, then the next thing, the next thing after that, then the next thing after that creating this pervasive anxiety.
 
-总是下一件事，然后是那之后的下一件事，这造成了这种无处不在的焦虑。
+總是下一件事，然後是那之後的下一件事，這造成了這種無處不在的焦慮。
 
-It’s most obvious if you ever just sit down and try and do nothing, nothing. I mean nothing, I mean not read a book, I mean not listen to music, I mean literally just sit down and do nothing. You can’t do it, because there’s anxiety always trying to make you get up and go, get up and go, get up and go. I think it’s important just being aware the anxiety is making you unhappy. The anxiety is just a series of running thoughts.
+It』s most obvious if you ever just sit down and try and do nothing, nothing. I mean nothing, I mean not read a book, I mean not listen to music, I mean literally just sit down and do nothing. You can』t do it, because there』s anxiety always trying to make you get up and go, get up and go, get up and go. I think it』s important just being aware the anxiety is making you unhappy. The anxiety is just a series of running thoughts.
 
-最明显的是，如果你只是坐下来，什么都不做，什么都不做。我的意思是什么也不是，我的意思是不看书，不听音乐，我的意思是坐下来什么都不做。你做不到，因为焦虑总是试图让你站起来走，站起来走，站起来走。我认为意识到焦虑让你不开心是很重要的。焦虑只是一系列奔跑的想法。
+最明顯的是，如果你只是坐下來，什麼都不做，什麼都不做。我的意思是什麼也不是，我的意思是不看書，不聽音樂，我的意思是坐下來什麼都不做。你做不到，因為焦慮總是試圖讓你站起來走，站起來走，站起來走。我認為意識到焦慮讓你不開心是很重要的。焦慮只是一系列奔跑的想法。
 
-How I combat anxiety: I don’t try and fight it, I just notice I’m anxious because of all these thoughts. I try to figure out, “Would I rather be having this thought right now, or would I rather have my peace?” Because as long as I have my thoughts, I can’t have my peace.
+How I combat anxiety: I don』t try and fight it, I just notice I』m anxious because of all these thoughts. I try to figure out, 「Would I rather be having this thought right now, or would I rather have my peace?」 Because as long as I have my thoughts, I can』t have my peace.
 
-我如何对抗焦虑：我没有试图与之抗争，我只是注意到我因为所有这些想法而焦虑。我试图弄清楚，“我是宁愿现在就有这样的想法，还是宁愿得到安宁？”因为只要我有我的想法，我就不会安宁。
+我如何對抗焦慮：我沒有試圖與之抗爭，我只是注意到我因為所有這些想法而焦慮。我試圖弄清楚，「我是寧願現在就有這樣的想法，還是寧願得到安寧？」因為只要我有我的想法，我就不會安寧。
 
-You’ll notice when I say happiness, I mean peace. When a lot of people say happiness, they mean joy or bliss, but I’ll take peace. [2]
-你会注意到当我说幸福的时候，我的意思是和平。当很多人说幸福时，他们的意思是快乐或幸福，但我会平静下来。
+You』ll notice when I say happiness, I mean peace. When a lot of people say happiness, they mean joy or bliss, but I』ll take peace. [2]
+你會注意到當我說幸福的時候，我的意思是和平。當很多人說幸福時，他們的意思是快樂或幸福，但我會平靜下來。
 
-A happy person isn’t someone who’s happy all the time.
+A happy person isn』t someone who』s happy all the time.
 
-快乐的人不是一直快乐的人。
+快樂的人不是一直快樂的人。
 
-It’s someone who effortlessly interprets events in such a way that they don’t lose their innate peace.
+It』s someone who effortlessly interprets events in such a way that they don』t lose their innate peace.
 
-它是这样一个人，他毫不费力地用这样一种方式来解释事件，使他们不会失去与生俱来的宁静。
+它是這樣一個人，他毫不費力地用這樣一種方式來解釋事件，使他們不會失去與生俱來的寧靜。
