--- a/2-7.md
+++ b/2-7.md
@@ -1,81 +1,81 @@
 #  Success Does Not Earn Happiness
-成功不会带来幸福
+成功不會帶來幸福
 
 Happiness is being satisfied with what you have.
 
-幸福就是满足于你所拥有的。
+幸福就是滿足於你所擁有的。
 
 Success comes from dissatisfaction. Choose.
 
-成功来自不满。选择吧。
+成功來自不滿。選擇吧。
 
 Confucius says you have two lives, and the second one begins when you realize you only have one. When and how did your second life begin?
 
-孔子说人有两种生活，当你意识到自己只有一种生活时，第二种生活就开始了。你的第二次生命是什么时候开始的，又是如何开始的？
+孔子說人有兩種生活，當你意識到自己只有一種生活時，第二種生活就開始了。你的第二次生命是什麼時候開始的，又是如何開始的？
 
-That’s a very deep question. Most people who are past a certain age have had this feeling or phenomenon; they’ve gone through life a certain way and then gotten to a certain stage and had to make some pretty big changes. I’m definitely also in that boat.
+That』s a very deep question. Most people who are past a certain age have had this feeling or phenomenon; they』ve gone through life a certain way and then gotten to a certain stage and had to make some pretty big changes. I』m definitely also in that boat.
 
-这是一个非常深刻的问题。大多数过了一定年龄的人都有过这种感觉或现象，他们经历了一定的人生道路，然后到了一定的阶段，不得不做出一些相当大的改变。我肯定也在那条船上。
+這是一個非常深刻的問題。大多數過了一定年齡的人都有過這種感覺或現象，他們經歷了一定的人生道路，然後到了一定的階段，不得不做出一些相當大的改變。我肯定也在那條船上。
 
-I struggled for a lot of my life to have certain material and social successes. When I achieved those material and social successes (or at least was beyond a point where they didn’t matter as much), I realized the people around me who had achieved similar successes and were on their way to achieving more didn’t seem all that happy. In my case, there was definitely hedonic adaptation: I’d very quickly get used to anything.
+I struggled for a lot of my life to have certain material and social successes. When I achieved those material and social successes (or at least was beyond a point where they didn』t matter as much), I realized the people around me who had achieved similar successes and were on their way to achieving more didn』t seem all that happy. In my case, there was definitely hedonic adaptation: I』d very quickly get used to anything.
 
-为了取得一定的物质和社会成就，我一生中奋斗了很长一段时间。当我取得那些物质上和社会上的成功(或者至少超过了不重要的程度)时，我意识到我周围那些取得了类似成功并正在取得更多成就的人似乎并不那么快乐。在我的例子中，肯定有享乐主义的适应：我很快就会习惯任何事情。
+爲了取得一定的物質和社會成就，我一生中奮鬥了很長一段時間。當我取得那些物質上和社會上的成功(或者至少超過了不重要的程度)時，我意識到我周圍那些取得了類似成功並正在取得更多成就的人似乎並不那麼快樂。在我的例子中，肯定有享樂主義的適應：我很快就會習慣任何事情。
 
 This led me to the conclusion, which seems trite, that happiness is internal. That conclusion set me on a path of working more on my internal self and realizing all real success is internal and has very little to do with external circumstances.
 
-这让我得出了一个似乎陈词滥调的结论，那就是幸福是内在的。这个结论让我走上了一条更多地关注内在自我的道路，并意识到所有真正的成功都是内在的，与外部环境几乎没有什么关系。
+這讓我得出了一個似乎陳詞濫調的結論，那就是幸福是內在的。這個結論讓我走上了一條更多地關注內在自我的道路，並意識到所有真正的成功都是內在的，與外部環境幾乎沒有什麼關係。
 
-One has to do the external thing anyway. We’re biologically hard -wired . It’s glib to say, “You can just turn it off.” Your own life experience will bring you back to the internal path. [7]
-一个人无论如何都要做外部的事情。我们生来就是天生的。说：“你可以把它关掉，这太油嘴滑舌了。”你自己的生活经历会把你带回内在的道路。
+One has to do the external thing anyway. We』re biologically hard -wired . It』s glib to say, 「You can just turn it off.」 Your own life experience will bring you back to the internal path. [7]
+一個人無論如何都要做外部的事情。我們生來就是天生的。說：「你可以把它關掉，這太油嘴滑舌了。」你自己的生活經歷會把你帶回內在的道路。
 
 The problem with getting good at a game, especially one with big rewards, is you continue playing it long after you should have outgrown it.
 
-擅长一款游戏，尤其是一款回报丰厚的游戏，其问题在于，在你本该玩得远远不够的情况下，你还要继续玩很长一段时间。
+擅長一款遊戲，尤其是一款回報豐厚的遊戲，其問題在於，在你本該玩得遠遠不夠的情況下，你還要繼續玩很長一段時間。
 
 Survival and replication drive put us on the work treadmill. Hedonic adaptation keeps us there. The trick is knowing when to jump off and play instead.
 
-生存和复制的驱动力把我们推上了工作的跑步机。享乐适应让我们保持在那里。诀窍是知道什么时候跳下来玩。
+生存和複製的驅動力把我們推上了工作的跑步機。享樂適應讓我們保持在那裡。訣竅是知道什麼時候跳下來玩。
 
 Who do you think of as successful?
-你认为谁是成功的呢？
-Most people think of someone as successful when they win a game, whatever game they play themselves. If you’re an athlete, you’re going to think of a top athlete. If you’re in business, you might think Elon Musk.
+你認為誰是成功的呢？
+Most people think of someone as successful when they win a game, whatever game they play themselves. If you』re an athlete, you』re going to think of a top athlete. If you』re in business, you might think Elon Musk.
 
-大多数人认为一个人在赢得一场比赛时是成功的，无论他们自己玩什么游戏。如果你是一名运动员，你会想到一位顶尖的运动员。如果你在做生意，你可能会认为埃隆·马斯克。
+大多數人認為一個人在贏得一場比賽時是成功的，無論他們自己玩什麼遊戲。如果你是一名運動員，你會想到一位頂尖的運動員。如果你在做生意，你可能會認為埃隆·馬斯克。
 
-A few years ago, I would have said Steve Jobs, because he was part of the driving force creating something that changed lives for all of humanity. I think Marc Andreessen is successful, not because of his recent incarnation as a venture capitalist, but because of the incredible work he did with Netscape. Satoshi Nakamoto is successful in that he created Bitcoin, which is this incredible technological creation that will have repercussions for decades to come. Of course, Elon Musk, because he changed everyone’s viewpoint on what is possible with modern technology and entrepreneurship. I consider those creators and commercializers successful.
+A few years ago, I would have said Steve Jobs, because he was part of the driving force creating something that changed lives for all of humanity. I think Marc Andreessen is successful, not because of his recent incarnation as a venture capitalist, but because of the incredible work he did with Netscape. Satoshi Nakamoto is successful in that he created Bitcoin, which is this incredible technological creation that will have repercussions for decades to come. Of course, Elon Musk, because he changed everyone』s viewpoint on what is possible with modern technology and entrepreneurship. I consider those creators and commercializers successful.
 
-几年前，我会说史蒂夫·乔布斯，因为他是创造改变全人类生活的东西的推动力的一部分。我认为马克·安德森是成功的，不是因为他最近化身为一名风险资本家，而是因为他在网景公司所做的令人难以置信的工作。中本聪(Satoshi Nakamoto)的成功之处在于他创造了比特币，这是一项令人难以置信的技术创造，将在未来几十年内产生影响。当然，埃隆·马斯克，因为他改变了每个人对现代技术和企业家精神的可能性的看法。我认为那些创造者和商业化者是成功的。
+幾年前，我會說史蒂夫·喬布斯，因為他是創造改變全人類生活的東西的推動力的一部分。我認為馬克·安德森是成功的，不是因為他最近化身為一名風險資本家，而是因為他在網景公司所做的令人難以置信的工作。中本聰(Satoshi Nakamoto)的成功之處在於他創造了比特幣，這是一項令人難以置信的技術創造，將在未來幾十年內產生影響。當然，埃隆·馬斯克，因為他改變了每個人對現代技術和企業家精神的可能性的看法。我認為那些創造者和商業化者是成功的。
 
-To me, the real winners are the ones who step out of the game entirely, who don’t even play the game, who rise above it. Those are the people who have such internal mental and self -control and self -awareness , they need nothing from anybody else. There are a couple of these characters I know in my life. Jerzy Gregorek—I would consider him successful because he doesn’t need anything from anybody. He’s at peace, he’s healthy, and whether he makes more money or less money compared to the next person has no effect on his mental state.
+To me, the real winners are the ones who step out of the game entirely, who don』t even play the game, who rise above it. Those are the people who have such internal mental and self -control and self -awareness , they need nothing from anybody else. There are a couple of these characters I know in my life. Jerzy Gregorek—I would consider him successful because he doesn』t need anything from anybody. He』s at peace, he』s healthy, and whether he makes more money or less money compared to the next person has no effect on his mental state.
 
-对我来说，真正的赢家是那些完全退出游戏的人，那些甚至不玩游戏的人，那些超越游戏的人。他们就是那些拥有内在精神、自我控制和自我意识的人，他们不需要任何其他人的帮助。在我的生活中，我认识几个这样的角色。杰齐·格雷戈雷克-我认为他是成功的，因为他不需要从任何人那里得到任何东西。他很平静，他很健康，与下一个人相比，他赚的钱多还是少都不会影响他的精神状态。
+對我來說，真正的贏家是那些完全退出遊戲的人，那些甚至不玩遊戲的人，那些超越遊戲的人。他們就是那些擁有內在精神、自我控制和自我意識的人，他們不需要任何其他人的幫助。在我的生活中，我認識幾個這樣的角色。杰齊·格雷戈雷克-我認為他是成功的，因為他不需要從任何人那裡得到任何東西。他很平靜，他很健康，與下一個人相比，他賺的錢多還是少都不會影響他的精神狀態。
 
 Historically, I would say the legendary Buddha or Krishnamurti, whose stuff I like reading, they are successful in the sense that they step out of the game entirely. Winning or losing does not matter to them.
 
-从历史上看，我会说传奇的佛陀或克里希那穆提，我喜欢读他们的作品，他们是成功的，因为他们完全退出了游戏。输赢对他们来说无关紧要。
+從歷史上看，我會說傳奇的佛陀或克里希那穆提，我喜歡讀他們的作品，他們是成功的，因為他們完全退出了遊戲。輸贏對他們來說無關緊要。
 
-There’s a line from Blaise Pascal I read. Basically, it says: “All of man’s troubles arise because he cannot sit in a room quietly by himself.” If you could just sit for thirty minutes and be happy, you are successful. That is a very powerful place to be, but very few of us get there. [6]
-我读过布莱斯·帕斯卡的一句话。基本上，它说的是：“人类所有的烦恼都是因为他不能一个人安静地坐在房间里。”如果你能坐上三十分钟快乐地坐着，你就成功了。这是一个非常强大的地方，但我们中很少有人能做到这一点。
+There』s a line from Blaise Pascal I read. Basically, it says: 「All of man』s troubles arise because he cannot sit in a room quietly by himself.」 If you could just sit for thirty minutes and be happy, you are successful. That is a very powerful place to be, but very few of us get there. [6]
+我讀過布萊斯·帕斯卡的一句話。基本上，它說的是：「人類所有的煩惱都是因為他不能一個人安靜地坐在房間里。」如果你能坐上三十分鐘快樂地坐著，你就成功了。這是一個非常強大的地方，但我們中很少有人能做到這一點。
 
-I think of happiness as an emergent property of peace. If you’re peaceful inside and out, that will eventually result in happiness. But peace is a very hard thing to come by. The irony is the way most of us try to find peace is through war. When you start a business, in a way, you’re going to war. When you struggle with your roommates as to who should clean the dishes, you’re going to war. You’re struggling so you can have some sense of security and peace later.
+I think of happiness as an emergent property of peace. If you』re peaceful inside and out, that will eventually result in happiness. But peace is a very hard thing to come by. The irony is the way most of us try to find peace is through war. When you start a business, in a way, you』re going to war. When you struggle with your roommates as to who should clean the dishes, you』re going to war. You』re struggling so you can have some sense of security and peace later.
 
-我认为幸福是和平的一种紧急属性。如果你内心平和，那最终会带来幸福。但和平来之不易。具有讽刺意味的是，我们大多数人试图通过战争找到和平的方式。当你开始创业时，从某种意义上说，你就是在打仗。当你和室友争执谁该洗碗的时候，你就要开战了。你在苦苦挣扎，这样你以后才能有安全感和宁静感。
+我認為幸福是和平的一種緊急屬性。如果你內心平和，那最終會帶來幸福。但和平來之不易。具有諷刺意味的是，我們大多數人試圖通過戰爭找到和平的方式。當你開始創業時，從某種意義上說，你就是在打仗。當你和室友爭執誰該洗碗的時候，你就要開戰了。你在苦苦掙扎，這樣你以後才能有安全感和寧靜感。
 
-In reality, peace is not a guarantee. It’s always flowing. It’s always changing. You want to learn the core skill set of flowing with life and accepting it in most cases. [8]
-在现实中，和平并不是保证。它总是在流动。它总是在变。你想要学习的核心技能是随波逐流，并在大多数情况下接受生活。
+In reality, peace is not a guarantee. It』s always flowing. It』s always changing. You want to learn the core skill set of flowing with life and accepting it in most cases. [8]
+在現實中，和平並不是保證。它總是在流動。它總是在變。你想要學習的核心技能是隨波逐流，並在大多數情況下接受生活。
 
-You can get almost anything you want out of life, as long as it’s one thing and you want it far more than anything else.
+You can get almost anything you want out of life, as long as it』s one thing and you want it far more than anything else.
 
-你几乎可以从生活中得到你想要的任何东西，只要这是一件事，而且你想要的远远超过其他任何东西。
+你幾乎可以從生活中得到你想要的任何東西，只要這是一件事，而且你想要的遠遠超過其他任何東西。
 
 In my own personal experience, the place I end up the most is wanting to be at peace.
 
-在我个人的经验中，我最终最想去的地方就是想要安宁。
+在我個人的經驗中，我最終最想去的地方就是想要安寧。
 
-Peace is happiness at rest, and happiness is peace in motion. You can convert peace into happiness anytime you want. But peace is what you want most of the time. If you’re a peaceful person, anything you do will be a happy activity.
+Peace is happiness at rest, and happiness is peace in motion. You can convert peace into happiness anytime you want. But peace is what you want most of the time. If you』re a peaceful person, anything you do will be a happy activity.
 
-和平是安息的幸福，幸福是运动中的和平。你可以在任何你想要的时候把和平转化为幸福。但大多数时候，和平才是你想要的。如果你是一个平和的人，你做的任何事情都将是一项快乐的活动。
+和平是安息的幸福，幸福是運動中的和平。你可以在任何你想要的時候把和平轉化為幸福。但大多數時候，和平才是你想要的。如果你是一個平和的人，你做的任何事情都將是一項快樂的活動。
 
 Today, the way we think you get peace is by resolving all your external problems. But there are unlimited external problems. The only way to actually get peace on the inside is by giving up this idea of problems. [77]
 
-今天，我们认为你们获得和平的方式是通过解决你们所有的外部问题。但也有无限的外部问题。真正获得内心和平的唯一方法就是放弃这种对问题的想法。“[77]
+今天，我們認為你們獲得和平的方式是通過解決你們所有的外部問題。但也有無限的外部問題。真正獲得內心和平的唯一方法就是放棄這種對問題的想法。「[77]
