--- a/2-9.md
+++ b/2-9.md
@@ -1,198 +1,198 @@
 # Happiness Is Built by Habits
 
-幸福是由习惯造就的。
+幸福是由習慣造就的。
 
 My most surprising discovery in the last five years is that peace and happiness are skills. These are not things you are born with. Yes, there is a genetic range. And a lot of it is conditioning from your environment, but you can un -condition and recondition yourself.
 
-在过去的五年里，我最令人惊讶的发现是，和平和幸福是技能。这些不是你生来就有的东西。是的，这是有遗传范围的。其中很大一部分是来自你的环境的条件作用，但是你可以取消条件，重新调整自己。
+在過去的五年裡，我最令人驚訝的發現是，和平和幸福是技能。這些不是你生來就有的東西。是的，這是有遺傳範圍的。其中很大一部分是來自你的環境的條件作用，但是你可以取消條件，重新調整自己。
 
 You can increase your happiness over time, and it starts with believing you can do it.
 
-随着时间的推移，你可以增加你的幸福感，它始于相信你能做到。
+隨著時間的推移，你可以增加你的幸福感，它始於相信你能做到。
 
-It’s a skill. Just like nutrition is a skill, dieting is a skill, working out is a skill, making money is a skill, meeting girls and guys is a skill, having good relationships is a skill, even love is a skill. It starts with realizing they’re skills you can learn. When you put your intention and focus on it, the world can become a better place.
+It』s a skill. Just like nutrition is a skill, dieting is a skill, working out is a skill, making money is a skill, meeting girls and guys is a skill, having good relationships is a skill, even love is a skill. It starts with realizing they』re skills you can learn. When you put your intention and focus on it, the world can become a better place.
 
-这是一种技能。就像营养是一种技能，节食是一种技能，锻炼是一种技能，赚钱是一种技能，结识女孩和男孩是一种技能，拥有良好的关系是一种技能，甚至爱情也是一种技能。首先要认识到它们是你可以学习的技能。当你用心并专注于它时，世界就会变得更美好。
+這是一種技能。就像營養是一種技能，節食是一種技能，鍛鍊是一種技能，賺錢是一種技能，結識女孩和男孩是一種技能，擁有良好的關係是一種技能，甚至愛情也是一種技能。首先要認識到它們是你可以學習的技能。當你用心並專注於它時，世界就會變得更美好。
 
 When working, surround yourself with people more successful than you.
 
-工作时，与比你更成功的人在一起。
+工作時，與比你更成功的人在一起。
 
 When playing, surround yourself with people happier than you.
 
-玩的时候，让自己周围都是比你快乐的人。
+玩的時候，讓自己周圍都是比你快樂的人。
 
 What type of skill is happiness?
 
-幸福是一种什么样的技能？
+幸福是一種什麼樣的技能？
 
-It’s all trial and error. You just see what works. You can try sitting meditation. Did that work for you? Was it Tantra meditation or was it Vipassana meditation? Was it a ten -day retreat or was twenty minutes enough?
+It』s all trial and error. You just see what works. You can try sitting meditation. Did that work for you? Was it Tantra meditation or was it Vipassana meditation? Was it a ten -day retreat or was twenty minutes enough?
 
-这都是试错。你只要看看什么管用就行了。你可以试试坐着冥想。这对你管用吗？是密宗打坐还是内观打坐？这是十天的静修，还是二十分钟就够了？
+這都是試錯。你只要看看什麼管用就行了。你可以試試坐著冥想。這對你管用嗎？是密宗打坐還是內觀打坐？這是十天的靜修，還是二十分鐘就夠了？
 
 Okay. None of those worked. But what if I tried yoga? What if I kite -surfed ? What if I go car racing? What about cooking? Does that make me Zen? You literally have to try all of these things until you find something that works for you.
 
-好吧。这些都不管用。但是如果我试试瑜伽呢？如果我玩风筝冲浪呢？如果我去赛车呢？那做饭呢？那我就是禅宗了吗？你必须尝试所有这些方法，直到你找到适合你的东西。
+好吧。這些都不管用。但是如果我試試瑜伽呢？如果我玩風箏衝浪呢？如果我去賽車呢？那做飯呢？那我就是禪宗了嗎？你必須嘗試所有這些方法，直到你找到適合你的東西。
 
 When it comes to medicines for the mind, the placebo effect is 100 percent effective. When it comes to your mind, you want to be positively inclined, not incredulous in belief. If it is fully internal, you should have a positive mindset.
 
-当谈到治疗精神疾病的药物时，安慰剂效应是百分之百有效的。当涉及到你的思想时，你想要有积极的倾向，而不是怀疑信仰。如果它完全是内部的，你应该有一个积极的心态。
+當談到治療精神疾病的藥物時，安慰劑效應是百分之百有效的。當涉及到你的思想時，你想要有積極的傾向，而不是懷疑信仰。如果它完全是內部的，你應該有一個積極的心態。
 
 For example, I was reading The Power of Now by Eckhart Tolle, which is a fantastic introduction to being present, for people who are not religious. He shows you the single -most important thing is to be present and hammers it home over and over again until you get it.
 
-例如，我正在读埃克哈特·托勒的“现在的力量”，这是一本关于在场的奇妙介绍，对于不信教的人来说是一本奇妙的入门书。他告诉你最重要的一件事就是在场，一遍又一遍地向你灌输，直到你得到它。
+例如，我正在讀埃克哈特·托勒的「現在的力量」，這是一本關於在場的奇妙介紹，對於不信教的人來說是一本奇妙的入門書。他告訴你最重要的一件事就是在場，一遍又一遍地向你灌輸，直到你得到它。
 
-He wrote about this body -energy exercise. You lie down and you feel the energy moving around your body. At that point, the old me would have put the book down and said, “Well, that’s BS.” But the new me said, “Well, if I believe it, maybe it’ll work.” I went into it with a positive mindset. I laid down and tried the meditation. You know what? It felt really good.
+He wrote about this body -energy exercise. You lie down and you feel the energy moving around your body. At that point, the old me would have put the book down and said, 「Well, that』s BS.」 But the new me said, 「Well, if I believe it, maybe it』ll work.」 I went into it with a positive mindset. I laid down and tried the meditation. You know what? It felt really good.
 
-他写了一篇关于这次身体能量运动的文章。你躺下，你感觉到能量在你的身体里移动。在这一点上，以前的我会把书放下，然后说，“嗯，那是胡说八道。”但是新的我说，“嗯，如果我相信的话，也许它能行得通。”我抱着积极的心态投入其中。我躺下来试了试冥想。你猜怎么着？感觉真的很好。
+他寫了一篇關於這次身體能量運動的文章。你躺下，你感覺到能量在你的身體里移動。在這一點上，以前的我會把書放下，然後說，「嗯，那是胡說八道。」但是新的我說，「嗯，如果我相信的話，也許它能行得通。」我抱著積極的心態投入其中。我躺下來試了試冥想。你猜怎麼著？感覺真的很好。
 
 How does someone build the skill of happiness?
 
-一个人如何构建快乐的技能呢？
+一個人如何構建快樂的技能呢？
 
-You can build good habits. Not drinking alcohol will keep your mood more stable. Not eating sugar will keep your mood more stable. Not going on Facebook, Snapchat, or Twitter will keep your mood more stable. Playing video games will make you happier in the short run—and I used to be an avid gamer—but in the long run, it could ruin your happiness. You’re being fed dopamine and having dopamine withdrawn from you in these little uncontrollable ways. Caffeine is another one where you trade long term for the short term.
+You can build good habits. Not drinking alcohol will keep your mood more stable. Not eating sugar will keep your mood more stable. Not going on Facebook, Snapchat, or Twitter will keep your mood more stable. Playing video games will make you happier in the short run—and I used to be an avid gamer—but in the long run, it could ruin your happiness. You』re being fed dopamine and having dopamine withdrawn from you in these little uncontrollable ways. Caffeine is another one where you trade long term for the short term.
 
-你可以养成好习惯。不喝酒会让你的情绪更稳定。不吃糖会让你的情绪更稳定。不上Facebook、Snapchat或Twitter会让你的情绪更稳定。玩电子游戏在短期内会让你更快乐-我曾经是一个狂热的游戏玩家-但从长远来看，它可能会毁了你的快乐。你被喂了多巴胺，然后以这些无法控制的方式从你体内抽出多巴胺。咖啡因是另一种长期交易短期交易的方法。
+你可以養成好習慣。不喝酒會讓你的情緒更穩定。不吃糖會讓你的情緒更穩定。不上Facebook、Snapchat或Twitter會讓你的情緒更穩定。玩電子遊戲在短期內會讓你更快樂-我曾經是一個狂熱的遊戲玩家-但從長遠來看，它可能會毀了你的快樂。你被餵了多巴胺，然後以這些無法控制的方式從你體內抽出多巴胺。咖啡因是另一種長期交易短期交易的方法。
 
 Essentially, you have to go through your life replacing your thoughtless bad habits with good ones, making a commitment to be a happier person. At the end of the day, you are a combination of your habits and the people who you spend the most time with.
 
-从本质上说，你必须经历一生，用好习惯取代你粗心大意的坏习惯，承诺做一个更快乐的人。归根结底，你是你的习惯和你相处时间最多的人的结合体。
+從本質上說，你必須經歷一生，用好習慣取代你粗心大意的壞習慣，承諾做一個更快樂的人。歸根結底，你是你的習慣和你相處時間最多的人的結合體。
 
-When we’re kids, we have very few habits. Over time, we learn the things we are not supposed to do. We become self -conscious . We start forming habits and routines.
+When we』re kids, we have very few habits. Over time, we learn the things we are not supposed to do. We become self -conscious . We start forming habits and routines.
 
-当我们还是孩子的时候，我们几乎没有什么习惯。随着时间的推移，我们学会了我们不应该做的事情。我们会变得难为情。我们开始养成习惯和习惯。
+當我們還是孩子的時候，我們幾乎沒有什麼習慣。隨著時間的推移，我們學會了我們不應該做的事情。我們會變得難為情。我們開始養成習慣和習慣。
 
-Many distinctions between people who get happier as they get older and people who don’t can be explained by what habits they have developed. Are they habits that will increase your long -term happiness rather than your short -term happiness? Are you surrounding yourself with people who are generally positive and upbeat people? Are those relationships low -maintenance ? Do you admire and respect but not envy them?
-随着年龄的增长而变得更快乐的人和不快乐的人之间的许多区别可以用他们养成的习惯来解释。这些习惯会增加你的长期幸福感而不是短期幸福感吗？你周围的人通常都是积极乐观的吗？这些关系都是低维护性的吗？你是否钦佩和尊重他们，而不是羡慕他们？
-There’s the “five chimps theory” where you can predict a chimp’s behavior by the five chimps it hangs out with the most. I think that applies to humans as well. Maybe it’s politically incorrect to say you should choose your friends very wisely. But you shouldn’t choose them haphazardly based on who you live next to or who you happen to work with. The people who are the most happy and optimistic choose the right five chimps. [8]
+Many distinctions between people who get happier as they get older and people who don』t can be explained by what habits they have developed. Are they habits that will increase your long -term happiness rather than your short -term happiness? Are you surrounding yourself with people who are generally positive and upbeat people? Are those relationships low -maintenance ? Do you admire and respect but not envy them?
+隨著年齡的增長而變得更快樂的人和不快樂的人之間的許多區別可以用他們養成的習慣來解釋。這些習慣會增加你的長期幸福感而不是短期幸福感嗎？你周圍的人通常都是積極樂觀的嗎？這些關係都是低維護性的嗎？你是否欽佩和尊重他們，而不是羨慕他們？
+There』s the 「five chimps theory」 where you can predict a chimp』s behavior by the five chimps it hangs out with the most. I think that applies to humans as well. Maybe it』s politically incorrect to say you should choose your friends very wisely. But you shouldn』t choose them haphazardly based on who you live next to or who you happen to work with. The people who are the most happy and optimistic choose the right five chimps. [8]
 
-有一个“五只黑猩猩理论”，你可以通过它最常出没的五只黑猩猩来预测它的行为。我认为这也适用于人类。也许说你应该非常明智地选择你的朋友在政治上是不正确的。但是你不应该根据你的邻居或者碰巧和你一起工作的人随意地选择他们。最快乐、最乐观的人选择正确的五只黑猩猩。
+有一個「五隻黑猩猩理論」，你可以通過它最常出沒的五隻黑猩猩來預測它的行為。我認為這也適用於人類。也許說你應該非常明智地選擇你的朋友在政治上是不正確的。但是你不應該根據你的鄰居或者碰巧和你一起工作的人隨意地選擇他們。最快樂、最樂觀的人選擇正確的五隻黑猩猩。
 
-The first rule of handling conflict is: Don’t hang around people who constantly engage in conflict. I’m not interested in anything unsustainable or even hard to sustain, including difficult relationships. [5]
-处理冲突的第一条规则是：不要和经常发生冲突的人混在一起。我对任何不可持续甚至难以维持的事情都不感兴趣，包括难以维系的关系。
+The first rule of handling conflict is: Don』t hang around people who constantly engage in conflict. I』m not interested in anything unsustainable or even hard to sustain, including difficult relationships. [5]
+處理衝突的第一條規則是：不要和經常發生衝突的人混在一起。我對任何不可持續甚至難以維持的事情都不感興趣，包括難以維繫的關係。
 
-If you can’t see yourself working with someone for life, don’t work with them for a day.
+If you can』t see yourself working with someone for life, don』t work with them for a day.
 
-如果你看不到自己与某人终生共事，那就不要与他们共事一天。
+如果你看不到自己與某人終生共事，那就不要與他們共事一天。
 
-There’s a friend of mine, a Persian guy named Behzad. He just loves life, and he has no time for anybody who is not happy.
+There』s a friend of mine, a Persian guy named Behzad. He just loves life, and he has no time for anybody who is not happy.
 
-我有个朋友，一个叫贝扎德的波斯人。他就是热爱生活，没有时间陪任何不快乐的人。
+我有個朋友，一個叫貝扎德的波斯人。他就是熱愛生活，沒有時間陪任何不快樂的人。
 
-If you ask Behzad what’s his secret? He’ll just look up and say, “Stop asking why and start saying wow.” The world is such an amazing place. As humans, we’re used to taking everything for granted. Like what you and I are doing right now. We’re sitting indoors, wearing clothes, well -fed , and communicating with each other through space and time. We should be two monkeys sitting in the jungle right now watching the sun going down, asking ourselves where we are going to sleep.
+If you ask Behzad what』s his secret? He』ll just look up and say, 「Stop asking why and start saying wow.」 The world is such an amazing place. As humans, we』re used to taking everything for granted. Like what you and I are doing right now. We』re sitting indoors, wearing clothes, well -fed , and communicating with each other through space and time. We should be two monkeys sitting in the jungle right now watching the sun going down, asking ourselves where we are going to sleep.
 
-如果你问贝扎德他的秘诀是什么？他只会抬起头说，“别再问为什么了，开始说哇。”这个世界真是个令人惊叹的地方。作为人类，我们习惯于认为一切都是理所当然的。就像你和我现在正在做的一样。我们坐在室内，穿着衣服，吃得很饱，通过空间和时间相互交流。我们应该是现在坐在丛林里看着太阳下山的两只猴子，问自己我们要睡在哪里。
+如果你問貝扎德他的秘訣是什麼？他只會抬起頭說，「別再問為什麼了，開始說哇。」這個世界真是個令人驚歎的地方。作為人類，我們習慣於認為一切都是理所當然的。就像你和我現在正在做的一樣。我們坐在室內，穿著衣服，吃得很飽，通過空間和時間相互交流。我們應該是現在坐在叢林里看著太陽下山的兩隻猴子，問自己我們要睡在哪裡。
 
-When we get something, we assume the world owes it to us. If you’re present, you’ll realize how many gifts and how much abundance there is around us at all times. That’s all you really need to do. I’m here now, and I have all these incredible things at my disposal. [8]
-当我们得到一些东西时，我们会认为这是世界欠我们的。如果你在场，你就会意识到我们身边时刻都有多少礼物，有多少丰富的东西。这就是你真正需要做的一切。我现在就在这里，我有所有这些不可思议的东西可供我支配。
+When we get something, we assume the world owes it to us. If you』re present, you』ll realize how many gifts and how much abundance there is around us at all times. That』s all you really need to do. I』m here now, and I have all these incredible things at my disposal. [8]
+當我們得到一些東西時，我們會認為這是世界欠我們的。如果你在場，你就會意識到我們身邊時刻都有多少禮物，有多少豐富的東西。這就是你真正需要做的一切。我現在就在這裡，我有所有這些不可思議的東西可供我支配。
 
-The most important trick to being happy is to realize happiness is a skill you develop and a choice you make. You choose to be happy, and then you work at it. It’s just like building muscles. It’s just like losing weight. It’s just like succeeding at your job. It’s just like learning calculus.
+The most important trick to being happy is to realize happiness is a skill you develop and a choice you make. You choose to be happy, and then you work at it. It』s just like building muscles. It』s just like losing weight. It』s just like succeeding at your job. It』s just like learning calculus.
 
-快乐最重要的诀窍是认识到快乐是你培养的一种技能，是你做出的选择。你选择快乐，然后努力去实现它。这就像锻炼肌肉一样。就像减肥一样。这就像在你的工作中取得成功一样。这就像学习微积分一样。
+快樂最重要的訣竅是認識到快樂是你培養的一種技能，是你做出的選擇。你選擇快樂，然後努力去實現它。這就像鍛鍊肌肉一樣。就像減肥一樣。這就像在你的工作中取得成功一樣。這就像學習微積分一樣。
 
-You decide it’s important to you. You prioritize it above everything else. You read everything on the topic. [7]
-你决定这对你很重要。你把它放在首位。你阅读了关于这个主题的所有内容。
+You decide it』s important to you. You prioritize it above everything else. You read everything on the topic. [7]
+你決定這對你很重要。你把它放在首位。你閱讀了關於這個主題的所有內容。
 
 # Happiness Habits
 
-快乐习惯
+快樂習慣
 
-I have a series of tricks I use to try and be happier in the moment. At first, they were silly and difficult and required a lot of attention, but now some of them have become second nature. By doing them religiously, I’ve managed to increase my happiness level quite a bit.
+I have a series of tricks I use to try and be happier in the moment. At first, they were silly and difficult and required a lot of attention, but now some of them have become second nature. By doing them religiously, I』ve managed to increase my happiness level quite a bit.
 
-我有一系列的诀窍，我用来试着让自己在这一刻更快乐。起初，它们又傻又难，需要很多关注，但现在它们中的一些已经变成了第二天性。通过虔诚地做这些事情，我设法提高了我的幸福感水平。
+我有一系列的訣竅，我用來試著讓自己在這一刻更快樂。起初，它們又傻又難，需要很多關注，但現在它們中的一些已經變成了第二天性。通過虔誠地做這些事情，我設法提高了我的幸福感水平。
 
 The obvious one is meditation—insight meditation. Working toward a specific purpose on it, which is to try and understand how my mind works. [7]
 
-最明显的一种是冥想--洞察力冥想。朝着一个特定的目标努力，那就是试着理解我的大脑是如何运作的。
+最明顯的一種是冥想--洞察力冥想。朝著一個特定的目標努力，那就是試著理解我的大腦是如何運作的。
 
-Just being very aware in every moment. If I catch myself judging somebody, I can stop myself and say, “What’s the positive interpretation of this?” I used to get annoyed about things. Now I always look for the positive side of it. It used to take a rational effort. It used to take a few seconds for me to come up with a positive. Now I can do it sub -second . [7]
+Just being very aware in every moment. If I catch myself judging somebody, I can stop myself and say, 「What』s the positive interpretation of this?」 I used to get annoyed about things. Now I always look for the positive side of it. It used to take a rational effort. It used to take a few seconds for me to come up with a positive. Now I can do it sub -second . [7]
 
-只是每时每刻都非常清醒。如果我发现自己在评判某人，我会停下来说，“这是什么积极的解读呢？”我过去常常对事情感到恼火。现在我总是在寻找它积极的一面。过去，这需要理性的努力。过去我需要几秒钟的时间才能得出一个肯定的结论。现在我可以做到亚秒级。“[7]
+只是每時每刻都非常清醒。如果我發現自己在評判某人，我會停下來說，「這是什麼積極的解讀呢？」我過去常常對事情感到惱火。現在我總是在尋找它積極的一面。過去，這需要理性的努力。過去我需要幾秒鐘的時間才能得出一個肯定的結論。現在我可以做到亞秒級。「[7]
 
 I try to get more sunlight on my skin. I look up and smile. [7]
 
-我试着让更多的阳光照射到我的皮肤上。我抬头微笑。
+我試著讓更多的陽光照射到我的面板上。我抬頭微笑。
 
-Every time you catch yourself desiring something, say, “Is it so important to me I’ll be unhappy unless this goes my way?” You’re going to find with the vast majority of things it’s just not true. [7]
+Every time you catch yourself desiring something, say, 「Is it so important to me I』ll be unhappy unless this goes my way?」 You』re going to find with the vast majority of things it』s just not true. [7]
 
-每次当你发现自己渴望某样东西时，就说，“这对我来说如此重要吗？除非我按自己的方式去做，否则我就不会快乐。”你会发现绝大多数事情都不是真的。
+每次當你發現自己渴望某樣東西時，就說，「這對我來說如此重要嗎？除非我按自己的方式去做，否則我就不會快樂。」你會發現絕大多數事情都不是真的。
 
 I think dropping caffeine made me happier. It makes me more of a stable person. [7]
-我想滴咖啡因会让我更开心。这让我成为一个更稳重的人。
+我想滴咖啡因會讓我更開心。這讓我成為一個更穩重的人。
 
-I think working out every day made me happier. If you have peace of body, it’s easier to have peace of mind. [7]
+I think working out every day made me happier. If you have peace of body, it』s easier to have peace of mind. [7]
 
-我认为每天锻炼让我更快乐。如果你身体平静，你的心灵就更容易平静。“[7]
+我認為每天鍛鍊讓我更快樂。如果你身體平靜，你的心靈就更容易平靜。「[7]
 
-The more you judge, the more you separate yourself. You’ll feel good for an instant, because you feel good about yourself, thinking you’re better than someone. Later, you’re going to feel lonely. Then, you see negativity everywhere. The world just reflects your own feelings back at you. [77]
+The more you judge, the more you separate yourself. You』ll feel good for an instant, because you feel good about yourself, thinking you』re better than someone. Later, you』re going to feel lonely. Then, you see negativity everywhere. The world just reflects your own feelings back at you. [77]
 
-你评判得越多，你就越会把自己分开。你会瞬间感觉良好，因为你自我感觉良好，认为自己比别人强。稍后，你会感到孤独。然后，你会看到到处都是负面的东西。这个世界只是把你自己的感觉反映在你身上。
+你評判得越多，你就越會把自己分開。你會瞬間感覺良好，因為你自我感覺良好，認為自己比別人強。稍後，你會感到孤獨。然後，你會看到到處都是負面的東西。這個世界只是把你自己的感覺反映在你身上。
 
-Tell your friends you’re a happy person. Then, you’ll be forced to conform to it. You’ll have a consistency bias. You have to live up to it. Your friends will expect you to be a happy person. [5]
-告诉你的朋友你是个快乐的人。然后，你将被迫遵守它。你会有一种一致性偏见。你必须做到这一点。你的朋友会期望你是一个快乐的人。
+Tell your friends you』re a happy person. Then, you』ll be forced to conform to it. You』ll have a consistency bias. You have to live up to it. Your friends will expect you to be a happy person. [5]
+告訴你的朋友你是個快樂的人。然後，你將被迫遵守它。你會有一種一致性偏見。你必須做到這一點。你的朋友會期望你是一個快樂的人。
 
 Recover time and happiness by minimizing your use of these three smartphone apps: phone, calendar, and alarm clock. [11]
-通过最大限度地减少使用手机、日历和闹钟这三个智能手机应用程序来恢复时间和幸福感。
+通過最大限度地減少使用手機、日曆和鬧鐘這三個智慧手機應用程式來恢復時間和幸福感。
 
-The more secrets you have, the less happy you’re going to be. [11]
-你拥有的秘密越多，你就越不快乐。
+The more secrets you have, the less happy you』re going to be. [11]
+你擁有的秘密越多，你就越不快樂。
 
 Caught in a funk? Use meditation, music, and exercise to reset your mood. Then choose a new path to commit emotional energy for rest of day. [11]
-被吓到了吗？用冥想、音乐和锻炼来重置你的情绪。然后选择一条新的道路，在一天的剩余时间里投入情感能量。
+被嚇到了嗎？用冥想、音樂和鍛鍊來重置你的情緒。然後選擇一條新的道路，在一天的剩餘時間裡投入情感能量。
 
 Hedonic adaptation is more powerful for man -made things (cars, houses, clothes, money) than for natural things (food, sex, exercise). [11]
-享乐适应对于人造的东西(汽车、房子、衣服、金钱)比对自然的东西(食物、性、锻炼)更有效。
+享樂適應對於人造的東西(汽車、房子、衣服、金錢)比對自然的東西(食物、性、鍛鍊)更有效。
 
 No exceptions—all screen activities linked to less happiness, all non -screen activities linked to more happiness. [11]
 
-没有例外-所有的屏幕活动都与更少的幸福联系在一起，所有的非屏幕活动都与更多的幸福联系在一起。
+沒有例外-所有的螢幕活動都與更少的幸福聯繫在一起，所有的非螢幕活動都與更多的幸福聯繫在一起。
 
 A personal metric: how much of the day is spent doing things out of obligation rather than out of interest? [11]
 
-一个个人指标：一天中有多少时间是出于义务而不是出于兴趣去做事情的？
+一個個人指標：一天中有多少時間是出於義務而不是出於興趣去做事情的？
 
-It’s the news’ job to make you anxious and angry. But its underlying scientific, economic, education, and conflict trends are positive. Stay optimistic. [11]
+It』s the news』 job to make you anxious and angry. But its underlying scientific, economic, education, and conflict trends are positive. Stay optimistic. [11]
 
-新闻的工作就是让你焦虑和愤怒。但其潜在的科学、经济、教育和冲突趋势是积极的。保持乐观。“[11]
+新聞的工作就是讓你焦慮和憤怒。但其潛在的科學、經濟、教育和衝突趨勢是積極的。保持樂觀。「[11]
 
 Politics, academia, and social status are all zero -sum games. Positive -sum games create positive people. [11]
 
-政治、学术和社会地位都是零和游戏。正和游戏造就了积极向上的人。
+政治、學術和社會地位都是零和遊戲。正和遊戲造就了積極向上的人。
 
 Increase serotonin in the brain without drugs: Sunlight, exercise, positive thinking, and tryptophan. [11]
 
-在没有药物的情况下增加大脑中的5-羟色胺：阳光、锻炼、积极思考和色氨酸。
+在沒有藥物的情況下增加大腦中的5-羥色胺：陽光、鍛鍊、積極思考和色氨酸。
 
 Changing habits:
 
-改变习惯：
+改變習慣：
 
 Pick one thing. Cultivate a desire. Visualize it.
 
-挑一样东西。培养一种欲望。想象一下。
+挑一樣東西。培養一種慾望。想像一下。
 
 Plan a sustainable path.
 
-规划一条可持续的道路。
+規劃一條可持續的道路。
 
 Identify needs, triggers, and substitutes.
 
-确定需求、触发因素和替代品。
+確定需求、觸發因素和替代品。
 
 Tell your friends.
 
-告诉你的朋友。
+告訴你的朋友。
 
 Track meticulously.
 
-一丝不苟地追踪。
+一絲不茍地追蹤。
 
 Self -discipline is a bridge to a new self -image .
 
-自律是通向新的自我形象的桥梁。
+自律是通向新的自我形象的橋樑。
 
-Bake in the new self -image . It’s who you are—now. [11]
-烘焙新的自我形象。这就是你-现在。[11]
+Bake in the new self -image . It』s who you are—now. [11]
+烘焙新的自我形象。這就是你-現在。[11]
 First, you know it. Then, you understand it. Then, you can explain it. Then, you can feel it. Finally, you are it.
 
-首先，你是知道的。那么，你就明白了。那你就可以解释了。然后，你就能感觉到了。终于，你就是它了。
+首先，你是知道的。那麼，你就明白了。那你就可以解釋了。然後，你就能感覺到了。終於，你就是它了。
